--- a/localisation/bav_events_l_english.yml
+++ b/localisation/bav_events_l_english.yml
@@ -1,90 +1,87 @@
 ﻿l_english:
-bavaria.1.t:0 "바이에른이 라인으로 진군할 준비를 하고 있다!"
-bavaria.1.d:0 "라인 회담 후에 우리는 혼자 남게 되었다. 바이에른 소비에트 공화국은 우리가 굴복하지 않는 한 우리의 영토를 침략하겠다고 위협하고 있습니다. 어떻게 진행하면 좋겠습니까?"
-bavaria.1.a:0 "우리는 바이에른의 힘 앞에 굴복한다."
-bavaria.1.b:0 "안된다! 연합은 확고하게 서 있을 것이다."
-bavaria.2.t:0 "라인이 굴복하다"
-bavaria.2.d:0 "만세! 우리는 승리했습니다. 약한 라인 연방은 우리의 힘 아래 굴복했습니다."
-bavaria.2.a:0 "훌륭해."
-bavaria.3.t:0 "라인이 우리 제안을 거절하다"
-bavaria.3.d:0 "라인 연방이 우리의 제안을 거절했습니다. 우리는 전쟁에 대비해야 합니다."
-bavaria.3.a:0 "모국을 위하여!"
-bavaria.4.t:0 "슈바벤 반군들이 일어설 준비를 하고 있다!"
-bavaria.4.d:0 "바이에른 소비에트 공화국과의 연합을 요구하며 우리 마을과 도시의 거리에서 반란이 일어나고 있습니다! 어떻게 진행하면 좋겠습니까?"
-bavaria.4.a:0 "연합하는 것이 최선의 행동 방침일 것이다."
-bavaria.4.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
-bavaria.5.t:0 "뷔르템베르크-바이에른 연합"
-bavaria.5.d:0 "오늘 뷔르템베르크의 지도자는 우리 두 나라 사이의 연합을 허용하는 조약에 서명했습니다."
-bavaria.5.a:0 "훌륭해."
-bavaria.6.t:0 "슈투트가르트 학살"
-bavaria.6.d:0 "우리 스파이들이 우리 공산주의 형제들이 거리에서 총에 맞아 죽어가고 있다고 보고했습니다. 신문 속의 사진은 시체로 가득 찬 분수를 보여줍니다. 이것은 용납될 수 없습니다!"
-bavaria.6.a:0 "압제자들에게 죽음을!"
-bavaria.7.t:0 "바이에른이 우리의 굴복을 요구하다"
-bavaria.7.d:0 "바이에른 소비에트 공화국은 우리 땅을 모두 넘겨줄 것을 요구하고 있습니다. 어떻게 진행하면 좋겠습니까?"
-bavaria.7.a:0 "우리는 굴복해야만 한다."
-bavaria.7.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
-bavaria.8.t:0 "저지 독일이 굴복하다"
-bavaria.8.d:0 "우리는 이미 저지 독일로부터 전보를 받았습니다. 그들은 우리의 제의를 받아들여 무기를 내려놓고 있다고 합니다."
-bavaria.8.a:0 "훌륭해."
-bavaria.9.t:0 "저지 독일이 우리의 제안을 거절하다"
-bavaria.9.d:0 "우리는 이미 저지 독일로부터 전보를 받았습니다. 그것은 그들이 우리의 제의를 거절하기로 선택했다고 말합니다."
-bavaria.9.a:0 "그들은 이것을 후회할 것이다..."
-bavaria.10.t:0 "바이에른이 동원 준비를 하고 있다!"
-bavaria.10.d:0 "우리 정찰병들은 국경에서 바이에른 활동량이 많다고 보고하고 있습니다. 우리의 정찰기는 전차, 장갑차, 보병들이 그들의 땅을 가로질러 이동하는 모습을 보여줍니다. 우리는 그들에게 우리의 항복을 제안하거나 싸울 수 있습니다."
-bavaria.10.a:0 "우리는 항복해야만 한다."
-bavaria.10.b:0 "빨갱이들에게 죽음을!"
-bavaria.11.t:0 "프로이센이 항복하다"
-bavaria.11.d:0 "약한 카이저 빌헬름 2세는 우리의 요구에 굴복하여 수용소로 보내졌습니다. 우리는 그와 '거래'를 할 것입니다."
-bavaria.11.a:0 "훌륭해."
-bavaria.12.t:0 "프로이센이 군대를 동원하다!"
-bavaria.12.d:0 "국경에서의 우리의 움직임에 대한 반발로 프로이센은 군대를 내려보내 우리와 충돌하게 했습니다. 프로이센 전차와 비행기가 주요 국경 도시를 장악하고 있다는 보도가 나오고 있습니다. 침략을 물리쳐야 합니다!"
-bavaria.12.a:0 "카이저에게 죽음을!"
-bavaria.13.t:0 "바이에른이 독일 패권을 선언하다"
-bavaria.13.d:0 "오늘날 바이에른 소비에트 공화국의 지도자는 독일의 패권을 선언했습니다. 대전이 끝난 후 독일 제국은 여러 집단으로 분열되었는데, 이 집단들은 독일의 정당한 통치자가 누구인지를 놓고 논쟁을 벌여왔습니다."
-bavaria.13.a:0 "이 일은 좋게 끝날 수 없다."
-news.1001.t:0 "국제 노동자 대회"
-news.1001.d:0 "오늘 뮌헨에서 처음으로 국제 노동자 대회가 열렸습니다. 전 세계의 사회주의 정당들은 개발정책과 사회주의에 대해 전 세계적으로 이야기해왔습니다. 프랑스, 영국, 미국, 그리고 심지어 러시아에서 온 공산당 지도자들이 모두 이 집회에 참가했습니다."
-news.1001.a:0 "흥미롭군..."
-news.1002.t:0 "German Unification"
-news.1002.d:0 "The world holds its breath as the impossible has happened. With the defeat of the Prussian forces, the Red Forces of Bavaria and the Rhine soon took the historical capital of Berlin. After that several cities in Germany recognized Munich as the Unifier of Germany and the rest of the Prussian State collapsed. The Royal Family has fled, several generals have been captured and the fighting has stopped. In Berlin before a crowd of 1 Million people, the German Socialist Republic was declared.\n                   The ideology of communism has been reborn."
-news.1002.a:0 "The Red Flag now flies over the Reichstag"
-bavaria.15.t:0 "독일 해군의 재건"
-bavaria.15.d:0 "이제 독일 대부분을 장악하고 있으니 독일 제국 함대를 되찾아 붉은 함대을 구성할 때가 되었습니다. 발트해와 북해에서 우리의 입지를 확보할 수 있도록 가능한 한 빨리 해야 합니다."
-bavaria.15.a:0 "붉은 함대 형성"
-bavaria.16.t:0 "오스트리아의 암살"
-bavaria.16.d:0 "이제 우리는 오스트리아의 대부분을 장악하고 있으므로 오스트리아 인구를 코뮌으로 통합해야 합니다. 공산주의 사상은 오스트리아에서 멀리 퍼져 있지 않기 때문에 많은 사람들이 저항할 것이지만, 곧 그들은 우리가 그들의 독재 정권의 사슬에서 그들을 해방시켰다는 것을 깨닫게 될 것입니다."
-bavaria.16.a:0 "독일은 하나밖에 있을 수 없다."
-bavaria.17.t:0 "라인 회담"
-bavaria.17.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n라인 연방은 프랑스 공화국에 의해 독립이 보장되어 있기 때문에 이를 내버려 둘 수 없습니다. 그러나 우리 나라의 공산주의 동조자들로 인해, 마르크스주의 세력과 전쟁을 벌일 수 없습니다. 왜냐하면 이것은 우리가 감당할 수 없는 내전을 일으킬 수도 있기 때문입니다."
-bavaria.17.a:0 "라인 연방의 운명은 스스로에게 달려 있다."
-bavaria.17.b:0 "라인 연방은 반드시 방어되어야 한다!"
-bavaria.18.t:0 "프랑스가 물러서다"
-bavaria.18.d:0 "라인 회담이 시작된 지 며칠이 지났습니다. 프랑스는 마침내 라인 연방을 포기하기로 한 결정을 발표했습니다. 이것은 우리가 이제 프랑스의 위협 없이 라인 연방의 통합을 시작할 수 있다는 것을 의미합니다."
-bavaria.18.a:0 "훌륭한 소식이다!"
-bavaria.19.t:0 "프랑스가 라인 연방의 독립을 보장하다"
-bavaria.19.d:0 "협상은 실패했습니다. 프랑스는 라인 연방에 대한 독립 보장을 재확인했습니다. 그러나 이 결정은 프랑스 내에서 우리 동지들의 주도 하에 내전을 촉발시켰습니다. 지금은 우리가 행동하고 약해진 프랑스와 라인란트를 공격해야 할 때입니다."
-bavaria.19.a:0 "진격!"
-bavaria.20.t:0 "프랑스가 라인란트를 버리다"
-bavaria.20.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n최종적으로 프랑스는 라인란트에서 철수한다는 결정을 발표했습니다."
-bavaria.20.a:0 "흥미롭군."
-bavaria.20.b:0 "통일을 향해 한 걸음 더 나아간다!"
-bavaria.21.t:0 "프랑스가 라인 연방의 독립을 보장하다"
-bavaria.21.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n궁극적으로 프랑스는 프랑스의 공산주의 운동가들을 화나게 한 전쟁이 일어날 경우에 대비해 라인랜드를 지원하기로 결정했다고 발표했습니다..."
-bavaria.21.a:0 "이 일은 좋게 끝날 수 없다."
-bavaria.21.b:0 "붉은 독일이여 영원하라!"
-bavaria.22.t:0 "프랑스는 우리와 함께 있다"
-bavaria.22.d:0 "우리는 혼자가 아닙니다! 프랑스는 우리의 독립을 지지하고, 전쟁이 일어나면 우리를 보호할 것입니다!"
-bavaria.22.a:0 "대단하군!"
-
-bavaria.30.t:0 "남부 코뮌이 최후통첩을 보내오다!"
-bavaria.30.d:0 "남부 코뮌 정부가 우리나라에 공식 최후통첩을 보내왔습니다. 그들은 우리의 합병을 요구하는데, 어떻게 진행하면 좋겠습니까?"
-bavaria.30.a:0 "그들과 함께하자."
-bavaria.30.b:0 "작센은 독립을 유지할 것이다."
-
-bavaria.31.t:0 "작센이 굴복하다"
-bavaria.31.d:0 "작센 정부는 우리의 최후통첩을 받아들였고, 통합은 즉시 시작될 것입니다."
-bavaria.31.a:0 "훌륭해!"
-
-bavaria.32.t:0 "작센이 저항하다"
-bavaria.32.d:0 "작센 정부는 우리의 요구를 들어주지 않았습니다. 이것은 우리가 전쟁을 준비해야 한다는 것을 의미합니다!"
-bavaria.32.a:0 "전투 준비!"
+ bavaria.1.t:0 "바이에른이 라인으로 진군할 준비를 하고 있다!"
+ bavaria.1.d:0 "라인 회담 후에 우리는 혼자 남게 되었다. 바이에른 소비에트 공화국은 우리가 굴복하지 않는 한 우리의 영토를 침략하겠다고 위협하고 있습니다. 어떻게 진행하면 좋겠습니까?"
+ bavaria.1.a:0 "우리는 바이에른의 힘 앞에 굴복한다."
+ bavaria.1.b:0 "안된다! 연합은 확고하게 서 있을 것이다."
+ bavaria.2.t:0 "라인이 굴복하다"
+ bavaria.2.d:0 "만세! 우리는 승리했습니다. 약한 라인 연방은 우리의 힘 아래 굴복했습니다."
+ bavaria.2.a:0 "훌륭해."
+ bavaria.3.t:0 "라인이 우리 제안을 거절하다"
+ bavaria.3.d:0 "라인 연방이 우리의 제안을 거절했습니다. 우리는 전쟁에 대비해야 합니다."
+ bavaria.3.a:0 "모국을 위하여!"
+ bavaria.4.t:0 "슈바벤 반군들이 일어설 준비를 하고 있다!"
+ bavaria.4.d:0 "바이에른 소비에트 공화국과의 연합을 요구하며 우리 마을과 도시의 거리에서 반란이 일어나고 있습니다! 어떻게 진행하면 좋겠습니까?"
+ bavaria.4.a:0 "연합하는 것이 최선의 행동 방침일 것이다."
+ bavaria.4.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
+ bavaria.5.t:0 "뷔르템베르크-바이에른 연합"
+ bavaria.5.d:0 "오늘 뷔르템베르크의 지도자는 우리 두 나라 사이의 연합을 허용하는 조약에 서명했습니다."
+ bavaria.5.a:0 "훌륭해."
+ bavaria.6.t:0 "슈투트가르트 학살"
+ bavaria.6.d:0 "우리 스파이들이 우리 공산주의 형제들이 거리에서 총에 맞아 죽어가고 있다고 보고했습니다. 신문 속의 사진은 시체로 가득 찬 분수를 보여줍니다. 이것은 용납될 수 없습니다!"
+ bavaria.6.a:0 "압제자들에게 죽음을!"
+ bavaria.7.t:0 "바이에른이 우리의 굴복을 요구하다"
+ bavaria.7.d:0 "바이에른 소비에트 공화국은 우리 땅을 모두 넘겨줄 것을 요구하고 있습니다. 어떻게 진행하면 좋겠습니까?"
+ bavaria.7.a:0 "우리는 굴복해야만 한다."
+ bavaria.7.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
+ bavaria.8.t:0 "저지 독일이 굴복하다"
+ bavaria.8.d:0 "우리는 이미 저지 독일로부터 전보를 받았습니다. 그들은 우리의 제의를 받아들여 무기를 내려놓고 있다고 합니다."
+ bavaria.8.a:0 "훌륭해."
+ bavaria.9.t:0 "저지 독일이 우리의 제안을 거절하다"
+ bavaria.9.d:0 "우리는 이미 저지 독일로부터 전보를 받았습니다. 그것은 그들이 우리의 제의를 거절하기로 선택했다고 말합니다."
+ bavaria.9.a:0 "그들은 이것을 후회할 것이다..."
+ bavaria.10.t:0 "바이에른이 동원 준비를 하고 있다!"
+ bavaria.10.d:0 "우리 정찰병들은 국경에서 바이에른 활동량이 많다고 보고하고 있습니다. 우리의 정찰기는 전차, 장갑차, 보병들이 그들의 땅을 가로질러 이동하는 모습을 보여줍니다. 우리는 그들에게 우리의 항복을 제안하거나 싸울 수 있습니다."
+ bavaria.10.a:0 "우리는 항복해야만 한다."
+ bavaria.10.b:0 "빨갱이들에게 죽음을!"
+ bavaria.11.t:0 "프로이센이 항복하다"
+ bavaria.11.d:0 "약한 카이저 빌헬름 2세는 우리의 요구에 굴복하여 수용소로 보내졌습니다. 우리는 그와 '거래'를 할 것입니다."
+ bavaria.11.a:0 "훌륭해."
+ bavaria.12.t:0 "프로이센이 군대를 동원하다!"
+ bavaria.12.d:0 "국경에서의 우리의 움직임에 대한 반발로 프로이센은 군대를 내려보내 우리와 충돌하게 했습니다. 프로이센 전차와 비행기가 주요 국경 도시를 장악하고 있다는 보도가 나오고 있습니다. 침략을 물리쳐야 합니다!"
+ bavaria.12.a:0 "카이저에게 죽음을!"
+ bavaria.13.t:0 "바이에른이 독일 패권을 선언하다"
+ bavaria.13.d:0 "오늘날 바이에른 소비에트 공화국의 지도자는 독일의 패권을 선언했습니다. 대전이 끝난 후 독일 제국은 여러 집단으로 분열되었는데, 이 집단들은 독일의 정당한 통치자가 누구인지를 놓고 논쟁을 벌여왔습니다."
+ bavaria.13.a:0 "이 일은 좋게 끝날 수 없다."
+ news.1001.t:0 "국제 노동자 대회"
+ news.1001.d:0 "오늘 뮌헨에서 처음으로 국제 노동자 대회가 열렸습니다. 전 세계의 사회주의 정당들은 개발정책과 사회주의에 대해 전 세계적으로 이야기해왔습니다. 프랑스, 영국, 미국, 그리고 심지어 러시아에서 온 공산당 지도자들이 모두 이 집회에 참가했습니다."
+ news.1001.a:0 "흥미롭군..."
+ news.1002.t:0 "독일 통일"
+ news.1002.d:0 "세계는 숨죽여 불가능한 일이 벌어지는 것을 지켜봤습니다. 프로이센군의 패배에 곧이어 바이에른의 붉은 군대는 역사적인 수도인 베를린을 점령했습니다. 그 후 독일의 일부 도시는 뮌헨을 독일의 통합자로 인정했으며 프로이센국의 나머지는 무너졌습니다. 왕가는 도주하였고, 몇몇 장군들은 붙잡혔으며 전투는 끝났습니다. 베를린에서는 백만명이 넘는 군중 앞에서 독일 사회주의 공화국이 선포되었습니다.\n                   공산주의 사상이 새로 태어났습니다."
+ news.1002.a:0 "이제 적기가 국가의회 위에 휘날린다."
+ bavaria.15.t:0 "독일 해군의 재건"
+ bavaria.15.d:0 "이제 독일 대부분을 장악하고 있으니 독일 제국 함대를 되찾아 붉은 함대을 구성할 때가 되었습니다. 발트해와 북해에서 우리의 입지를 확보할 수 있도록 가능한 한 빨리 해야 합니다."
+ bavaria.15.a:0 "붉은 함대 형성"
+ bavaria.16.t:0 "오스트리아의 암살"
+ bavaria.16.d:0 "이제 우리는 오스트리아의 대부분을 장악하고 있으므로 오스트리아 인구를 코뮌으로 통합해야 합니다. 공산주의 사상은 오스트리아에서 멀리 퍼져 있지 않기 때문에 많은 사람들이 저항할 것이지만, 곧 그들은 우리가 그들의 독재 정권의 사슬에서 그들을 해방시켰다는 것을 깨닫게 될 것입니다."
+ bavaria.16.a:0 "독일은 하나밖에 있을 수 없다."
+ bavaria.17.t:0 "라인 회담"
+ bavaria.17.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n라인 연방은 프랑스 공화국에 의해 독립이 보장되어 있기 때문에 이를 내버려 둘 수 없습니다. 그러나 우리 나라의 공산주의 동조자들로 인해, 마르크스주의 세력과 전쟁을 벌일 수 없습니다. 왜냐하면 이것은 우리가 감당할 수 없는 내전을 일으킬 수도 있기 때문입니다."
+ bavaria.17.a:0 "라인 연방의 운명은 스스로에게 달려 있다."
+ bavaria.17.b:0 "라인 연방은 반드시 방어되어야 한다!"
+ bavaria.18.t:0 "프랑스가 물러서다"
+ bavaria.18.d:0 "라인 회담이 시작된 지 며칠이 지났습니다. 프랑스는 마침내 라인 연방을 포기하기로 한 결정을 발표했습니다. 이것은 우리가 이제 프랑스의 위협 없이 라인 연방의 통합을 시작할 수 있다는 것을 의미합니다."
+ bavaria.18.a:0 "훌륭한 소식이다!"
+ bavaria.19.t:0 "프랑스가 라인 연방의 독립을 보장하다"
+ bavaria.19.d:0 "협상은 실패했습니다. 프랑스는 라인 연방에 대한 독립 보장을 재확인했습니다. 그러나 이 결정은 프랑스 내에서 우리 동지들의 주도 하에 내전을 촉발시켰습니다. 지금은 우리가 행동하고 약해진 프랑스와 라인란트를 공격해야 할 때입니다."
+ bavaria.19.a:0 "진격!"
+ bavaria.20.t:0 "프랑스가 라인란트를 버리다"
+ bavaria.20.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n최종적으로 프랑스는 라인란트에서 철수한다는 결정을 발표했습니다."
+ bavaria.20.a:0 "흥미롭군."
+ bavaria.20.b:0 "통일을 향해 한 걸음 더 나아간다!"
+ bavaria.21.t:0 "프랑스가 라인 연방의 독립을 보장하다"
+ bavaria.21.d:0 "남부 코뮌은 라인 연방의 굴복과 합병을 요구합니다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있습니다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역입니다.\n궁극적으로 프랑스는 프랑스의 공산주의 운동가들을 화나게 한 전쟁이 일어날 경우에 대비해 라인랜드를 지원하기로 결정했다고 발표했습니다..."
+ bavaria.21.a:0 "이 일은 좋게 끝날 수 없다."
+ bavaria.21.b:0 "붉은 독일이여 영원하라!"
+ bavaria.22.t:0 "프랑스는 우리와 함께 있다"
+ bavaria.22.d:0 "우리는 혼자가 아닙니다! 프랑스는 우리의 독립을 지지하고, 전쟁이 일어나면 우리를 보호할 것입니다!"
+ bavaria.22.a:0 "대단하군!"
+ bavaria.30.t:0 "남부 코뮌이 최후통첩을 보내오다!"
+ bavaria.30.d:0 "남부 코뮌 정부가 우리나라에 공식 최후통첩을 보내왔습니다. 그들은 우리의 합병을 요구하는데, 어떻게 진행하면 좋겠습니까?"
+ bavaria.30.a:0 "그들과 함께하자."
+ bavaria.30.b:0 "작센은 독립을 유지할 것이다."
+ bavaria.31.t:0 "작센이 굴복하다"
+ bavaria.31.d:0 "작센 정부는 우리의 최후통첩을 받아들였고, 통합은 즉시 시작될 것입니다."
+ bavaria.31.a:0 "훌륭해!"
+ bavaria.32.t:0 "작센이 저항하다"
+ bavaria.32.d:0 "작센 정부는 우리의 요구를 들어주지 않았습니다. 이것은 우리가 전쟁을 준비해야 한다는 것을 의미합니다!"
+ bavaria.32.a:0 "전투 준비!"
