--- a/localisation/chc_focus_l_english.yml
+++ b/localisation/chc_focus_l_english.yml
@@ -118,49 +118,49 @@
  CHC_secret_police:0 "비밀경찰"
  CHC_secret_police_desc:0 "비밀경찰로 적 지역의 반군을 추적하고 공산당의 지지자를 찾는 문제를 줄일 수 있을 것입니다."
  CHC_fight_the_famines:0 "기근과의 싸움"
- CHC_fight_the_famines_desc:0 "Now that we have finally solved our famine issues we can finally concentrate our attention to stopping the famines."
+ CHC_fight_the_famines_desc:0 "이제야 마침내 기근 문제를 해결했으니 기근을 멈추는 데에 주의를 집중할 수 있습니다."
  CHC_foreign_investments:0 "외국 투자"
- CHC_foreign_investments_desc:0 "With foreign investments from western companies we can rebuild some of our industry."
+ CHC_foreign_investments_desc:0 "서양 회사의 외국 투자로 인해 우리 산업 일부를 재건할 수 있습니다."
  CHC_diplomacy:0 "세계 외교"
- CHC_diplomacy_desc:0 "Our country was never interested in diplomacy.This needs to change.Everyone needs allies even we!"
+ CHC_diplomacy_desc:0 "우리나라는 외교에 관심이 없었습니다. 이는 바뀌어야 합니다. 우리를 포함해 모든 사람은 동맹이 필요합니다!"
  CHC_peace:0 "평화로운 서방"
- CHC_peace_desc:0 "The Entente is the only faction in the world which seeks a peaceful path just like we aim for.It would for our best interests to join them."
+ CHC_peace_desc:0 "협상국은 세상에서 우리가 추구하는 것과 같이 평화의 길을 추구하는 유일한 세력입니다. 그들과 함께하는 것이 우리 최대의 관심사가 될 것입니다."
  CHC_imperial:0 "제국주의자"
- CHC_imperial_desc:0 "In search of allies we look for strengh and stability. Russia and Germany are strong and reliable Empires. Perhaps we should consider membership in the Eastern Coalition or the Berlin Pact."
+ CHC_imperial_desc:0 "동맹을 찾을 때 우리는 국력과 안정성을 따집니다. 러시아와 독일은 강력하고 믿을 만한 제국입니다. 아마도 우리는 동부 연합이나 베를린 조약 가입을 고려해야 할 지도 모릅니다."
  CHC_approach_ENG:0 "영국에 접근"
- CHC_approach_ENG_desc:0 "We had our issues with England but those are in the past.They can protect the seas of Asia with their navy."
+ CHC_approach_ENG_desc:0 "우린 영국과의 문제가 있었지만 그건 모드 과거의 일입니다. 영국은 함대로 아시아의 바다를 지킬 수 있습니다."
  CHC_approach_FRA:0 "프랑스에 접근"
- CHC_approach_FRA_desc:0 "France would be a great ally for China.They can help us with modernizing our military."
+ CHC_approach_FRA_desc:0 "프랑스는 중국과 훌륭한 동맹이 될 것입니다. 그들은 우리 군대의 현대화를 도울 수 있습니다."
  CHC_joint_research:0 "연구 협력"
- CHC_joint_research_desc:0 "To improve our weapons,England send militaric scientists to improve our weapons."
+ CHC_joint_research_desc:0 "영국은 우리 무기를 개선하기 위해 군사과학자들을 보내왔습니다."
  CHC_french_advisors:0 "프랑스 고문단"
- CHC_french_advisors_desc:0 "France promised us advisors to modernize our tactics so that we are more preapered for a war."
+ CHC_french_advisors_desc:0 "프랑스는 우리 전술을 현대화하여 전쟁을 조금 더 준비하기 위해 고문 파견을 약조했습니다."
  CHC_join_ENG:0 "서부 연합 가입"
- CHC_join_ENG_desc:0 "After formalizing our relations with France and England we should now ask them to join their faction."
+ CHC_join_ENG_desc:0 "프랑스와 영국과 관계를 공식화한 뒤 우리는 그들의 세력에 가입을 청해야 합니다."
  CHC_western_colonies:0 "서방 식민지"
- CHC_western_colonies_desc:0 "Now that we are allied with western nations we may have a chance to buy the city colonies of the western nations."
+ CHC_western_colonies_desc:0 "이제 우리는 서방 국가들과 동맹을 맺었으니 이들의 식민 도시들을 구매할 기회를 가질 수 있을 것입니다."
  CHC_mission_RUS:0 "러시아에 접근"
- CHC_mission_RUS_desc:0 "During the civil war Russia trained our division and helped us against the warlord.Without them we woudnt controll all of China.Even if they still occupy Sinkiang as a puppet we can look forward for positive relations."
+ CHC_mission_RUS_desc:0 "내전 중 러시아는 우리 사단을 훈련시켰고 군벌에 대항하는 것을 도왔습니다. 그들이 없었더라면 우리는 중국 전역을 통제할 수 없었을 것입니다. 그들이 여전히 신강을 괴뢰국으로써 점령하고 있다고 하더라도 긍정적인 관계를 기대할 수 있습니다."
  CHI_approach_GER:0 "독일에 접근"
- CHI_approach_GER_desc:0 "Germany is one of the strongest nations of the world and has the similar goals just like us.Revenge against the Entente."
- CHI_naval_research:0 "Russian Military Collaboration"
- CHI_naval_research_desc:0 "Japan is not just a threat to us but also to Russia.They would be propably very happy to send advisors for us to fight against Japan."
+ CHI_approach_GER_desc:0 "독일은 세계에서 가장 강력한 국가들 중 하나이며 우리와 비슷한 목표가 있습니다. 협상국에 복수하는 것 말입니다."
+ CHI_naval_research:0 "러시아 군사 협력"
+ CHI_naval_research_desc:0 "일본은 우리만 위협하는 것이 아니라 러시아도 위협하고 있습니다. 아마도 러시아는 일본과 싸우기 위해 우리에게 고문을 파견하는 것을 매우 기뻐할 것 같습니다."
  CHI_join_RUS:0 "동부 연합 가입"
- CHC_join_RUS_desc:0 "The Russian helped us in the civil war with the warlords and sent us military advisors in the last days to improve our military.They need us to protect their asian holdings against Japan.Together no one will stop us!"
+ CHC_join_RUS_desc:0 "러시아는 내전에서 군벌에 대항하는 것을 도왔으며 지난날 우리 군대 개선을 위해 군사고문을 보냈습니다. 그들은 일본에 대항하여 아시아의 자산을 지키는 데에 우리가 필요합니다. 함께라면 누구도 우리를 막을 수 없습니다!"
  CHC_Sinkiang_issue:0 "신장 거래"
- CHC_Sinkiang_issue_desc:0 "Sinkiang is a Chinese country.While we were fighting the warlords in the last years Russia invaded the Sinkiang region and set up their state there for protection.Now that the civil war is over and we're allied with Russia we can finally discuss with Russia the issue with Sinkiang."
+ CHC_Sinkiang_issue_desc:0 "신강은 중국계 국가입니다. 지난 몇 년간 군벌과 싸우는 동안 러시아는 신강 지역을 침공하여 보호국을 수립했습니다. 이제 내전이 끝났고 러시아와 동맹을 맺었으니 마침내 신강 문제에 대해 논할 수 있습니다."
  CHC_improve_equipment:0 "독일제 무기"
- CHC_improve_equipment_desc:0 "In the last hundred years most of the best inventions of the world are German especially in the military.Even today the German States own the best weapons of the world.We could "
+ CHC_improve_equipment_desc:0 "지난 100년간 세계에서 가장 위대한 발명은 독일에서, 특히 군사 분야에서 나타났습니다. 오늘날에도 독일국은 세계에서 가장 좋은 무기를 지녔습니다. 우리는 할 수 있습니다."
  CHC_stabilize_economy:0 "경제 안정화"
- CHC_stabilize_economy_desc:0 "Our economy is in ruins.If we want our state to survive we now have to take the first steps to recovery."
+ CHC_stabilize_economy_desc:0 "우리 경제는 폐허 속에 있습니다. 만일 우리나라가 살고자 한다면 이제 회복을 위한 첫걸음을 내딛어야 합니다."
  CHC_infrastructure:0 "동부 철로"
- CHC_infrastructure_desc:0 "The infrastructure was one of the best in world now its considered to be outdated.With a new infrastructure programm we can improve those flaws.But first we should focus on the states of our country which have the worst infrastructure in the west"
+ CHC_infrastructure_desc:0 "기반시설은 세계 최고였지만 이제는 구식으로 간주됩니다. 새 기반시설 계획으로 우리는 이런 흐름을 개선할 수 있습니다. 그러나 먼저 기반시설이 가장 형편없는 나라의 서쪽 지역부터 집중해야 합니다."
  CHC_industrial_effort1:0 "민간경제 깨우기"
- CHC_industrial_effort1_desc:0 "During the factory strikes much of the civilian economy was burnt down.It's time to revive those factories and to give the people work."
+ CHC_industrial_effort1_desc:0 "공장 파업 중 많은 민간경제가 불에 탔습니다. 이제 이 공장들을 재건하고 사람들에게 일자리를 줄 때입니다."
  CHC_industrial_effort2:0 "군수공장 확장"
- CHC_industrial_effort2_desc:0 "We have the biggest army in Asia but we do not have enough arms factories to supply it.With new arms factories in the undeveloped states we can finally supply our army with enough equipment."
+ CHC_industrial_effort2_desc:0 "우리 군대는 아시아에서 가장 크지만 이를 보급할 충분한 군수공장이 없습니다. 개발되지 않은 주에 새 군수공장이 있다면 마침내 충분한 장비로 군을 보급할 수 있습니다."
  CHC_dockyard_effort:0 "해군 산업 시작"
- CHC_dockyard_effort_desc:0 "China had once one of the greastest navies in Asia.Now it has the weakest.But we can rebuild it!With an new dockyard programm we can start building ships again for our glorius country!"
+ CHC_dockyard_effort_desc:0 "중국은 한때 아시아에서 가장 위대한 해군이 있었습니다. 지금은 가장 약합니다. 그러나 다시 재건할 수 있습니다! 새 조선소 계획으로 영광스러운 나라를 위한 선박 건조를 시작할 수 있습니다."
  CHC_slot2:0 "산업 연구 부서"
  CHC_slot2_desc:0 "During our time we were rebuilding this nation many foreign scientists came to our country and due to our reforms more people got invested in the industry.We can now reach the same research abilities that the other big nations in this world have. "
  CHC_school_reform:0 "학교 개혁"
@@ -179,7 +179,7 @@
  CHC_air_desc:0 "Our airforce is up to date with modern standards and the navy is in miserable shape we finally need to modernize those two branches."
  CHC_navy:0 "해군 재건"
  CHC_navy_desc:0 "The Chinese Navy has been destroyed in the First Sino-Japanese war. Due to internal conflict it had never a chance to rebuild."
- CHC_army_path:0 "The Doctrine Question"
+ CHC_army_path:0 "교리 문제"
  CHC_army_path_desc:0 "We have to finally decide what strategy our Army will use in the future. Our army is torn apart by different strategies from different generals."
  CHC_work_longer:0 "더 긴 근무"
  CHC_work_longer_desc:0 "Do you think that we are gonna win this war with just our soldiers? If you want to see peace in China you have to accept the new working shifts our country needs!"
@@ -189,7 +189,7 @@
  CHI_superior_fire_desc:0 ""
  CHC_inf_equipment:0 "24식 소총"
  CHC_inf_equipment_desc:0 "The Type 24 is a new bolt action rifle designed to replace the current Type 88."
- CHC_artillery:0 "Artillery"
+ CHC_artillery:0 "포병"
  CHC_artillery_desc:0 "The backbone of the army is always artillery. The better the artillery, the less enemy soldiers our infantry has to fight."
  CHI_anti_partisan:0 "더 나은 지원군"
  CHI_anti_partisan_desc:0 ""
@@ -240,7 +240,7 @@
  CHI_trial_the_military:0 "군부 조사"
  CHI_trial_the_military_desc:0 "While most of the party is convinced about our plans, the military is not. There still a lot of friends of Chiang inside in the military which possess his views. We must survey the military for potential traitors."
  CHI_the_real_threat:0 "진짜 위협은 바다 건너에 있다"
- CHI_the_real_threat_desc:0 "Japan is and will always be an imperialist empire seeking to expand. Hirohito and his puppets want to claim the ports in Asia and the money in China. We must be preapered for this menace." 
+ CHI_the_real_threat_desc:0 "Japan is and will always be an imperialist empire seeking to expand. Hirohito and his puppets want to claim the ports in Asia and the money in China. We must be preapered for this menace."
  CHI_defensive_alliance:0 "그들이 공격해온다면..."
  CHI_defensive_alliance_desc:0 "We hate us and that will never change. But i thing is clear, we are chinese. And if Japan truly attacks we must stand together or the whole of China becomes under Japanese control."
  CHI_yunnan:0 "우리 형제와의 통일"
@@ -248,7 +248,7 @@
  CHI_attract_investors:0 "투자자 유치"
  CHI_attract_investors_desc:0 "China will be soon a industrial superpower after this conflict. Look! The ingridents are already there. We got the biggest population in the world which will always work for cheap labour. We possess lot of free space for manufacturing. And do not forget the undiscovered resources! My fellow western investors! If you invest into China now you will be rewarded greatly in the following decades."
  CHI_unite_the_party:0 "정당 통합"
- CHI_unite_the_party_desc:0 "This party was created by our father Sun Yat-sen to free China from the dynasty, from corruption, from oppression. Let us not discuss on who should bring freedom and how but look into the future and our destiny." 
+ CHI_unite_the_party_desc:0 "This party was created by our father Sun Yat-sen to free China from the dynasty, from corruption, from oppression. Let us not discuss on who should bring freedom and how but look into the future and our destiny."
  CHI_infrastructure_brings_more_workers:0 "기반시설 구축 계획"
  CHI_infrastructure_brings_more_workers_desc:0 "In the last years the Republic has been trying to reconstruct some of the infrastructure in the devasted country. The propblems range from building up modern highways to restoring infrastructural stability to the inner countryside. The parliamant is now finally coming to an conlclusion on how to finance a large a build up project."
  CHI_backlands_work:0 "오지의 산업 기회"
@@ -264,33 +264,30 @@
  CHI_secret_alliance:0 "금지된 동맹"
  CHI_secret_alliance_desc:0 "Before the Shanghai Massacre the CPC was part of the Kuomintang and helped uniting China under democratic ideas. Even if we are seperated now we still have the old goal of destroying the dynsasty."
  CHI_old_goal:0 "우리의 오래된 목표"
- CHI_old_goal_desc:0 "The Qing Dynasty is the symbol of oppression and greedy dicators in China. There is no discussion with these devils. They must be destroyed."
+ CHI_old_goal_desc:0 "청조는 중국의 탄압의 상징이자 욕심 많은 독재자들입니다. 이 악마들과 논할 것은 없습니다. 그들을 박살내야 합니다."
  CHI_unify:0 "평화?"
- CHI_unify_desc:0 "The CPC was once part of the Kuomintang maybe we can avoid death."
+ CHI_unify_desc:0 "CPC는 한때 국민당의 일부였으며 아마도 죽음을 피할 수 있을 것입니다."
  CHI_betray:0 "절대주의"
- CHI_betray_desc:0 "The communist are dictators hiding behind the cloak of communism. They will enslave the people of China and will only create more conflict. They must be stopped."
+ CHI_betray_desc:0 "공산주의자들은 공산주의라는 가림막 뒤에 숨은 독재자들입니다. 그들은 중국 인민을 노예화할 것이며 분쟁만을 더욱 조장할 것입니다. 그들을 멈춰야 합니다."
  CHI_bear:0 "우리 땅의 차르"
- CHI_bear_desc:0 "The Russian Bear is gaining more and more influence in China. We must be preapered."
+ CHI_bear_desc:0 "러시아 곰은 중국에서 더욱 많은 영향력을 얻고 있습니다. 우리는 준비해야 합니다."
  CHI_demand:0 "러시아 영향력의 종결"
- CHI_demand_desc:0 "Russian Influence in Asia stops here!"
+ CHI_demand_desc:0 "아시아에서의 러시아 영향력은 여기서 끝날 것입니다!"
  CHI_western_support:0 "서방의 지원"
- CHI_western_support_desc:0 "The Western world is eager to help us in this conflict against Russia."
+ CHI_western_support_desc:0 "서방 세계는 러시아에 대한 분쟁에서 우리를 도우려 열망할 것입니다."
  CHC_our_lands:0 "북부는 러시아땅이 아니다"
- CHC_our_lands_desc:0 "The Russian Manchurian puppet has no real legitimacy and is a tool of oppression. The Russian must disband it and give the land to us!"
+ CHC_our_lands_desc:0 "러시아령 만주 괴뢰국은 실제 정통성이 없으며 탄압의 도구입니다. 러시아는 반드시 이를 해체하고 땅을 우리에게 이양해야 합니다."
  CHC_new_problem:0 "시골 처리"
  CHC_new_problem_desc:0 "Chiang has been planning a military campaign to reestablish control over the countryside to regain a lot of the agricultural production. Military forces will conduct terror campaigns to search for any known rebel groups, warlords and traitors. This will be enourmous and expensive effort but after this the whole agricultural industry will be in our hands again."
-
-CHI_left_infra:0 "§M이 중점은 중국에서 기반시설을 구축하기 위한 새로운 결정을 제정할 것입니다." 
-chi_hunt_them_down:0 "§M운동 처리를 위한 새로운 결정이 열립니다."
-chinese_front:0 "중국 통일전선"
-
-POLITICS_HU_HANMIN_DESC:0 "후한민은 1928년부터 국민당의 의장을 맡아왔습니다. 군대가 북양군에 패하자 국민당은 고개를 숙이고 양쯔강 너머로 물러날 수밖에 없었습니다. 그는 1927년 닝한 사건 이후 장제스를 지지하면서 상황이 어떻게 변했는지 깨닫고 곧 왕과 연합하여 장제스를 패배의 희생양으로 삼았습니다. 이를 통해 후한민은 우익의 지배권을 주장하여 국민당의 의장이 되었습니다. 후한민은 장제스가 국민당의 정사에 관여하지 못하도록 노력해왔고, 지난 몇 년 동안 국민당의 좌익을 무난히 약화시키려고 필사적으로 노력했습니다. 거의 8년 동안 중앙집행위원회 위원장 후한민은 법률과 형벌 제도를 현대화하려고 노력했고, 물가 안정을 시도했고, 공중 보건 시설을 개선했으며, 부채를 상각하고, 은행과 화폐 제도를 개혁했고, 관동 지방을 현대화했고, 난징에서 창사까지 현대적인 철도를 건설했습니다. 그리고 산업과 농업 생산을 증가시키려고 노력했습니다. 이 모든 계획이 성공적으로 완료되지는 않았고 후한민은 최근에 심하게 병을 앓았습니다."
-
-CHI_dealing_countryside:0 "오지에서의 운동"
-CHI_dealing_countryside_desc:0 "자재가 도착했고 부대가 준비되었습니다. 장제스 휘하의 국민당은 이제 전국적인 통제를 다시 실시할 것입니다. 불안한 총독들은 물러날 수밖에 없고, 군벌들은 처벌을 받을 것이고, 공산주의 반군들은 처형될 것입니다."
-CHI_hunt_down_rebels_1:0 "후난의 공산주의 반군 사냥"
-CHI_hunt_down_rebels_2:0 "왕자례의 중지 군벌 공격"
-CHI_hunt_down_rebels_3:0 "리쭝런으로부터 광시 통제권 수복"
-CHI_hunt_down_rebels_5:0 "룽윈을 윈난 총독에서 해임"
-CHI_hunt_down_rebels_6:0 "하이난의 공산주의 반군을 수색하여 파괴"
-CHI_hunt_down_rebels_7:0 "공산주의 반군을 찾기 위해 푸젠의 산악 순찰"
+ CHI_left_infra:0 "§M이 중점은 중국에서 기반시설을 구축하기 위한 새로운 결정을 제정할 것입니다."
+ chi_hunt_them_down:0 "§M운동 처리를 위한 새로운 결정이 열립니다."
+ chinese_front:0 "중국 통일전선"
+ POLITICS_HU_HANMIN_DESC:0 "후한민은 1928년부터 국민당의 의장을 맡아왔습니다. 군대가 북양군에 패하자 국민당은 고개를 숙이고 양쯔강 너머로 물러날 수밖에 없었습니다. 그는 1927년 닝한 사건 이후 장제스를 지지하면서 상황이 어떻게 변했는지 깨닫고 곧 왕과 연합하여 장제스를 패배의 희생양으로 삼았습니다. 이를 통해 후한민은 우익의 지배권을 주장하여 국민당의 의장이 되었습니다. 후한민은 장제스가 국민당의 정사에 관여하지 못하도록 노력해왔고, 지난 몇 년 동안 국민당의 좌익을 무난히 약화시키려고 필사적으로 노력했습니다. 거의 8년 동안 중앙집행위원회 위원장 후한민은 법률과 형벌 제도를 현대화하려고 노력했고, 물가 안정을 시도했고, 공중 보건 시설을 개선했으며, 부채를 상각하고, 은행과 화폐 제도를 개혁했고, 관동 지방을 현대화했고, 난징에서 창사까지 현대적인 철도를 건설했습니다. 그리고 산업과 농업 생산을 증가시키려고 노력했습니다. 이 모든 계획이 성공적으로 완료되지는 않았고 후한민은 최근에 심하게 병을 앓았습니다."
+ CHI_dealing_countryside:0 "오지에서의 운동"
+ CHI_dealing_countryside_desc:0 "자재가 도착했고 부대가 준비되었습니다. 장제스 휘하의 국민당은 이제 전국적인 통제를 다시 실시할 것입니다. 불안한 총독들은 물러날 수밖에 없고, 군벌들은 처벌을 받을 것이고, 공산주의 반군들은 처형될 것입니다."
+ CHI_hunt_down_rebels_1:0 "후난의 공산주의 반군 사냥"
+ CHI_hunt_down_rebels_2:0 "왕자례의 중지 군벌 공격"
+ CHI_hunt_down_rebels_3:0 "리쭝런으로부터 광시 통제권 수복"
+ CHI_hunt_down_rebels_5:0 "룽윈을 윈난 총독에서 해임"
+ CHI_hunt_down_rebels_6:0 "하이난의 공산주의 반군을 수색하여 파괴"
+ CHI_hunt_down_rebels_7:0 "공산주의 반군을 찾기 위해 푸젠의 산악 순찰"
