--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,8 +1,18 @@
 ﻿l_english:
  INS_HOL_democratic:0 "네덜란드령 동인도제도"
  INS_HOL_democratic_DEF:0 "네덜란드령 동인도제도"
+ INS_JAP_democratic:0 "인도네시아"
+ INS_JAP_democratic_DEF:0 "인도네시아 공화국"
+ INS_JAP_fascism:0 "인도네시아"
+ INS_JAP_fascism_DEF:0 "인도네시아 공화국"
+ INS_BEL_union:0 "베네룩스령 동인도"
+ INS_BEL_union_DEF:0 "베네룩스령 동인도제도"
  INS_subject:0 "$OVERLORDADJ$령 동인도제도"
  INS_subject_DEF:0 "$OVERLORDADJ$령 동인도제도"
+ BRM_ENG_conservatives:0 "영국령 버마"
+ BRM_ENG_conservatives_DEF:0 "버마 영국식민지"
+ BRM_ENG_democratic:0 "영국령 버마"
+ BRM_ENG_democratic_DEF:0 "버마 영국식민지"
  COG_subject:0 "$OVERLORDADJ$령 콩고"
  MAL_subject:0 "$OVERLORDADJ$령 말레이"
  LBA_subject:0 "$OVERLORDADJ$령 북아프리카"
@@ -263,12 +273,11 @@
  SPQR_UNIFIED_neutrality:0 "로마 왕국"
  SPQR_UNIFIED_fascism:0 "로마 제국"
  SPQR_UNIFIED_democratic:0 "로마 공화국"
- SPQR_UNIFIED_communism:1 "로마 프롤레타리아 공동체"
+ SPQR_UNIFIED_communism:0 "로마 프롤레타리아 공동체"
  SPQR_UNIFIED_neutrality_DEF:0 "로마 왕국"
  SPQR_UNIFIED_fascism_DEF:0 "로마 제국"
  SPQR_UNIFIED_democratic_DEF:0 "로마 공화국"
- SPQR_UNIFIED_communism_DEF:1 "로마 프롤레타리아 공동체"
-
+ SPQR_UNIFIED_communism_DEF:0 "로마 프롤레타리아 공동체"
  FNA_subject:0 "$OVERLORDADJ$령 북아프리카"
  FNA_subject_DEF:0 "$OVERLORDADJ$령 북아프리카"
  FIC_subject:0 "$OVERLORDADJ$령 인도차이나"
@@ -279,7 +288,6 @@
  FEA_subject_DEF:0 "$OVERLORDADJ$령 적도 아프리카"
  SYR_subject:0 "$OVERLORDADJ$령 시리아"
  SYR_subject_DEF:0 "$OVERLORDADJ$령 시리아"
-
  SWE_SCA_communism:0 "스칸디나비아 연합"
  SWE_SCA_communism_DEF:0 "스칸디나비아 소비에트 연합"
  SWE_SCA_socialist:0 "스칸디나비아"
@@ -292,42 +300,3 @@
  SWE_SCA_neutrality_DEF:0 "스칸디나비아 연합왕국"
  SWE_SCA_fascism:0 "신 스칸디나비아 제국"
  SWE_SCA_fascism_DEF:0 "신 스칸디나비아 제국"
-
- SPB_fascism:0 "스페인 제국"
- SPB_fascism_DEF:0 "스페인 제국"
- SPB_democratic:0 "공화파 스페인"
- SPB_democratic_DEF:0 "공화파 스페인"
- SPB_neutrality:0 "스페인 왕국"
- SPB_neutrality_DEF:0 "스페인 왕국"
- SPB_communism:0 "혁명 스페인"
- SPB_communism_DEF:0 "혁명 스페인"
- SPB_socialist:0 "공화파 스페인"
- SPB_socialist_DEF:0 "공화파 스페인"
- SPB_conservatives:0 "스페인 공화국"
- SPB_conservatives_DEF:0 "스페인 공화국"
- SPB_fascism_ADJ:0 "스페인"
- SPB_democratic_ADJ:0 "스페인"
- SPB_neutrality_ADJ:0 "스페인"
- SPB_communism_ADJ:0 "스페인"
- SPB_socialist_ADJ:0 "스페인"
- SPB_conservatives_ADJ:0 "스페인"
-  
- SPB_fascism:0 "스페인 제국"
- SPB_fascism_DEF:0 "스페인 제국"
- SPB_democratic:0 "공화파 스페인"
- SPB_democratic_DEF:0 "공화파 스페인"
- SPB_neutrality:0 "스페인 왕국"
- SPB_neutrality_DEF:0 "스페인 왕국"
- SPB_communism:0 "혁명 스페인"
- SPB_communism_DEF:0 "혁명 스페인"
- SPB_socialist:0 "공화파 스페인"
- SPB_socialist_DEF:0 "공화파 스페인"
- SPB_conservatives:0 "스페인 공화국"
- SPB_conservatives_DEF:0 "스페인 공화국"
- SPB_fascism_ADJ:0 "스페인"
- SPB_democratic_ADJ:0 "스페인"
- SPB_neutrality_ADJ:0 "스페인"
- SPB_communism_ADJ:0 "스페인"
- SPB_socialist_ADJ:0 "스페인"
- SPB_conservatives_ADJ:0 "스페인"
-
