--- a/localisation/game_rules_l_english.yml
+++ b/localisation/game_rules_l_english.yml
@@ -1,4 +1,4 @@
-﻿ l_english:
+﻿l_english:
  RULE_OPTION_YES:0 "예"
  RULE_OPTION_NO:0 "아니요"
  RULE_GROUP_COUNTRY_SPECIFIC:0 "국가 특성화 규칙"
@@ -124,7 +124,7 @@
  PRC_AI_BEHAVIOR:0 "@PRC 중국 공산당"
  ENG_AI_BEHAVIOR:0 "@ENG 영국"
  USA_AI_BEHAVIOR:0 "@USA 미합중국"
- SOV_AI_BEHAVIOR:0 "@RUS 러시아"
+ RUS_AI_BEHAVIOR:0 "@RUS 러시아"
  HUN_AI_BEHAVIOR:0 "@HUN 헝가리"
  ROM_AI_BEHAVIOR:0 "@ROM 루마니아"
  YUG_AI_BEHAVIOR:0 "@YUG 유고슬라비아"
@@ -138,8 +138,6 @@
  MAN_AI_BEHAVIOR:0 "@MAN 만주국"
  HOL_AI_BEHAVIOR:0 "@HOL 네덜란드"
  MEX_AI_BEHAVIOR:0 "@MEX 멕시코"
- SPR_AI_BEHAVIOR:0 "@SPR 스페인"
- POR_AI_BEHAVIOR:0 "@POR 포르투갈"
  RULE_OPTION_COMMUNIST:0 "공산주의"
  RULE_OPTION_FASCIST:0 "파시스트"
  RULE_OPTION_FASCIST_HISTORICAL:0 "파시스트 - 역사적"
@@ -149,7 +147,6 @@
  RULE_OPTION_NEUTRALITY:0 "비동맹주의"
  RULE_OPTION_HISTORICAL:0 "역사적"
  RULE_OPTION_ALTERNATE:0 "대체역사"
- RULE_OPTION_ALLIES:0 "연합국"
  RULE_OPTION_DEMOCRATIC_HISTORICAL:0 "민주주의 - 역사적"
  RULE_OPTION_DEMOCRATIC_ALTERNATE:0 "민주주의 - 대체역사"
  RULE_OPTION_KAISER:0 "카이저 복위"
@@ -169,34 +166,25 @@
  RULE_FASCIST_ALTERNATE_ITA_AI_DESC:0 "이탈리아 AI는 추축국에 가입하기 전, 스페인과의 동맹을 결성하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ATTACK_TURKEY:0 "터키 공격"
  RULE_OPTION_ALLIES:0 "프랑스 및 영국과 동맹"
- 
- #Germany#
  RULE_KAISER_GER_AI_DESC:0 "독일 AI는 카이저를 옥좌로 귀환시키는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_GER_AI:0 "공화주의 독일"
- RULE_DEMOCRATIC_GER_AI_DESC:0 "독일 AI는 공화국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_DEMOCRATIC_GER_AI_DESC:0 "독일 AI는 공화국 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_CONSERVATIVES_GER_AI:0 "입헌주의 독일"
  RULE_OPTION_CONSERVATIVES_GER_AI_DESC:0 "독일 AI는 입헌군주제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_ALLIES_GER_AI_DESC:0 "독일 AI는 프랑스 및 영국과 동맹을 맺는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- 
  RULE_OPTION_FASCIST_GER_AI:0 "대독일"
  RULE_OPTION_FASCIST_GER_AI_DESC:0 "독일 AI는 대독일 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- 
- #Russia#
  RULE_OPTION_COMMUNIST_RUS_AI_DESC:0 "러시아 AI는 소련 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_RUS_AI_DESC:0 "러시아 AI는 러시아 공화국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_CONSERVATIVES_RUS_AI_DESC:0 "러시아 AI는 입헌군주제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_FASCIST_RUS_AI_DESC:0 "러시아 AI는 국민주의-군사국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ATTACK_TURKEY_RUS_AI_DESC:0 "러시아 AI는 '청년 튀르크 반란'에서 물러서지 않을 것이며 서방의 독립보장에도 불구하고 터키에 전쟁을 선포할 것입니다."
- 
- #France#
  RULE_OPTION_COMMUNIST_FRA_AI:0 "프롤레타리아 혁명"
  RULE_OPTION_COMMUNIST_FRA_AI_DESC:0 "프랑스 AI는 공산주의로 변하고 코민테른에 가입하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_MONARCHY_FRA_AI:0 "부르봉 왕정복고"
  RULE_OPTION_MONARCHY_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 부르봉 왕가의 계승자를 옹립하려 하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_IMPERIAL_FRA_AI:0 "보나파르트 제정복고"
  RULE_OPTION_IMPERIAL_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 제정복고를 시도할 것이며 보나파르트파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- 
- #United Kingdom#
  RULE_OPTION_DEMOCRATIC_ENG_AI_DESC:0 "영국 AI는 폴란드를 보호하고 독일과의 방어 전쟁을 수행하며 연합국을 이끄는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_COMMUNIST_UNIONS:0 "인민들에게 힘을"
  RULE_OPTION_COMMUNIST_ENG_AI_DESC:0 "영국 AI는 노동조합에 양보하고 공산주의로 변하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
@@ -208,7 +196,6 @@
  RULE_OPTION_DEMOCRATIC_NO_MORE_APPEASEMENT_ENG_AI_DESC:0 "영국 AI는 유화책을 중단하고 민주주의적 개입을 대신하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ORGANIZE_THE_BLACKSHIRTS:0 "검은 셔츠단 결성"
  RULE_OPTION_ORGANIZE_THE_BLACKSHIRTS_ENG_AI_DESC:0 "영국 AI는 검은 셔츠단을 결성하고 파시스트로 변하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- 
  RULE_OPTION_AUSTRIA_HUNGARY_HUN_AI_DESC:0 "헝가리 AI는 오스트리아-헝가리 제국의 복원 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_FASCIST_HUN_AI_DESC:0 "헝가리 AI는 가장 역사와 흡사하며 추축국 가입을 시도하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_FASCIST_ALTERNATE_HUN_AI_DESC:0 "헝가리 AI는 이탈리아 및 오스트리아와의 세력을 창설하는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
@@ -283,8 +270,8 @@
  RULE_ALLOW_LICENSING_SAME_FACTION_TT:0 "게임 규칙: §R모든 나라는 같은 세력 내부의 나라에게만 생산 면허를 취득할 수 있습니다.§!"
  RULE_ALLOW_LICENSING_SAME_IDEOLOGY_TT:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라에게만 생산 면허를 취득할 수 있습니다.§!"
  RULE_OPTION_DEMOCRATIC_HISTORICAL_HOL_AI_DESC:0 "네덜란드 AI는 침략받은 뒤 연합국에 가입하되, 동인도제도로의 정부 이전은 하지 않는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY:0 "데 제벤 프로빈시엔" 반란의 유산"
- RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY_HOL_AI_DESC:0 "네덜란드 AI는 "데 제벤 프로빈시엔" 반란의 유산을 부활시키고 공산주의로 이행하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY:0 "데 제벤 프로빈시엔\" 반란의 유산"
+ RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY_HOL_AI_DESC:0 "네덜란드 AI는 \"데 제벤 프로빈시엔\" 반란의 유산을 부활시키고 공산주의로 이행하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ORANJE_BOVEN:0 "오라녜 만세"
  RULE_OPTION_ORANJE_BOVEN_HOL_AI_DESC:0 "네덜란드 AI는 군주주의를 지지하고 여왕 빌헬미나에게 권력을 주려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_CONTINUE_THE_WAR_IN_BATAVIA:0 "바타비아에서의 전쟁 재개"
@@ -318,23 +305,10 @@
  ASIA_COLONIZATION_STATUS:0 "아시아 식민지화 상태"
  RULE_OPTION_ASIA_DECOLONIZED:0 "아시아 탈식민지화"
  RULE_OPTION_ASIA_DECOLONIZED_DESC:0 "아시아의 모든 식민지 국가들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
- OCEANIA_COLONIZATION_STATUS:0 "오세아니아 식민지화 상태"
- RULE_OPTION_OCEANIA_DECOLONIZED:0 "오세아니아 탈식민지화"
- RULE_OPTION_OCEANIA_DECOLONIZED_DESC:0 "태평양의 모든 식민지 국가들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
- RULE_OPTION_OCEANIA_UNITED:0 "폴리네시아 제국"
- RULE_OPTION_OCEANIA_UNITED_DESC:0 "폴리네시아는 게임 시작 시 하나의 국가로 통일될 것입니다."
  ENG_FRAGMENTATION_STATUS:0 "영국 파편화 상태"
  RULE_OPTION_DEFAULT_FRAGMENTATION_DESC:0 "구성국들이 제각기 국민국가로 파편화되지 않습니다."
  RULE_OPTION_ENG_FRAGMENTED:0 "영국 파편화"
  RULE_OPTION_ENG_FRAGMENTED_DESC:0 "영국의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
- SPR_FRAGMENTATION_STATUS:0 "스페인 파편화 상태"
- RULE_OPTION_SPR_FRAGMENTED:0 "스페인 파편화"
- RULE_OPTION_SPR_FRAGMENTED_DESC:0 "카탈루냐, 갈리시아, 나바라가 게임 시작부터 자유로운 독립국으로 해방됩니다."
- RULE_OPTION_SPR_FAMILIAR:0 "11월 11일"
- RULE_OPTION_SPR_FAMILIAR_DESC:0 "스페인의 국경은 어디서 많이 본 듯하게 그려질 것입니다."
- FRA_FRAGMENTATION_STATUS:0 "프랑스 파편화 상태"
- RULE_OPTION_FRA_FRAGMENTED:0 "프랑스 파편화"
- RULE_OPTION_FRA_FRAGMENTED_DESC:0 "프랑스의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
  YUG_FRAGMENTATION_STATUS:0 "유고슬라비아 파편화 상태"
  RULE_OPTION_YUG_FRAGMENTED:0 "유고슬라비아 파편화"
  RULE_OPTION_YUG_FRAGMENTED_DESC:0 "유고슬라비아의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
@@ -344,34 +318,3 @@
  RAJ_FRAGMENTATION_STATUS:0 "인도 파편화 상태"
  RULE_OPTION_RAJ_FRAGMENTED:0 "영국령 인도 파편화"
  RULE_OPTION_RAJ_FRAGMENTED_DESC:0 "영국령 인도의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
- RULE_OPTION_NATIONALIST_HISTORICAL:0 "프랑코주의"
- RULE_OPTION_NATIONALIST_HISTORICAL_DESC:0 "프랑코는 국민파를 장악하고 새롭고 통일된 스페인에 팔랑헤주의와 카를로스주의 이념을 병합하여 공격받지 않는 한 세계 대전에서 중립을 지키려 할 것입니다."
- RULE_OPTION_SECOND_REPUBLIC:0 "제2공화국"
- RULE_OPTION_SECOND_REPUBLIC_DESC:0 "스페인의 민주정부는 파시즘과 공산주의 둘 다 거부하면서 제2공화국을 유지할 것입니다."
- RULE_OPTION_FALANGIST:0 "팔랑헤주의"
- RULE_OPTION_FALANGIST_DESC:0 "호세 안토니오 프리모 데 리베라 휘하의 팔랑헤주의자들은 카를로스주의를 거부하고 스페인 제국주의의 회복을 모색할 것입니다."
- RULE_OPTION_CARLIST:0 "카를로스주의"
- RULE_OPTION_CARLIST_DESC:0 "마누엘 팔 콘데 휘하의 카를리스타들은 팔랑헤주의를 배격하고 합법적인 카를로스 왕가 아래서 구시대의 절대군주제로 복귀할 것입니다."
- RULE_OPTION_ANARCHIST:0 "아나키즘"
- RULE_OPTION_ANARCHIST_DESC:0 "아라곤과 카탈루냐의 아나키스트들은 파시스트와 공산주의자들을 모두 물리치고 민족국가 그 자체에 완전히 저항하기 위해 함께 뭉칠 것입니다."
- RULE_OPTION_INDEPENDENT_COMMUNIST:0 "자주적 공산주의"
- RULE_OPTION_INDEPENDENT_COMMUNIST_DESC:0 "마르크스주의통일노동자당과 그들의 아나키스트 동맹들은 내전 이후 스탈린주의의 멍에를 벗어 던지고 독자적인 공산주의 이념을 추구할 것입니다."
- RULE_OPTION_STALINIST:0 "스탈린주의"
- RULE_OPTION_STALINIST_DESC:0 "진정한 공산주의자들은 모스크바의 명령을 받아 아나키스트들과 파시스트들에게 저항하고 자주적 공산주의자들의 영향력을 억제하며 스탈린주의자들의 지도 아래 제2공화국의 새로운 시대를 열 것입니다."
- RULE_OPTION_HISTORICAL_POR_AI_DESC:0 "살라자르 정권 하에서 포르투갈은 제2공화국을 강화하고 세계대전 중 중립을 지키려 할 것입니다."
- RULE_OPTION_FASCIST_POR_AI_DESC:0 "라파엘 페레이라는 스페인 내전에서 국민파를 지원하고 이후 추축국 가입을 시도하면서 파시스트 독재자로 포르투갈을 장악할 것입니다."
- RULE_OPTION_FASCIST_FIFTH_EMPIRE:0 "제5제국"
- RULE_OPTION_FASCIST_FIFTH_EMPIRE_DESC:0 "포르투갈 정부는 파시즘을 포용하고, 스페인 내전에서 공화파에 맞서 싸우며, 잃어버린 아프리카, 아시아, 아메리카 영토를 되찾기 위해 다시 한번 주요 강국으로 부상할 것입니다."
- RULE_OPTION_NEUTRALITY_MONARCHIST:0 "군주주의"
- RULE_OPTION_NEUTRALITY_MONARCHIST_DESC:0 "두아르트 국왕은 포르투갈의 왕정복고 이후 브라질 군주주의자들에게 호소하여 포르투갈-브라질 제국의 복원을 시도할 예정입니다."
- RULE_OPTION_DEMOCRATIC_POR_AI_DESC:0 "영국의 영향력으로 민주정부는 살라자르 정권을 전복시키고 영국의 도움을 받아 연합국에 합류하기 전까지 그 나라를 발전시키는데 주력할 것입니다."
- RULE_OPTION_COMMUNIST_COMINTERN:0 "공산주의"
- RULE_OPTION_COMMUNIST_COMINTERN_DESC:0 "포르투갈은 스페인 공화국을 지지하고 코민테른에 가입하려고 시도하면서 소비에트 연방을 따를 것입니다."
- RULE_OPTION_COMMUNIST_INDEPENDENT:0 "통일 유럽 사회주의 공화국"
- RULE_OPTION_COMMUNIST_INDEPENDENT_DESC:0 "공산주의자들은 정부를 뒤엎고 스페인 내전 기간 동안 스페인 민족주의자들과 맞서 싸울 것이며, 이베리아 반도를 파시즘에 대항할 유럽의 마지막 보루인 통일 유럽 사회주의 공화국으로 통합할 것입니다."
-  RULE_OPTION_MONARCHIST_ORLEANIST:0 "군주주의: 오를레앙파"
- RULE_OPTION_MONARCHIST_LEGITIMIST:0 "군주주의: 부르봉파"
- RULE_OPTION_MONARCHIST_BONAPARTIST:0 "군주주의: 보나파르트파"
- RULE_MONARCHIST_ORLEANIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 오를레앙파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_MONARCHIST_LEGITIMIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 부르봉 왕가의 계승자를 옹립하려 하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_MONARCHIST_BONAPARTIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 제정복고를 시도할 것이며 보나파르트파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
