--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -1,10 +1,9 @@
-﻿ l_english:
-  ####### DOMESTIC ######
+﻿l_english:
  prussia.2.t:0 "제국의회가 북부의 재통일을 제안하다"
  prussia.2.d:0 "지금 베를린 협정이 빨갱이들과 전쟁을 하고 있기 때문에 많은 정당들이 북독일 연방의 기치 아래 재통합을 제안하고 있습니다. 우리 이웃들은 바이에른의 맹공격에서 살아남기 위해 기꺼이 타협할 것으로 보입니다. 어떻게 진행하면 좋겠습니까?"
  prussia.2.a:0 "북독일 연방 만세!"
  prussia.2.b:0 "재통일은 해답이 아니다!"
- prussia.17.t:0 "새로운 총통!" 
+ prussia.17.t:0 "새로운 총통!"
  prussia.17.d:0 "우리는 단결했습니다! 우리는 다시 강해졌습니다! 이제 우리의 새로운 지도자인 독일 국민의 지도자를 선택해야 할 때입니다. 카이저 빌헬름 2세는 늙었기 때문에, 그는 그 규칙을 따를 수 없습니다. 현재 프로이센에서 가장 인기 있는 두 정치인은 빌헬름 3세와 헤르만 괴링입니다."
  prussia.17.a:0 "카이저 빌헬름 III"
  prussia.17.b:0 "헤르만 괴링"
@@ -58,7 +57,7 @@
  prussia.10028.a:0 "우리는 강력한 동맹이 필요하다."
  prussia.10028.b:0 "우리는 어떤 장비도 내어줄 수 없다."
  prussia.10029.t:0 "노르드발퀴레 건설"
- prussia.10029.d:0 "우리의 괴뢰국인 프랑스 왕국의 가장 큰 위험은 바다로부터의 공격입니다. 독일의 건축가들은 프랑스의 해안에 새로운 해안 요새를 건설해야 한다고 제안했습니다. 그들은 요새에 "노르드발퀴레"라는 이름을 붙였습니다. 우리는 그것을 지어야 합니까?"
+ prussia.10029.d:0 "우리의 괴뢰국인 프랑스 왕국의 가장 큰 위험은 바다로부터의 공격입니다. 독일의 건축가들은 프랑스의 해안에 새로운 해안 요새를 건설해야 한다고 제안했습니다. 그들은 요새에 \"노르드발퀴레\"라는 이름을 붙였습니다. 우리는 그것을 지어야 합니까?"
  prussia.10029.a:0 "건설하라."
  prussia.10029.b:0 "필요 없다."
  prussia.10018.t:0 "바덴 합병"
@@ -85,7 +84,6 @@
  prussia.10009.t:0 "프로이센이 저지 독일을 합병하다"
  prussia.10009.d:0 "독일 국가들은 남부 코뮌의 부상과 팽창주의 교리에 더욱 겁을 집어먹었습니다. 프로이센 정부는 저지 독일에 국가보호령을 세우는 협정을 제안했습니다. 오늘 프로이센 제1기갑군은 마침내 함부르크 시내에 진주하여 지역 민병대로 제1베저-엠스 수비대를 형성하였습니다. 이 점령으로 프로이센 왕국은 북부 독일을 거의 완전히 장악하게 되었습니다. 프로이센 정부는 이 협정이 이 지역의 안정과 안전을 제공할 것이라고 믿고 있습니다."
  prussia.10009.a:0 "프로이센이 통일을 원하는 것처럼 보인다."
- prussia.10009.b:0 "통일을 향한 또 하나의 발걸음이다."
  prussia.10009.b:0 "이런다고 그들을 지킬 수 없을 것이다."
  prussia.10010.t:0 "프랑스에서의 승리!"
  prussia.10010.d:0 "파리가 함락되었습니다! 프랑스 북동부에서는 독일군이 압도적으로 우세하며, 아군은 프랑스 서부와 남부를 향해 진군하고 있습니다. 프랑스 공화국은 무너질 위기에 처했습니다. 이제 우리는 무너져 가는 나라를 어떻게 할 지 결정할 때입니다. 제국의회는 저지 우알로니와 낭시와 같이 잃어버린 독일 영토를 반환하고 플란데런에 괴뢰국을 수립한다는 내용의 콩피에뉴 정전 협정을 제안했습니다. 이 협정은 우리가 영국에 집중할 수 있게 해줄 것입니다. 카이저는 아이텔 프리드리히를 필두로 하는 괴뢰국 수립을 통해 궁극적으로 프랑스인들의 망명을 강제할 것을 제안했습니다..."
@@ -157,7 +155,6 @@
  prussia.114.t:0 "페트로그라드가 조약을 거부하다"
  prussia.114.d:0 "러시아는 우리의 불가침 조약에 서명하기를 거부했습니다! 이것은 문제를 복잡하게 만듭니다. 왜냐하면 우리는 러시아인들이 개입할 위험 없이 프랑스를 결정적으로 처리할 수 없기 때문입니다."
  prussia.114.a:0 "빌어먹을 놈들!"
-
  prussia.116.t:0 "독일의 합병 압박"
  prussia.116.d:0 "시위자들이 오스트리아가 독일 국민의 단결을 위해 독일과 합병하기를 바라는 목소리를 내면서 시민 불안과 폭력 행위가 발생했습니다. 베를린은 오스트리아의 합병을 강력히 요구하고 있습니다."
  prussia.116.a:0 "우리는 독일국에 합류할 것이다!"
@@ -168,93 +165,78 @@
  prussia.115.t:0 "안슐루스"
  prussia.115.d:0 "오스트리아에서 반복된 폭동은 그곳 사람들이 우리 제국과 오랫동안 단결하기를 원한다는 것을 분명히 보여줍니다. 이제는 행동에 나서 국민의 뜻이 나타나도록 해야 할 때입니다."
  prussia.115.a:0 "누가 오스트리아가 독일이 아니라고 말할 수 있는가?!"
- ####### NEWS ######
  prussia.10000.t:0 "독일 통일"
- prussia.10000.d:0 "오늘 오전 프로이센 외무부는 독일의 통일 절차가 완료되었으며 새로운 독일이 선포됐다고 발표했습니다. 일부 사람들은 독일이 다시 강대국이 되는 것을 막기 위해 1917년 협상국에 의해 해체된 독일 제국이 부상하는 것을 두려워합니다. [GER.GetLeader] 측은 통일을 "민주 정권 하에서 독일 국민들을 회복하고 재결합시키기 위한 필수적인 조치"라고 정당화했습니다."
+ prussia.10000.d:0 "오늘 오전 프로이센 외무부는 독일의 통일 절차가 완료되었으며 새로운 독일이 선포됐다고 발표했습니다. 일부 사람들은 독일이 다시 강대국이 되는 것을 막기 위해 1917년 협상국에 의해 해체된 독일 제국이 부상하는 것을 두려워합니다. [GER.GetLeader] 측은 통일을 \"민주 정권 하에서 독일 국민들을 회복하고 재결합시키기 위한 필수적인 조치\"라고 정당화했습니다."
  prussia.10000.a:0 "계속해서 상황을 예의주시해야 할 것 같다."
  prussia.10000.b:0 "독일 제국 만세!"
  prussia.10000.c:0 "제국에게 죽음을!"
- ####### FLAGS ######
  GER_north_reunited:0 "베를린 조약 통일함"
  german_empire_reunited:0 "독일 제국 선포됨!"
-####### Tooltips ######
-GER_unification_tt:0 "§Y프로이센은 북독일국을 합병하고 북독일 연방을 형성할 것입니다§!"
-GER_expand_wall:0 "요새를 업그레이드하는 새로운 디시전을 사용할 수 있습니다"
-  #####Holland events, there arent many
-  holland.1000.t:0 "네덜란드의 중립"
-  holland.1000.d:0 "유럽 대륙에서 세계 대전이 벌어지고 있는 가운데 네덜란드 왕국이 현재 적과 교역을 하고 있다는 사실이 알려지게 되었습니다.\n우리는 승리를 달성하는 데 독일의 완전한 고립이 필수적이라고 믿고 있으므로, 네덜란드는 우리의 적과의 무역을 중단해야 합니다.\n만약 그들이 그렇게 하지 않는다면, 그들은 대영제국의 적으로 간주될 것입니다..."
-  holland.1000.a:0 "최후통첩을 보내라."
-  holland.1000.b:0 "우리는 네덜란드의 중립을 존중해야 한다!"
-  
-  holland.1001.d:0 "유럽에서의 전쟁 발발에 이어, 우리는 중립을 선언했습니다. 영국이 우리에게 한 편을 선택할 수밖에 없게 한 것으로 보입니다.\n그들의 최후통첩은 우리가 독일과의 어떤 무역도 중단할 것을 요구합니다. 우리가 최후통첩을 받아들인다면 독일은 우리를 그들의 적으로 간주할 것이고 따라서 우리와 그들 사이의 긴장이 고조될 것입니다..."
-  holland.1001.t:0 "영국의 최후통첩"
-  holland.1001.a:0 "수락"
-  holland.1001.b:0 "거부"
-  
-  holland.1002.t:0 "네덜란드가 최후통첩을 거부하다!"
-  holland.1002.d:0 "네덜란드 왕국은 우리의 최후 통첩에 응하지 않았으니 그들은 우리의 적이 되었습니다! 이제 우리가 할 일이 하나 더 있습니다..."
-  holland.1002.a:0 "전쟁이다!"
-  holland.1002.b:0 "내버려둬라..."
-  
-  holland.1003.t:0 "영국이 네덜란드에 전쟁을 선포하다!"
-  holland.1003.d:0 "전쟁은 점점 더 커지고 있습니다! 독일과의 어떤 무역도 중단하라는 영국의 최후통첩이 거절된 후, 네덜란드는 독일로부터 보호를 받을 수밖에 없었습니다.\n전쟁이 발발한 후, 네덜란드 왕국은 중립을 선언했습니다. 독일은 지금까지 그것을 존중해 왔지만, 영국은 독일의 전쟁 노력을 방해하기 위해 어떤 수단이라도 사용할 수 밖에 없었습니다..."
-  holland.1003.a:0 "불쌍한 네덜란드."
-  holland.1003.b:0 "불쌍한 네덜란드."
-  
-  holland.1004.t:0 "네덜란드의 금수조치!"
-  holland.1004.d:0 "네덜란드는 우리와 어떤 무역도 중단하라는 영국의 요구를 받아들여서 우리에게 금수조치를 내렸습니다. 이는 그들을 우리의 적으로 만듭니다!"
-  holland.1004.a:0 "전쟁이다!"
-  holland.1005.t:0 "독일이 군사 통행권을 요청하다!"
-  holland.1005.d:0 "전 세계가 전쟁 중입니다!\n우리나라는 침략 위협을 받고 있습니다. 독일이 우리 땅을 통과할 수 있게 해달라는 공식 요청을 했습니다. 우리가 거절하면 개입이 불가피하다고 합니다..."
-  holland.1005.a:0 "수락"
-  holland.1005.b:0 "거부"
-
-  holland.1006.t:0 "파리의 이양"
-  holland.1006.d:0 "독일군과 함께 우리 군대가 파리에 도달했습니다. 당연히 해야 할 일은 독일군에게 통제권을 주는 것입니다."
-  holland.1006.a:0 "이양하라."
-  holland.1006.b:0 "가지고 있는다."
-
-
-  #New events
-  prussia_homeland.1.t:0 "한스 폰 젝트의 서거!"
-  prussia_homeland.1.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
-  prussia_homeland.1.a:0 "나쁜 소식이다!"
-  
-  prussia_homeland.2.t:0 "프로이센 독재자의 죽음!"
-  prussia_homeland.2.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
-  prussia_homeland.2.a:0 "흥미롭군..."
-  prussia_homeland.2.b:0 "나쁜 소식이다!"
-  prussia_homeland.2.c:0 "그가 죽어서 정말 다행이다!"
-  
-  prussia_homeland.3.t:0 "프로이센의 선거"
-  prussia_homeland.3.d:0 "한스 폰 젝트의 죽음 이후, 독일 국민들은 현재 세계 대전이 끝난 후 처음으로 선거를 앞두고 있습니다.\n\n독일의 미래는 이번 선거에 달려 있습니다. 독일 국민의 대부분은 카이저가 제국의회로 돌아오기를 바라고 있고 다른 사람들은 평화롭고 자유주의적인 정부를 원하며 아마도 독일의 입헌 군주제를 향한 움직임을 희망하고 있습니다.\n\n의심할 여지 없이, 이 선거는 지금까지 20세기의 가장 중요한 선거 중 하나가 될 것입니다..."
-  prussia_homeland.3.a:0 "흥미롭군..."
-  prussia_homeland.3.b:0 "투표하자!"
-  prussia_homeland.3.c:0 "그들은 몰락할 것이다!"
-
-  prussia_homeland.4.t:0 "프로이센의 총선거!"
-  prussia_homeland.4.d:0 "한스 폰 젝트의 죽음에 이어 새로운 방향을 선택할 때입니다.\n\n왕립주의 정책을 계속 추진해야 합니까, 아니면 전면적인 변화를 겪어야 합니까? 자유당과 보수당은 모두 선거에 참석하게 될 것이며, 둘 다 새로운 기회를 제시하게 될 것입니다.\n\n독일의 미래는 이번 선거에 달려 있습니다."
-  prussia_homeland.4.a:0 "자유주의자들!"
-  prussia_homeland.4.b:0 "보수주의자들!"
-  prussia_homeland.4.c:0 "카이저를 다시 모셔와라!"
-  prussia_homeland.4.e:0 "국민주의자들!"
-
-#Decisions
-GER_generals_reintegrations_category:0 "군 지휘관 재임명"
-GER_generals_reintegrations_category_desc:0 "독일 제국군은 브뤼셀 조약에 의해 소규모의 독립된 군대로 분할되었습니다. 이제 우리는 이 작은 나라들을 다시 통합하기 시작했으므로, 그들의 군대도 통합할 것입니다."
-GER_reinhardt_for_prussia:0 "게오르크-한스 라인하르트 재임명"
-GER_runsdtedt_for_prussia:0 "게르트 폰 룬트슈테트 재임명"
-GER_hell_for_prussia:0 "에른스트-에버하드 헬 재임명"
-GER_rommel_for_prussia:0 "에르빈 롬멜 재임명"
-GER_imminent_civil_war:0 "임박한 내전"
-GER_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센인들은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
-GER_imminent_civil_war_decision:0 "내전 준비"
-GER_imminent_civil_war_outbreak_decision:0 "내전 발발!"
-GER_align_SAX:0 "작센과의 제휴"
-GER_align_WUT:0 "바덴과의 제휴"
-GER_align_WSM:0 "저지 독일과의 제휴"
-GER_align_RHN:0 "라인란트와의 제휴"
-
-
-GER_election_ready:0 "한스 폰 젝트 사망함!"
-
+ GER_unification_tt:0 "§Y프로이센은 북독일국을 합병하고 북독일 연방을 형성할 것입니다§!"
+ GER_expand_wall:0 "요새를 업그레이드하는 새로운 디시전을 사용할 수 있습니다"
+ holland.1000.t:0 "네덜란드의 중립"
+ holland.1000.d:0 "유럽 대륙에서 세계 대전이 벌어지고 있는 가운데 네덜란드 왕국이 현재 적과 교역을 하고 있다는 사실이 알려지게 되었습니다.\n우리는 승리를 달성하는 데 독일의 완전한 고립이 필수적이라고 믿고 있으므로, 네덜란드는 우리의 적과의 무역을 중단해야 합니다.\n만약 그들이 그렇게 하지 않는다면, 그들은 대영제국의 적으로 간주될 것입니다..."
+ holland.1000.a:0 "최후통첩을 보내라."
+ holland.1000.b:0 "우리는 네덜란드의 중립을 존중해야 한다!"
+ holland.1001.d:0 "유럽에서의 전쟁 발발에 이어, 우리는 중립을 선언했습니다. 영국이 우리에게 한 편을 선택할 수밖에 없게 한 것으로 보입니다.\n그들의 최후통첩은 우리가 독일과의 어떤 무역도 중단할 것을 요구합니다. 우리가 최후통첩을 받아들인다면 독일은 우리를 그들의 적으로 간주할 것이고 따라서 우리와 그들 사이의 긴장이 고조될 것입니다..."
+ holland.1001.t:0 "영국의 최후통첩"
+ holland.1001.a:0 "수락"
+ holland.1001.b:0 "거부"
+ holland.1002.t:0 "네덜란드가 최후통첩을 거부하다!"
+ holland.1002.d:0 "네덜란드 왕국은 우리의 최후 통첩에 응하지 않았으니 그들은 우리의 적이 되었습니다! 이제 우리가 할 일이 하나 더 있습니다..."
+ holland.1002.a:0 "전쟁이다!"
+ holland.1002.b:0 "내버려둬라..."
+ holland.1003.t:0 "영국이 네덜란드에 전쟁을 선포하다!"
+ holland.1003.d:0 "전쟁은 점점 더 커지고 있습니다! 독일과의 어떤 무역도 중단하라는 영국의 최후통첩이 거절된 후, 네덜란드는 독일로부터 보호를 받을 수밖에 없었습니다.\n전쟁이 발발한 후, 네덜란드 왕국은 중립을 선언했습니다. 독일은 지금까지 그것을 존중해 왔지만, 영국은 독일의 전쟁 노력을 방해하기 위해 어떤 수단이라도 사용할 수 밖에 없었습니다..."
+ holland.1003.a:0 "불쌍한 네덜란드."
+ holland.1003.b:0 "불쌍한 네덜란드."
+ holland.1004.t:0 "네덜란드의 금수조치!"
+ holland.1004.d:0 "네덜란드는 우리와 어떤 무역도 중단하라는 영국의 요구를 받아들여서 우리에게 금수조치를 내렸습니다. 이는 그들을 우리의 적으로 만듭니다!"
+ holland.1004.a:0 "전쟁이다!"
+ holland.1005.t:0 "독일이 군사 통행권을 요청하다!"
+ holland.1005.d:0 "전 세계가 전쟁 중입니다!\n우리나라는 침략 위협을 받고 있습니다. 독일이 우리 땅을 통과할 수 있게 해달라는 공식 요청을 했습니다. 우리가 거절하면 개입이 불가피하다고 합니다..."
+ holland.1005.a:0 "수락"
+ holland.1005.b:0 "거부"
+ holland.1006.t:0 "파리의 이양"
+ holland.1006.d:0 "독일군과 함께 우리 군대가 파리에 도달했습니다. 당연히 해야 할 일은 독일군에게 통제권을 주는 것입니다."
+ holland.1006.a:0 "이양하라."
+ holland.1006.b:0 "가지고 있는다."
+ prussia_homeland.1.t:0 "한스 폰 젝트의 서거!"
+ prussia_homeland.1.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
+ prussia_homeland.1.a:0 "나쁜 소식이다!"
+ prussia_homeland.2.t:0 "프로이센 독재자의 죽음!"
+ prussia_homeland.2.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
+ prussia_homeland.2.a:0 "흥미롭군..."
+ prussia_homeland.2.b:0 "나쁜 소식이다!"
+ prussia_homeland.2.c:0 "그가 죽어서 정말 다행이다!"
+ prussia_homeland.3.t:0 "프로이센의 선거"
+ prussia_homeland.3.d:0 "한스 폰 젝트의 죽음 이후, 독일 국민들은 현재 세계 대전이 끝난 후 처음으로 선거를 앞두고 있습니다.\n\n독일의 미래는 이번 선거에 달려 있습니다. 독일 국민의 대부분은 카이저가 제국의회로 돌아오기를 바라고 있고, 다른 사람들은 평화롭고 자유주의적인 정부를 원하며 아마도 독일의 입헌 군주제를 향한 움직임을 희망하고 있습니다.\n\n의심할 여지 없이, 이 선거는 지금까지 20세기의 가장 중요한 선거 중 하나가 될 것입니다..."
+ prussia_homeland.3.a:0 "흥미롭군..."
+ prussia_homeland.3.b:0 "투표하자!"
+ prussia_homeland.3.c:0 "그들은 몰락할 것이다!"
+ prussia_homeland.4.t:0 "프로이센의 총선거!"
+ prussia_homeland.4.d:0 "한스 폰 젝트의 죽음에 이어 새로운 방향을 선택할 때입니다.\n\n왕립주의 정책을 계속 추진해야 할까요, 아니면 전면적인 변화를 겪어야 할까요? 자유당과 보수당은 모두 선거에 참석하게 될 것이며, 둘 다 새로운 기회를 제시하게 될 것입니다.\n\n독일의 미래는 이번 선거에 달려 있습니다."
+ prussia_homeland.4.a:0 "자유주의자들!"
+ prussia_homeland.4.b:0 "보수주의자들!"
+ prussia_homeland.4.c:0 "카이저를 다시 모셔와라!"
+ prussia_homeland.4.e:0 "국민주의자들!"
+ prussia_homeland.5.t:0 "독일의 교착 상태"
+ prussia_homeland.5.d:0 "독일에 전선이 그려지고 있습니다. 한쪽은, [GER.GetLeader] 휘하의 친우파 세력, 그 반대쪽은 [BAV.GetLeader]의 지원을 받는 친좌파 세력입니다.\n\n두쪽은 서로를 경멸하며 전 독일 제국 전역을 열렬히 요구하고 있습니다.\n\n독일 내전이 곧 터질 것입니다!"
+ prussia_homeland.5.a:0 "걱정되는군..."
+ prussia_homeland.5.b:0 "빨갱이들에게 죽음을!"
+ prussia_homeland.5.c:0 "혁명 만세!"
+ GER_generals_reintegrations_category:0 "군 지휘관 재임명"
+ GER_generals_reintegrations_category_desc:0 "독일 제국군은 브뤼셀 조약에 의해 소규모의 독립된 군대로 분할되었습니다. 이제 우리는 이 작은 나라들을 다시 통합하기 시작했으므로, 그들의 군대도 통합할 것입니다."
+ GER_reinhardt_for_prussia:0 "게오르크-한스 라인하르트 재임명"
+ GER_runsdtedt_for_prussia:0 "게르트 폰 룬트슈테트 재임명"
+ GER_hell_for_prussia:0 "에른스트-에버하드 헬 재임명"
+ GER_rommel_for_prussia:0 "에르빈 롬멜 재임명"
+ GER_imminent_civil_war:0 "임박한 내전"
+ GER_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센인들은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
+ GER_imminent_civil_war_decision:0 "내전 준비"
+ GER_imminent_civil_war_outbreak_decision:0 "내전 발발!"
+ GER_align_SAX:0 "작센과의 제휴"
+ GER_align_WUT:0 "바덴과의 제휴"
+ GER_align_WSM:0 "저지 독일과의 제휴"
+ GER_align_RHN:0 "라인란트와의 제휴"
+ GER_election_ready:0 "한스 폰 젝트 사망함!"
