--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -1,22 +1,22 @@
 ﻿l_english:
- GER_strike_USA:0 "미국을 공격하라!" 
+ GER_strike_USA:0 "미국을 공격하라!"
  GER_strike_USA_desc:0 "18세기 후반 영국으로부터 독립한 이래로, 미국은 많은 유럽인들의 관심사에 문제가 되어 왔습니다. 미국의 최근 고립주의 정책은 미국을 약하게 만들었고 국방군과 국가해군의 완벽하게 부드러운 목표로 만들었습니다. 진격하라!"
  GER_inv_HOL:0 "네덜란드 회원국"
  GER_inv_HOL_desc:0 "네덜란드 사람들은 또 다른 세계 대전이 터질 경우 얼마나 오래 지속될지 잘 알고 있습니다. 만약 그들이 독일이 영국 자체를 심각하게 위협할 수 있다고 확신할 수 있다면, 그들은 혹독한 점령을 피하기 위해 우리와 동맹을 선택할 가능성이 있습니다."
  GER_request_acces_HOL:0 "네덜란드 군사 통행권 요청"
- GER_request_acces_HOL_desc:0 "네덜란드는 대서양으로 가는 가장 쉬운 길을 제공합니다. 그리고 그들의 항구에 접근할 수 있는 것은 우리 경제에 온전하게 도움이 될 것입니다."
+ GER_request_acces_HOL_desc:0 "네덜란드는 대서양으로 가는 가장 쉬운 길을 제공합니다. 그들의 항구에 접근할 수 있는 것은 우리 경제에 온전하게 도움이 될 것입니다."
  GER_war_FRA_feat_ENG:0 "프랑스 침공"
- GER_war_FRA_feat_ENG_desc:0 "독일이 다시 뭉쳤으니 이제 우리의 관심을 서쪽으로 돌릴 때이다. 알자스-로렌의 상실은 독일 국민의 명예에 오점이 되고 정의롭고 정의로운 전쟁을 통해서만 우리는 이 원수를 갚을 수 있습니다."
+ GER_war_FRA_feat_ENG_desc:0 "독일이 다시 뭉쳤으니 이제 우리의 관심을 서쪽으로 돌릴 때입니다. 알자스-로렌의 상실은 독일 국민의 명예에 오점이 되었고, 정의롭고 정의로운 전쟁을 통해서만 우리는 이 원수를 갚을 수 있습니다."
  GER_brit_navy:0 "영국의 해상 우위 인정"
- GER_brit_navy_desc:0 "우리는 동맹국들에게 공산주의에 맞서 싸울 것을 요구합니다. 그리고 영국은 주요 후보입니다. 우리는 그들의 해군 우세를 인정하고 관계 개선을 위해 광범위한 해군 증강을 포기함으로써 그들의 우려를 완화시킬 것입니다."
+ GER_brit_navy_desc:0 "우리는 동맹국들에게 공산주의에 맞서 싸울 것을 요구할 것이며, 영국은 주요 후보입니다. 우리는 그들의 해군 우세를 인정하고 관계 개선을 위해 광범위한 해군 증강을 포기함으로써 그들의 우려를 완화시킬 것입니다."
  GER_ally_ENG_against_FRA:0 "윈저-호헨촐레른 조약"
- GER_ally_ENG_against_FRA_desc:0 "윈저 가족은 여전히 그들의 왕좌에 살고 있는 가장 가까운 친척들 중 일부이며, 우리 두 군주는 '유럽의 할머니' 빅토리아 여왕의 후손이며, 그 후손들은 영국, 독일, 러시아, 루마니아, 노르웨이, 벨기에 왕좌에 앉았습니다. 이제, 우리는 우리 가문들 간의 동맹을 공식화할 것입니다."
+ GER_ally_ENG_against_FRA_desc:0 "윈저 가문은 여전히 국가 원수 자리에 있는 가장 가까운 친척들 중 일부이고, 우리 두 군주는 '유럽의 할머니' 빅토리아 여왕의 후손이며, 그 후손들은 영국, 독일, 러시아, 루마니아, 노르웨이, 벨기에 왕좌에 앉았습니다. 이제, 우리는 우리 가문들 간의 동맹을 공식화할 것입니다."
  GER_dissolve_faction:0 "베를린 조약 종결"
  GER_dissolve_faction_desc:0 "베를린 조약은 구시대적이기 때문에 끝나야 합니다."
  GER_got_mit_uns:0 "신께서 우리와 함께 하신다"
- GER_got_mit_uns_desc:0 "'신께서 우리와 함께 하신다' 카이저가 독일을 하나님 대신 다스리고 카이저가 권력을 유지하는 한 하나님이 우리와 함께 하실 것이다!"
+ GER_got_mit_uns_desc:0 "'신께서 우리와 함께 하신다.' 카이저가 독일을 하나님 대신 다스리고 카이저가 권력을 유지하는 한 하나님이 우리와 함께 하실 것입니다!"
  GER_war_ITA:0 "이탈리아와의 전쟁"
- GER_war_ITA_desc:0 "이탈리아는 세계 대전 중에 우리를 배신했습니다. 만약 우리가 같은 것을 피하려면 우리는 그들을 선상에서 제거해야만 합니다."
+ GER_war_ITA_desc:0 "이탈리아는 세계 대전 중에 우리를 배신했습니다. 만약 우리가 또다른 배신을 피하려면 우리는 그들을 선상에서 제거해야만 합니다."
  GER_air_innovations:0 "항공대 통합"
  GER_air_innovations_desc:0 "현대 전쟁은 하늘을 지배하지 않고는 이길 수 없습니다. 우리는 공군을 발전시키기 위해 전력을 다해야 합니다!"
  GER_mecanized:0 "기계화 주력"
@@ -53,7 +53,6 @@
  GER_war_SER_desc:0 "우리 남부 방면은 약하기 때문에 더 강화해야 합니다. 세르비아와의 전쟁은 그 목적을 달성할 것입니다."
  GER_subs_bonus:0 "유보트 생산 촉진"
  GER_subs_bonus_desc:0 "유보트 생산량은 카를 되니츠 제독이 바라던 것보다 훨씬 적습니다. 지금 생산을 늘리지 않는 한, 우리는 바다에서 성공적으로 싸울 수 없을 것입니다."
- 
  GER_marines:0 "해병대"
  GER_marines_desc:0 "해병대는 우리 군에서 가장 정예이기 때문에, 우리는 새로운 전술과 해군 침공 장비를 획득하기 위해 더 많은 자금을 투자해야 합니다."
  GER_wunder_waffe:0 "분더바페"
@@ -85,7 +84,7 @@
  GER_war_SWI:0 "탄넨바움 작전"
  GER_war_SWI_desc:0 "스위스는 가장 역겹고 비참한 사람들과 정치 체제를 가지고 있습니다. 우리는 마침내 새로운 독일의 이 치명적인 적들을 볼 수 있는 시간을 갖게 되었습니다."
  GER_depression_recovery:0 "불황 회복"
- GER_depression_recovery_desc:0 "우리나라는 대공황의 영향을 많이 받았으니, 우리는 회복하여 그 어느 때보다 독립하여 이러한 재난을 피할 것입니다." 
+ GER_depression_recovery_desc:0 "우리나라는 대공황의 영향을 많이 받았으니, 우리는 회복하여 그 어느 때보다 독립하여 이러한 재난을 피할 것입니다."
  GER_armed_forces:0 "육군 투자"
  GER_armed_forces_desc:0 "우리 군대는 작지만 가장 경험이 많고 훈련을 잘 받은 군대 중 하나입니다. 어쩌면 우리가 대전에 패했을지도 모르지만, 이 위험한 시대에 살아남기 위해서는 영광스러운 프로이센군의 복원이 필수적입니다."
  GER_prussian_eco:0 "독일 산업 재건"
@@ -93,7 +92,6 @@
  GER_foreign_invest:0 "베를린 조약 강화"
  GER_foreign_invest_desc:0 "베를린 조약은 독일 연방의 동맹입니다. 우리는 연합의 지도자로서 우리 회원들이 그들의 경제를 재건하고 가능한 침략자들에 대한 방어력을 향상시킬 수 있도록 서로 돕습니다."
  GER_invest_nieder:0 "저지 독일 투자"
- GER_invest_nieder_desc:0 "북부 독일은 베를린 조약의 산업의 중심지이며, 민간 공장뿐만 아니라 우리의 부두도 위치해 있습니다. 이 지역에 대한 투자는 이 지역들이 우리의 노력을 공급하는데 필수적입니다."
  GER_polish_immigration:0 "폴란드 이민자"
  GER_polish_immigration_desc:0 "중유럽에 있는 나라가 되는 것은 우리의 강한 이웃들 때문에 어렵습니다. 우리도 많은 인력을 감당할 수 없습니다. 우리는 폴란드에서 독일로 가는 이민 절차를 용이하게 할 것입니다. 러시아인이 아닌 카이저께 봉사하기를 원하는 폴란드인들을 위해서입니다."
  GER_invest_sax:0 "작센 투자"
@@ -232,25 +230,21 @@
  GER_ally_FRA_desc:0 "아마도 우리는 프랑스와 동맹을 맺고 유럽 대륙을 확보함으로써 외교로 잃어버린 땅을 되찾을 수 있을 것입니다."
  GER_northern_front:0 "북부 영토 주장"
  GER_northern_front_desc:0 "이제 우리가 잃어버린 영토가 있는 북쪽을 향해 고개를 돌릴 때입니다. 덴마크에 빼앗긴 영토를 되찾거나, 덴마크라는 초인종을 보호하기 위해 그들과 동맹을 맺고 스웨덴으로 가는 교역로를 확보할 수 있는 두 가지 선택지가 있습니다."
- GER_demand_holstein:0 "덴마크와의 전쟁"
- GER_demand_holstein_desc:0 "우리의 잃어버린 영토를 되찾아야 합니다! 우리는 덴마크와 전쟁을 벌여야 합니다. 그들이 항복하기까지는 얼마 남지 않았습니다!"
  GER_befriend_DEN:0 "덴마크와의 친선"
  GER_befriend_DEN_desc:0 "새로운 동맹을 만드는 것이 우리에게 더 중요합니다. 덴마크는 우리가 발트해를 지배하는데 도움이 될 그들의 전략적 위치를 우리를 도울 것입니다."
- GER_befriend_SWE:0 "스웨덴과의 친선"
- GER_befriend_SWE_desc:0 "스웨덴은 우리의 주요 무역 파트너입니다. 만약 우리가 미래의 분쟁에 대비하고 있다면 우리는 스웨덴을 동맹국으로 간주해야 합니다. 현재 그들은 중립적이지만 우리는 그들을 우리 편으로 둘 수 있다고 확신합니다."
  GER_eastern_front:0 "동부 영토 주장"
  GER_eastern_front_desc:0 "우리는 이제 동쪽으로 고개를 돌려야 합니다. 거기서 우리가 가장 많이 패배했습니다. 우리는 방어할 수 없었던 고향에서 큰 성공을 거둔 후에 밀렸습니다. 우리가 잃어버린 땅을 러시아로부터 되찾을 것인지 아니면 러시아와의 동맹을 맺을 것인지 결정해야 할 때입니다."
  GER_anti_RUS_policy:0 "반-러시아 정책"
  GER_anti_RUS_policy_desc:0 "우리가 동쪽의 잃어버린 땅을 되찾으려면 러시아에 대항하여 우리 국민을 선동하는 반러시아 정책을 수립해야 합니다. 이것은 우리의 전쟁 주력에 대한 지지를 불러일으킬 것입니다."
  GER_dockyard:0 "조선소 확장"
- GER_dockyard_desc:0 "우리는 새롭고 더 발전된 선박을 건조하기 위해 부두를 확장해야 합니다." 
+ GER_dockyard_desc:0 "우리는 새롭고 더 발전된 선박을 건조하기 위해 부두를 확장해야 합니다."
  GER_northern_flank:0 "북부 방면"
  GER_northern_flank_desc:0 "우리의 서부에서의 전쟁은 오래되었습니다. 이런 절박한 시기에는 절박한 대책이 필요합니다. 우리는 네덜란드를 침공하여 벨기에인들을 신속하게 제압하고 그들의 저항을 없애야 합니다."
  GER_war_NOR:0 "노르웨이 개입"
  GER_war_NOR_desc:0 "노르웨이는 매우 중요한 전략적 위치를 가지고 있습니다. 그들의 해역을 통해 우리는 북해에 도달할 수 있고 영국이 가한 봉쇄를 피할 수 있습니다. 이 통로를 확보하려면 노르웨이의 침공을 고려해야 합니다..."
  GER_more_dockyards:0 "독일 해군 재건"
  GER_more_dockyards_desc:0 "전쟁은 계속되고 전쟁은 바다에서 반드시 승리해야 합니다. 우리는 더 이상 봉쇄에 저항할 수 없습니다. 약 20년 전에 폐기될 뻔했던 낡은 선박, 우리가 사용할 수 있는 모든 것을 되살리고 준비할 것입니다."
- GER_go_autarky:0 "경제 자립책" 
+ GER_go_autarky:0 "경제 자립책"
  GER_go_autarky_desc:0 "경제 자립책이란 자급자족하는 자질이다. 보통 이 용어는 정치 국가나 그들의 경제 시스템에 적용된다. 경제 자립책은 외부지원이나 국제무역 없이 기업이 생존하거나 활동을 계속할 수 있을 때마다 존재한다."
  GER_war_RUS:0 "러시아와의 전쟁!"
  GER_war_RUS_desc:0 "우리는 러시아와 싸울 준비가 되어 있습니다. 우리는 재통일되었고 강합니다! 우리가 먼저 쳐야 합니다! 지금이 우리의 순간입니다, 제국 만세!"
@@ -285,7 +279,7 @@
  GER_anschluss_sax:0 "작센 합병"
  GER_anschluss_sax_desc:0 "우리 군대의 확장과 함께 잃어버린 제국의 통일을 시작할 때입니다."
  GER_offense_army:0 "할더의 전략"
- GER_Offense_army_desc:0 "We should concentrate our efforts on building the army which is capable of defeating any aggressor. As we know, best defense is the offense."
+ GER_Offense_army_desc:0 "우리는 어떤 공격자라도 물리칠 수 있을 만한 군대를 만드는 데 주력해야 합니다. 알고 있듯이, 최고의 방어는 공격입니다."
  GER_ludendorff_line:0 "동부 방벽"
  GER_ludendorff_line_desc:0 "러시아와 동방의 잠재적 공격을 막기 위한 동방의 주요 요새선."
  GER_befriend_TUR:0 "터키와의 친선"
@@ -300,7 +294,7 @@
  GER_fighter_desc:0 "현대 전쟁은 하늘을 지배하지 않고는 이길 수 없습니다. 우리는 공군을 발전시키기 위해 전력을 다해야 합니다!"
  GER_cruiser_effort:0 "순양함 주력"
  GER_cruiser_effort_desc:0 "순양함은 구축함의 속도와 민첩성, 전함의 힘과 화력을 제공하는 절충안입니다."
- GER_raeder_plan:0 "레더 계획" 
+ GER_raeder_plan:0 "레더 계획"
  GER_raeder_plan_desc:0 "래더 계획은 순양함뿐만 아니라 주로 전함과 항모전단을 중심으로 한 새로운 대형 함대를 만드는 것으로 구성되어 있습니다."
  GER_donitz_plan:0 "되니츠 계획"
  GER_donitz_plan_desc:0 "되니츠 제독이 제안한 되니츠 계획은 적의 보급품과 호송을 추적하기 위해 훨씬 더 크고 유연한 잠수함 함대를 구축하는 것으로 구성되어 있습니다."
@@ -336,5 +330,4 @@
  GER_demand_holstein:0 "덴마크와의 전쟁"
  GER_demand_holstein_desc:0 "덴마크를 침공하는 것은 우리가 대전 후에 잃어버린 홀슈타인을 되찾을 수 있게 해줍니다. 또 덴마크라는 초인종을 바로 확보하고 스웨덴과의 교역도 확보할 수 있게 됩니다."
  GER_reunification_complete:0 "재통일 완성"
- #####################################################CustomTooltipps################################################
  GER_custom_freikorps_tt:0 "독일군은 전설적인 자유군단 3사단을 받게 될 것입니다!"
