--- a/localisation/grk_focus_l_english.yml
+++ b/localisation/grk_focus_l_english.yml
@@ -1,130 +1,126 @@
 ﻿l_english:
-  GRK_industry:0 "민간 공장 개선"
-  GRK_industry_desc:0 "독일 해체 이후 우리 산업은 엄청난 고통을 겪었습니다. 시계처럼 정교히 생산되도록 맞춰진 체계가 지금 난장판입니다. 버려진 공장을 복원하고 기존 공장에 보조금을 지급해야 합니다."
-  GRK_recover_civil_war:0 "내전으로부터의 회복"
-  GRK_recover_civil_war_desc:0 "독일 내전은 15년 전 일이지만 그 영향은 아직도 우리 마음속에 생생합니다. 우리는 파괴적인 내전에서 회복하는 것을 끝내야 과거를 뒤로 할 수 있습니다."
-  GRK_extra_slot:0 "연구 역량 확대"
-  GRK_extra_slot_desc:0 "우리 산업은 첨단 기술력으로 연구 역량을 확장할 수 있는 수준까지 발전했습니다."
-  GRK_infra:0 "시골 지역 개발"
-  GRK_infra_desc:0 "가장 발달한 도시에도 시골 변두리가 있습니다. 이 시골 변두리는 우리의 기반시설을 확장하기에 절대적으로 완벽합니다."
-  GRK_dockyard:0 "조선소 개선"
-  GRK_dockyard_desc:0 "우리 해안은 개발이 절실한 상태입니다. 해군력을 보다 효율적으로 확충하기 위해서는 해군 수송능력을 향상시켜야 합니다."
-  GRK_economic_policies:0 "경제 개혁"
-  GRK_economic_policies_desc:0 "파리 증시 폭락 이후 우리 경제는 난장판이 됐습니다. 이번 경제 참사에서 벗어나기 위해서는 개혁입법이 필요합니다."
-  GRK_nationalize_industry:0 "산업 국유화"
-  GRK_nationalize_industry_desc:0 "우리 공기업은 비효율적이고 불안정합니다. 우리는 우리 나라의 모든 산업을 국유화시켜야 합니다. 우리 경제의 이익을 위해서 말입니다."
-  GRK_free_trade:0 "자유방임주의 경제학"
-  GRK_free_trade_desc:0 "산업 국유화는 분명히 우리 경제를 위해 갈 길이 아닙니다. 한 발 물러서서 업계가 원하는 대로 하게 해야 합니다. 규제가 줄어들면 결국 생산성이 높아집니다."
-  GRK_closed_economy:0 "외국 투자 금지"
-  GRK_closed_economy_desc:0 "우리 경제는 외국의 영향 없이 잘 굴러가고 있습니다. 우리는 국가의 이익을 위해 경제 창구를 닫아야 합니다."
-  GRK_open_economy:0 "크라켄을 풀어라!"
-  GRK_open_economy_desc:0 "우리 경제는 이웃과 세계의 강대국에 크게 의존하고 있습니다. 폐쇄적인 경제는 우리 경제에 해로울 뿐입니다."
-  GRK_trade_with_GER:0 "프로이센을 독일의 후계로 인식"
-  GRK_trade_with_GER_desc:0 "프로이센은 분명 옛 독일의 계승자입니다. 그들에게는 우리의 전 통치자였던 호헨촐레른 가문이 있으며, 독일에서 가장 큰 경제와 군대를 가지고 있습니다. 우리는 그들과 함께해야 합니다."
-  GRK_german_investors:0 "프로이센 재정 지원"
-  GRK_german_investors_desc:0 "우리 경제가 파리 증시 폭락의 영향에서 완전히 회복된 것은 아닙니다. 프로이센 원조를 받으면 이 상황은 쉽게 바뀔 수 있습니다."
-  GRK_autobahn:0 "아우토반 연결"
-  GRK_autobahn_desc:0 "프로이센의 라이히스아우토반 계획은 독일 전역에 대규모 고속도로를 건설하기 위한 야심찬 계획입니다. 프로이센은 우리 나라로 진출하는 데 자금을 지원할 용의가 있습니다. 이 기회를 잡아야 합니다."
-  GRK_ger_advisors:0 "프로이센 군사 고문"
-  GRK_ger_advisors_desc:0 "전 독일 정부는 유럽에서 가장 강력한 군대 중 하나를 가지고 있었습니다. 프로이센이 그들의 후신이기 때문에, 그들은 우리의 군대를 향상시키고 확장하기에 완벽할 것입니다."
-  GRK_zollverein:0 "졸버린 가입"
-  GRK_zollverein_desc:0 "졸버린은 베를린 조약의 국가들 간의 경제 동맹입니다. 우리가 그들의 동맹에 합류할 준비가 되어 있지는 않지만, 졸바린에 합류하는 것은 올바른 방향으로 나아가는 단계입니다."
-  GRK_join_berlin:0 "베를린 조약 가입"
-  GRK_join_berlin_desc:0 "우리나라는 마침내 베를린 조약에 가입할 준비가 되었습니다. 마지막 단계는 회원 자격 신청입니다. 프러시아인들은 독일을 더 연결시킬 수 있는 이 기회를 거부한다면 절대적으로 멍청한 것입니다."
-  GRK_trade_BAV:0 "바이에른을 독일의 후신으로 인식"
-  GRK_trade_BAV_desc:0 "바이에른이 전 독일 정부의 후신인 것은 아주 명백합니다. 그들은 이웃에게 땅을 빼앗기지 않았고, 프로이센보다 훨씬 더 강력합니다. 우리는 그들과 함께해야 합니다."
-  GRK_bavarian_investors:0 "바이에른 산업 지원"
-  GRK_bavarian_investors_desc:0 "우리 경제가 파리 증시 폭락의 영향에서 완전히 회복된 것은 아닙니다. 바이에른 원조를 받으면 이 상황은 쉽게 변할 수 있습니다."
-  GRK_bavarian_advisors:0 "바이에른 군사 고문"
-  GRK_bavarian_advisors_desc:0 "바이에른 군대는 게릴라전과 방어의 절대적 천재입니다. 그들의 전술을 배움으로써, 우리는 우리나라를 쉽게 방어하고 보호할 수 있습니다."
-  GRK_steel_exports:0 "바이에른 보조금"
-  GRK_steel_exports_desc:0 "바이에른 경제는 강력하고 강합니다. 만약 그들이 우리 경제의 성장을 보조한다면, 우리 경제가 호황을 누리게 될 것입니다."
-  GRK_attend_workers_union:0 "공산주의 단체 촉진"
-  GRK_attend_workers_union_desc:0 "우리의 바이에른 친구들은 우리에게 완전히 친근한 것은 아닙니다. 그리고 한 가지 주된 이유는 우리는 아직 공산주의자가 아니라는 것입니다. 공산주의 이념을 선전한다면 우리 나라는 바이에른과 더욱 밀접하게 연결될 수 있을 것입니다."
-  GRK_join_comintern:0 "코민테른 가입"
-  GRK_join_comintern_desc:0 "우리나라가 마침내 바이에른과 밀접하게 연결되면서, 이제 마지막 단계인 공산주의 인터내셔널, 즉 짧게는 "코민테른"에 동참해야 할 때입니다. 바이에른인들이 독일을 더 연결시키기 위해 이러한 기회를 거절한다면 절대 바보일 것입니다."
-  GRK_international_trade:0 "중립 유지"
-  GRK_international_trade_desc:0 "만약 우리가 프로이센이나 바이에른과 함께한다면, 그것은 우리 자신을 둘 중 하나와 적으로 만들 것입니다. 유일한 논리적 선택은 중립을 유지하는 것입니다."
-  GRK_side_allies:0 "서부 연합과의 친선"
-  GRK_side_allies_desc:0 "독일은 프랑스나 영국과 가장 친한 친구가 아니었을지 모르지만, 우리는 독일이 아닙니다. 이 두 강대국과 친구가 되는 것이 유일한 유익한 해결책입니다."
-  GRK_befriend_FRA:0 "프랑스와의 친선"
-  GRK_befriend_FRA_desc:0 "프랑스인들이 독일 사람들과 항상 가장 친한 친구였던 것은 아니지만, 그건 문제가 되지 않습니다. 우리는 이전의 적들과 친구가 되어 이익을 얻어야 합니다."
-  GRK_befriend_ENG:0 "영국과의 친선"
-  GRK_befriend_ENG_desc:0 "영국인과 독일인은 꽤 많은 공통점을 가지고 있습니다. 하지만 중요한 것은 그들에게 독일인 왕이 있다는 것이고, 우리는 독일인이라는 것입니다. 결국 윈저 가문은 이전에는 하노버 가문이자 작센코부르크고타 가문이였습니다."
-  GRK_english_advisors:0 "영국 군사 고문"
-  GRK_english_advisors_desc:0 "세계 대전에서 대영제국은 우리를 이겼고, 그들은 논쟁의 여지가 없이 파도를 지배하고 있습니다. 그들의 군사 전술을 배우는 것이 우리의 가장 큰 이익입니다."
-  GRK_one_germany:0 "우리가 독일의 후신이다"
-  GRK_one_germany_desc:0 "바이에른과 프로이센은 누가 독일의 진정한 후신인가를 놓고 끊임없이 싸웁니다. 우리는 링에 우리의 모자를 던져야 합니다. 어떤 조치를 취해야 할 때입니다."
-  GRK_towards_reunification:0 "뭉쳐야 산다..."
-  GRK_towards_reunification_desc:0 "우리의 지배하에 독일을 통합하기 위해서는 옛 독일 제국의 영토를 요구할 필요가 있습니다. 우리는 독일을 다시 한번 단결시킬 것입니다."
-  GRK_prepare_war:0 "흩어지면 죽는다..."
-  GRK_prepare_war_desc:0 "독일은 분열된 나라입니다. 천년 전, 로마와 몽골은 이런 방법을 거대한 제국을 얻었습니다. 디비데 에트 임페라: 나누어라 그리고 통치하라. 우리는 이처럼 독일을 다시 얻을 것입니다."
-  GRK_civil_effort:0 "민간 공장 확장"
-  GRK_civil_effort_desc:0 "우리 민간 산업은 혼란에 빠져 있습니다. 공장 증설과 개보수 등을 통해 파리 증시 폭락에서 회복하는 데 한 발짝 더 다가섰습니다."
-  GRK_milit_effort:0 "군수 공장 확장"
-  GRK_milit_effort_desc:0 "고군분투하는 군대의 확대와 확대를 위해서는 군사공장을 확충해야 합니다. 이런 중요한 공장들이 없다면 우리나라는 보급이 부족하고 장비가 부족한 군대를 갖게 될 것입니다."
-  GRK_economic_boom:0 "회복 종결"
-  GRK_economic_boom_desc:0 "파리 증시 폭락에서 드디어 회복했습니다. 지금 우리 경제가 수년 전처럼 정교하게 조정된 상황에서, 우리는 마침내 경제 위기의 종말을 선언할 수 있습니다."
-  GRK_french_advisors:0 "프랑스 군사 고문"
-  GRK_french_advisors_desc:0 "프랑스는 최고의 군대를 가지고 있지 않을지 모르지만, 그들은 확실히 우리보다 더 나은 군대를 가지고 있습니다. 우리는 그들이 최고는 아닐지라도 그들의 방법 중 몇 가지를 배워야 합니다."
-  GRK_proclaim_germany:0 "새로운 독일 선포"
-  GRK_proclaim_germany_desc:0 "우리는 마침내 우리의 지배하에 독일을 통합했습니다. 이제 남은 조국의 이름을 바꿔 통일을 마무리하는 단계밖에 남지 않았습니다. 제3제국 만세!"
-  GRK_proclaim_commi:0 "독일의 노동자들이여, 단결하라!"
-  GRK_proclaim_commi_desc:0 "우리는 마침내 실패한 바이에른 코뮌과 옛 독일의 잔당들을 교체했습니다. 드디어 조국의 이름을 바꿔 통일을 마무리 지을 때입니다. 제2 코뮌 만세!"
-  GRK_request_guarantee:0 "서방의 독립 보장을 요청"
-  GRK_request_guarantee_desc:0 "프로이센과 바이에른 모두 우리를 그들의 나라에 합병시키려 하고 있습니다. 만약 우리가 그들로부터 최후 통첩을 거절한다면, 그것은 우리의 끝일 것입니다. 우리는 우리나라의 안전을 위해 서방의 독립 보장을 요청해야 합니다."
-  GRK_fort_effort:0 "방어 계획"
-  GRK_fort_effort_desc:0 "우리가 방어 체계를 제대로 갖추는 것이 중요합니다. 요즘 같은 시대에는 전쟁이 갑자기 불붙을 수 있고, 우리는 반드시 대비해야 합니다."
-  GRK_new_trains:0 "기관차 주력"
-  GRK_new_trains_desc:0 "철도 용량을 향상시키기 위해서는 이미 완성된 철도에서 운행할 수 있는 보다 효율적인 열차를 개발해야 합니다. 이렇게 되면 우리 군의 이동속도는 물론 인프라 효율성도 높아질 것입니다."
-  GRK_world_recognition:0 "국제 인식 추진"
-  GRK_world_recognition_desc:0 "우리 나라는 많은 조약의 산물입니다. 불행하게도, 우리는 여전히 세계 공동체로부터 공식적으로 인정받은 적이 없습니다. 이제 우리가 그것을 바꿀 때입니다. 우리가 많이 필요로 하는 국제적 인정을 받는 가장 좋은 방법은 세계의 강대국들과 무역과 계약을 맺는 것입니다."
-  GRK_fascist:0 "국민주의 열정"
-  GRK_fascist_desc:0 "우리나라의 현 정권은 실패했습니다. 극좌는 우리 삶의 방식에 커다란 위협이 되고 있습니다. 유일한 해결책은 강력하고 안정적인 중앙 정부이고, 그것을 지지할 유일한 사람들은... 극우입니다."
-  GRK_freicorps:0 "재향 군인 소집"
-  GRK_freicorps_desc:0 "대전에 참전했던 우리 군의 참전용사들은 우리 군을 향상시키기 위해 다시 부르기에 완벽한 사람들입니다. 물론 이번에는 최고의 대우를 받도록 하겠습니다. 결국, 그들이 없었다면, 우리는 프랑스와 러시아에 의해 사라졌을 것입니다."
-  GRK_the_sr:0 "준군사조직 형성"
-  GRK_the_sr_desc:0 "우리 대국의 많은 사람들이 우리를 위해 기꺼이 싸우지만, 조약 규정 때문에 우리 군에 입대할 수 없습니다. 준군사조직은 분명히 조약의 중대한 허점이며, 우리는 그것을 이용해야만 합니다."
-  GRK_consolidate_power:0 "당권 통합"
-  GRK_consolidate_power_desc:0 "현재 우리 당은 우리나라 전역에 적이 많습니다. 우리는 우리의 반대피가...우릴 막으려고 하지 않도록 해야 합니다. 우리는...그들을 상대해야 합니다."
-  GRK_commi:0 "노동자 봉기"
-  GRK_commi_desc:0 "드디어 프롤레타리아에게 힘을 실어줘야 할 때입니다! 우리 노동자들은 이 억압적인 정권에 대항하여 반란을 일으켜 마침내 모든 노조의 꿈인 프롤레타리아 혁명을 이룩할 준비가 되어 있습니다."
-  GRK_purge_opposition:0 "반대파 숙청"
-  GRK_purge_opposition_desc:0 "비록 많은 우리의 정적들이 수감되고 다루어지지만, 우리의 감옥 체계 안에 있는 사람들 중 일부는 여전히 영향력을 가지고 있습니다. 비록 우리의 정적들을 죽이는 것이 제네바 협약에 위배된다 하더라도, 우리는 상관하지 않습니다. 지도력을 확보해야 합니다."
-  GRK_world_revolution:0 "세계 혁명 지속"
-  GRK_world_revolution_desc:0 "우리의 동지인 트로츠키는 세계 평화를 만들기 위해서는 세계 혁명이 필요하다고 몇 번이고 말했습니다. 지구상의 모든 나라가 공산주의의 붉은 깃발 아래 있을 때까지 우리는 세계혁명을 계속해야 합니다!"
-  GRK_demo:0 "민주적 총선거"
-  GRK_demo_desc:0 "우리 나라 국민들은 우리 나라의 지도력에 화가 나 있습니다. 그들은 민주주의를 원하고, 우리는 그 이유를 이해할 수 있습니다. 이제는 우리 지도자의 직책 사퇴와 공정하고 자유로운 민주주의 선거가 치러질 때입니다. 어쨌든, 그것은 서방과의 관계를 강화시킬 것입니다."
-  GRK_republicanism:0 "공화당의 가치 보장"
-  GRK_republicanism_desc:0 "우리나라는 이전에 군주제 하에 있었습니다. 다시는 그런 일이 없을 것입니다. 우리의 훌륭한 국가는 공화국이고, 그것은 시간이 끝날 때까지 그렇게 남을 것입니다! 공화국 만세!"
-  GRK_support_privatization:0 "민영화 지원"
-  GRK_support_privatization_desc:0 "우리 나라의 많은 기관들이 우리의 건강관리와 교육체계와 같은 공공 소유입니다. 자본주의로 나아가기 위해서는 우리나라의 민영화를 지지해야 합니다. 자본주의만이 앞으로 나아갈 수 있는 유일한 길입니다."
-  GRK_army_studies:0 "육군 주력"
-  GRK_army_studies_desc:0 "공중전과 해전의 가능성이 높아지고 있지만, 지상전은 내일의 전쟁에서 여전히 핵심입니다. 준비만 하면 참호의 지옥을 재현하는 것을 피할 수 있습니다."
-  GRK_equipment:0 "보병장비 주력"
-  GRK_equipment_desc:0 "보병이 옮길 수 있는 장비에 대한 한계는 끊임없이 추진되고 있습니다. 우리는 아군에게 가능한 최고의 도구를 제공하는 데 주력할 것입니다."
-  GRK_tank_studies:0 "기갑 주력"
-  GRK_tank_studies_desc:0 "차량화보병의 가능성을 다시 생각해 보면, 우리는 오늘날 어떤 차량을 건설할 수 있는지에 대한 한계를 뛰어넘을 수 있습니다. 예를 들어, 우리는 정예 기갑부대를 설립할 수 있습니다."
-  GRK_militarism:0 "군국주의 촉진"
-  GRK_militarism_desc:0 "군을 필요악으로 보는 사람들은 전쟁 앞에서 머뭇거릴 수밖에 없습니다. 우리는 군국주의를 우리 문화에 편입시켜 군인의 국민이 되도록 할 것입니다."
-  GRK_fighter_effort:0 "전투기 주력"
-  GRK_fighter_effort_desc:0 "군을 필요악으로 보는 사람들은 전쟁 앞에서 머뭇거릴 수밖에 없습니다. 우리는 군국주의를 우리 문화에 편입시켜 군인의 국민이 되도록 할 것입니다."
-  GRK_cas:0 "근접지상지원 주력"
-  GRK_cas_desc:0 "현대 군대는 지상뿐 아니라 공중에서도 차량의 지원이 필요합니다."
-  GRK_air_doctrines:0 "공군 교리 주력"
-  GRK_air_doctrines_desc:0 "우리는 공중전에서 새로운 이론을 더 빠른 속도로 시험할 수 있는 충분한 경험을 얻었습니다. 이를 통해 새로운 전술적, 전략적 가능성을 모색할 수 있을 것입니다. 공중전은 현대전의 핵심입니다."
-  GRK_ships:0 "해상 주력"
-  GRK_ships_desc:0 "우리 해군의 증설이 최우선 과제가 되어야 합니다. 사용 가능한 모든 자원을 새로운 조선소에 할당하고 경량함에 대한 연구를 실시합니다."
-
-
-  ger_civilwar.1.t:0 "프로이센과의 재통일"
-  ger_civilwar.1.d:0 "지난 1년 동안 우리는 프로이센인들과 긴밀하게 협력해왔습니다. 우리는 이제 바이에른을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 프로이센을 지원할 것입니다."
-  ger_civilwar.1.a:0 "프로이센과 함께하라."
-  ger_civilwar.1.b:0 "독립을 유지하라."
-  
-  ger_civilwar.2.t:0 "바이에른과의 재통일"
-  ger_civilwar.2.d:0 "지난 1년 동안 우리는 바이에른인들과 긴밀하게 협력해왔습니다. 우리는 이제 프로이센을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 남부 코뮌을 지원할 것입니다."
-  ger_civilwar.2.a:0 "바이에른과 함께하라."
-  ger_civilwar.2.b:0 "독립을 유지하라."
-  ####################
-  new_ger_united:0 "새로운 독일은 공식적으로 재통일될 것입니다."
+ GRK_industry:0 "민간 공장 개선"
+ GRK_industry_desc:0 "독일 해체 이후 우리 산업은 엄청난 고통을 겪었습니다. 시계처럼 정교히 생산되도록 맞춰진 체계가 지금 난장판입니다. 버려진 공장을 복원하고 기존 공장에 보조금을 지급해야 합니다."
+ GRK_recover_civil_war:0 "내전으로부터의 회복"
+ GRK_recover_civil_war_desc:0 "독일 내전은 15년 전 일이지만 그 영향은 아직도 우리 마음속에 생생합니다. 우리는 파괴적인 내전에서 회복하는 것을 끝내야 과거를 뒤로 할 수 있습니다."
+ GRK_extra_slot:0 "연구 역량 확대"
+ GRK_extra_slot_desc:0 "우리 산업은 첨단 기술력으로 연구 역량을 확장할 수 있는 수준까지 발전했습니다."
+ GRK_infra:0 "시골 지역 개발"
+ GRK_infra_desc:0 "가장 발달한 도시에도 시골 변두리가 있습니다. 이 시골 변두리는 우리의 기반시설을 확장하기에 절대적으로 완벽합니다."
+ GRK_dockyard:0 "조선소 개선"
+ GRK_dockyard_desc:0 "우리 해안은 개발이 절실한 상태입니다. 해군력을 보다 효율적으로 확충하기 위해서는 해군 수송능력을 향상시켜야 합니다."
+ GRK_economic_policies:0 "경제 개혁"
+ GRK_economic_policies_desc:0 "파리 증시 폭락 이후 우리 경제는 난장판이 됐습니다. 이번 경제 참사에서 벗어나기 위해서는 개혁입법이 필요합니다."
+ GRK_nationalize_industry:0 "산업 국유화"
+ GRK_nationalize_industry_desc:0 "우리 공기업은 비효율적이고 불안정합니다. 우리는 우리 나라의 모든 산업을 국유화시켜야 합니다. 우리 경제의 이익을 위해서 말입니다."
+ GRK_free_trade:0 "자유방임주의 경제학"
+ GRK_free_trade_desc:0 "산업 국유화는 분명히 우리 경제를 위해 갈 길이 아닙니다. 한 발 물러서서 업계가 원하는 대로 하게 해야 합니다. 규제가 줄어들면 결국 생산성이 높아집니다."
+ GRK_closed_economy:0 "외국 투자 금지"
+ GRK_closed_economy_desc:0 "우리 경제는 외국의 영향 없이 잘 굴러가고 있습니다. 우리는 국가의 이익을 위해 경제 창구를 닫아야 합니다."
+ GRK_open_economy:0 "크라켄을 풀어라!"
+ GRK_open_economy_desc:0 "우리 경제는 이웃과 세계의 강대국에 크게 의존하고 있습니다. 폐쇄적인 경제는 우리 경제에 해로울 뿐입니다."
+ GRK_trade_with_GER:0 "프로이센을 독일의 후계로 인식"
+ GRK_trade_with_GER_desc:0 "프로이센은 분명 옛 독일의 계승자입니다. 그들에게는 우리의 전 통치자였던 호헨촐레른 가문이 있으며, 독일에서 가장 큰 경제와 군대를 가지고 있습니다. 우리는 그들과 함께해야 합니다."
+ GRK_german_investors:0 "프로이센 재정 지원"
+ GRK_german_investors_desc:0 "우리 경제가 파리 증시 폭락의 영향에서 완전히 회복된 것은 아닙니다. 프로이센 원조를 받으면 이 상황은 쉽게 바뀔 수 있습니다."
+ GRK_autobahn:0 "아우토반 연결"
+ GRK_autobahn_desc:0 "프로이센의 라이히스아우토반 계획은 독일 전역에 대규모 고속도로를 건설하기 위한 야심찬 계획입니다. 프로이센은 우리 나라로 진출하는 데 자금을 지원할 용의가 있습니다. 이 기회를 잡아야 합니다."
+ GRK_ger_advisors:0 "프로이센 군사 고문"
+ GRK_ger_advisors_desc:0 "전 독일 정부는 유럽에서 가장 강력한 군대 중 하나를 가지고 있었습니다. 프로이센이 그들의 후신이기 때문에, 그들은 우리의 군대를 향상시키고 확장하기에 완벽할 것입니다."
+ GRK_zollverein:0 "졸버린 가입"
+ GRK_zollverein_desc:0 "졸버린은 베를린 조약의 국가들 간의 경제 동맹입니다. 우리가 그들의 동맹에 합류할 준비가 되어 있지는 않지만, 졸바린에 합류하는 것은 올바른 방향으로 나아가는 단계입니다."
+ GRK_join_berlin:0 "베를린 조약 가입"
+ GRK_join_berlin_desc:0 "우리나라는 마침내 베를린 조약에 가입할 준비가 되었습니다. 마지막 단계는 회원 자격 신청입니다. 프러시아인들은 독일을 더 연결시킬 수 있는 이 기회를 거부한다면 절대적으로 멍청한 것입니다."
+ GRK_trade_BAV:0 "바이에른을 독일의 후신으로 인식"
+ GRK_trade_BAV_desc:0 "바이에른이 전 독일 정부의 후신인 것은 아주 명백합니다. 그들은 이웃에게 땅을 빼앗기지 않았고, 프로이센보다 훨씬 더 강력합니다. 우리는 그들과 함께해야 합니다."
+ GRK_bavarian_investors:0 "바이에른 산업 지원"
+ GRK_bavarian_investors_desc:0 "우리 경제가 파리 증시 폭락의 영향에서 완전히 회복된 것은 아닙니다. 바이에른 원조를 받으면 이 상황은 쉽게 변할 수 있습니다."
+ GRK_bavarian_advisors:0 "바이에른 군사 고문"
+ GRK_bavarian_advisors_desc:0 "바이에른 군대는 게릴라전과 방어의 절대적 천재입니다. 그들의 전술을 배움으로써, 우리는 우리나라를 쉽게 방어하고 보호할 수 있습니다."
+ GRK_steel_exports:0 "바이에른 보조금"
+ GRK_steel_exports_desc:0 "바이에른 경제는 강력하고 강합니다. 만약 그들이 우리 경제의 성장을 보조한다면, 우리 경제가 호황을 누리게 될 것입니다."
+ GRK_attend_workers_union:0 "공산주의 단체 촉진"
+ GRK_attend_workers_union_desc:0 "우리의 바이에른 친구들은 우리에게 완전히 친근한 것은 아닙니다. 그리고 한 가지 주된 이유는 우리는 아직 공산주의자가 아니라는 것입니다. 공산주의 이념을 선전한다면 우리 나라는 바이에른과 더욱 밀접하게 연결될 수 있을 것입니다."
+ GRK_join_comintern:0 "코민테른 가입"
+ GRK_join_comintern_desc:0 "우리나라가 마침내 바이에른과 밀접하게 연결되면서, 이제 마지막 단계인 공산주의 인터내셔널, 즉 짧게는 \"코민테른\"에 동참해야 할 때입니다. 바이에른인들이 독일을 더 연결시키기 위해 이러한 기회를 거절한다면 절대 바보일 것입니다."
+ GRK_international_trade:0 "중립 유지"
+ GRK_international_trade_desc:0 "만약 우리가 프로이센이나 바이에른과 함께한다면, 그것은 우리 자신을 둘 중 하나와 적으로 만들 것입니다. 유일한 논리적 선택은 중립을 유지하는 것입니다."
+ GRK_side_allies:0 "서부 연합과의 친선"
+ GRK_side_allies_desc:0 "독일은 프랑스나 영국과 가장 친한 친구가 아니었을지 모르지만, 우리는 독일이 아닙니다. 이 두 강대국과 친구가 되는 것이 유일한 유익한 해결책입니다."
+ GRK_befriend_FRA:0 "프랑스와의 친선"
+ GRK_befriend_FRA_desc:0 "프랑스인들이 독일 사람들과 항상 가장 친한 친구였던 것은 아니지만, 그건 문제가 되지 않습니다. 우리는 이전의 적들과 친구가 되어 이익을 얻어야 합니다."
+ GRK_befriend_ENG:0 "영국과의 친선"
+ GRK_befriend_ENG_desc:0 "영국인과 독일인은 꽤 많은 공통점을 가지고 있습니다. 하지만 중요한 것은 그들에게 독일인 왕이 있다는 것이고, 우리는 독일인이라는 것입니다. 결국 윈저 가문은 이전에는 하노버 가문이자 작센코부르크고타 가문이였습니다."
+ GRK_english_advisors:0 "영국 군사 고문"
+ GRK_english_advisors_desc:0 "세계 대전에서 대영제국은 우리를 이겼고, 그들은 논쟁의 여지가 없이 파도를 지배하고 있습니다. 그들의 군사 전술을 배우는 것이 우리의 가장 큰 이익입니다."
+ GRK_one_germany:0 "우리가 독일의 후신이다"
+ GRK_one_germany_desc:0 "바이에른과 프로이센은 누가 독일의 진정한 후신인가를 놓고 끊임없이 싸웁니다. 우리는 링에 우리의 모자를 던져야 합니다. 어떤 조치를 취해야 할 때입니다."
+ GRK_towards_reunification:0 "뭉쳐야 산다..."
+ GRK_towards_reunification_desc:0 "우리의 지배하에 독일을 통합하기 위해서는 옛 독일 제국의 영토를 요구할 필요가 있습니다. 우리는 독일을 다시 한번 단결시킬 것입니다."
+ GRK_prepare_war:0 "흩어지면 죽는다..."
+ GRK_prepare_war_desc:0 "독일은 분열된 나라입니다. 천년 전, 로마와 몽골은 이런 방법을 거대한 제국을 얻었습니다. 디비데 에트 임페라: 나누어라 그리고 통치하라. 우리는 이처럼 독일을 다시 얻을 것입니다."
+ GRK_civil_effort:0 "민간 공장 확장"
+ GRK_civil_effort_desc:0 "우리 민간 산업은 혼란에 빠져 있습니다. 공장 증설과 개보수 등을 통해 파리 증시 폭락에서 회복하는 데 한 발짝 더 다가섰습니다."
+ GRK_milit_effort:0 "군수 공장 확장"
+ GRK_milit_effort_desc:0 "고군분투하는 군대의 확대와 확대를 위해서는 군사공장을 확충해야 합니다. 이런 중요한 공장들이 없다면 우리나라는 보급이 부족하고 장비가 부족한 군대를 갖게 될 것입니다."
+ GRK_economic_boom:0 "회복 종결"
+ GRK_economic_boom_desc:0 "파리 증시 폭락에서 드디어 회복했습니다. 지금 우리 경제가 수년 전처럼 정교하게 조정된 상황에서, 우리는 마침내 경제 위기의 종말을 선언할 수 있습니다."
+ GRK_french_advisors:0 "프랑스 군사 고문"
+ GRK_french_advisors_desc:0 "프랑스는 최고의 군대를 가지고 있지 않을지 모르지만, 그들은 확실히 우리보다 더 나은 군대를 가지고 있습니다. 우리는 그들이 최고는 아닐지라도 그들의 방법 중 몇 가지를 배워야 합니다."
+ GRK_proclaim_germany:0 "새로운 독일 선포"
+ GRK_proclaim_germany_desc:0 "우리는 마침내 우리의 지배하에 독일을 통합했습니다. 이제 남은 조국의 이름을 바꿔 통일을 마무리하는 단계밖에 남지 않았습니다. 제3제국 만세!"
+ GRK_proclaim_commi:0 "독일의 노동자들이여, 단결하라!"
+ GRK_proclaim_commi_desc:0 "우리는 마침내 실패한 바이에른 코뮌과 옛 독일의 잔당들을 교체했습니다. 드디어 조국의 이름을 바꿔 통일을 마무리 지을 때입니다. 제2 코뮌 만세!"
+ GRK_request_guarantee:0 "서방의 독립 보장을 요청"
+ GRK_request_guarantee_desc:0 "프로이센과 바이에른 모두 우리를 그들의 나라에 합병시키려 하고 있습니다. 만약 우리가 그들로부터 최후 통첩을 거절한다면, 그것은 우리의 끝일 것입니다. 우리는 우리나라의 안전을 위해 서방의 독립 보장을 요청해야 합니다."
+ GRK_fort_effort:0 "방어 계획"
+ GRK_fort_effort_desc:0 "우리가 방어 체계를 제대로 갖추는 것이 중요합니다. 요즘 같은 시대에는 전쟁이 갑자기 불붙을 수 있고, 우리는 반드시 대비해야 합니다."
+ GRK_new_trains:0 "기관차 주력"
+ GRK_new_trains_desc:0 "철도 용량을 향상시키기 위해서는 이미 완성된 철도에서 운행할 수 있는 보다 효율적인 열차를 개발해야 합니다. 이렇게 되면 우리 군의 이동속도는 물론 인프라 효율성도 높아질 것입니다."
+ GRK_world_recognition:0 "국제 인식 추진"
+ GRK_world_recognition_desc:0 "우리 나라는 많은 조약의 산물입니다. 불행하게도, 우리는 여전히 세계 공동체로부터 공식적으로 인정받은 적이 없습니다. 이제 우리가 그것을 바꿀 때입니다. 우리가 많이 필요로 하는 국제적 인정을 받는 가장 좋은 방법은 세계의 강대국들과 무역과 계약을 맺는 것입니다."
+ GRK_fascist:0 "국민주의 열정"
+ GRK_fascist_desc:0 "우리나라의 현 정권은 실패했습니다. 극좌는 우리 삶의 방식에 커다란 위협이 되고 있습니다. 유일한 해결책은 강력하고 안정적인 중앙 정부이고, 그것을 지지할 유일한 사람들은... 극우입니다."
+ GRK_freicorps:0 "재향 군인 소집"
+ GRK_freicorps_desc:0 "대전에 참전했던 우리 군의 참전용사들은 우리 군을 향상시키기 위해 다시 부르기에 완벽한 사람들입니다. 물론 이번에는 최고의 대우를 받도록 하겠습니다. 결국, 그들이 없었다면, 우리는 프랑스와 러시아에 의해 사라졌을 것입니다."
+ GRK_the_sr:0 "준군사조직 형성"
+ GRK_the_sr_desc:0 "우리 대국의 많은 사람들이 우리를 위해 기꺼이 싸우지만, 조약 규정 때문에 우리 군에 입대할 수 없습니다. 준군사조직은 분명히 조약의 중대한 허점이며, 우리는 그것을 이용해야만 합니다."
+ GRK_consolidate_power:0 "당권 통합"
+ GRK_consolidate_power_desc:0 "현재 우리 당은 우리나라 전역에 적이 많습니다. 우리는 우리의 반대피가...우릴 막으려고 하지 않도록 해야 합니다. 우리는...그들을 상대해야 합니다."
+ GRK_commi:0 "노동자 봉기"
+ GRK_commi_desc:0 "드디어 프롤레타리아에게 힘을 실어줘야 할 때입니다! 우리 노동자들은 이 억압적인 정권에 대항하여 반란을 일으켜 마침내 모든 노조의 꿈인 프롤레타리아 혁명을 이룩할 준비가 되어 있습니다."
+ GRK_purge_opposition:0 "반대파 숙청"
+ GRK_purge_opposition_desc:0 "비록 많은 우리의 정적들이 수감되고 다루어지지만, 우리의 감옥 체계 안에 있는 사람들 중 일부는 여전히 영향력을 가지고 있습니다. 비록 우리의 정적들을 죽이는 것이 제네바 협약에 위배된다 하더라도, 우리는 상관하지 않습니다. 지도력을 확보해야 합니다."
+ GRK_world_revolution:0 "세계 혁명 지속"
+ GRK_world_revolution_desc:0 "우리의 동지인 트로츠키는 세계 평화를 만들기 위해서는 세계 혁명이 필요하다고 몇 번이고 말했습니다. 지구상의 모든 나라가 공산주의의 붉은 깃발 아래 있을 때까지 우리는 세계혁명을 계속해야 합니다!"
+ GRK_demo:0 "민주적 총선거"
+ GRK_demo_desc:0 "우리 나라 국민들은 우리 나라의 지도력에 화가 나 있습니다. 그들은 민주주의를 원하고, 우리는 그 이유를 이해할 수 있습니다. 이제는 우리 지도자의 직책 사퇴와 공정하고 자유로운 민주주의 선거가 치러질 때입니다. 어쨌든, 그것은 서방과의 관계를 강화시킬 것입니다."
+ GRK_republicanism:0 "공화당의 가치 보장"
+ GRK_republicanism_desc:0 "우리나라는 이전에 군주제 하에 있었습니다. 다시는 그런 일이 없을 것입니다. 우리의 훌륭한 국가는 공화국이고, 그것은 시간이 끝날 때까지 그렇게 남을 것입니다! 공화국 만세!"
+ GRK_support_privatization:0 "민영화 지원"
+ GRK_support_privatization_desc:0 "우리 나라의 많은 기관들이 우리의 건강관리와 교육체계와 같은 공공 소유입니다. 자본주의로 나아가기 위해서는 우리나라의 민영화를 지지해야 합니다. 자본주의만이 앞으로 나아갈 수 있는 유일한 길입니다."
+ GRK_army_studies:0 "육군 주력"
+ GRK_army_studies_desc:0 "공중전과 해전의 가능성이 높아지고 있지만, 지상전은 내일의 전쟁에서 여전히 핵심입니다. 준비만 하면 참호의 지옥을 재현하는 것을 피할 수 있습니다."
+ GRK_equipment:0 "보병장비 주력"
+ GRK_equipment_desc:0 "보병이 옮길 수 있는 장비에 대한 한계는 끊임없이 추진되고 있습니다. 우리는 아군에게 가능한 최고의 도구를 제공하는 데 주력할 것입니다."
+ GRK_tank_studies:0 "기갑 주력"
+ GRK_tank_studies_desc:0 "차량화보병의 가능성을 다시 생각해 보면, 우리는 오늘날 어떤 차량을 건설할 수 있는지에 대한 한계를 뛰어넘을 수 있습니다. 예를 들어, 우리는 정예 기갑부대를 설립할 수 있습니다."
+ GRK_militarism:0 "군국주의 촉진"
+ GRK_militarism_desc:0 "군을 필요악으로 보는 사람들은 전쟁 앞에서 머뭇거릴 수밖에 없습니다. 우리는 군국주의를 우리 문화에 편입시켜 군인의 국민이 되도록 할 것입니다."
+ GRK_fighter_effort:0 "전투기 주력"
+ GRK_fighter_effort_desc:0 "군을 필요악으로 보는 사람들은 전쟁 앞에서 머뭇거릴 수밖에 없습니다. 우리는 군국주의를 우리 문화에 편입시켜 군인의 국민이 되도록 할 것입니다."
+ GRK_cas:0 "근접지상지원 주력"
+ GRK_cas_desc:0 "현대 군대는 지상뿐 아니라 공중에서도 차량의 지원이 필요합니다."
+ GRK_air_doctrines:0 "공군 교리 주력"
+ GRK_air_doctrines_desc:0 "우리는 공중전에서 새로운 이론을 더 빠른 속도로 시험할 수 있는 충분한 경험을 얻었습니다. 이를 통해 새로운 전술적, 전략적 가능성을 모색할 수 있을 것입니다. 공중전은 현대전의 핵심입니다."
+ GRK_ships:0 "해상 주력"
+ GRK_ships_desc:0 "우리 해군의 증설이 최우선 과제가 되어야 합니다. 사용 가능한 모든 자원을 새로운 조선소에 할당하고 경량함에 대한 연구를 실시합니다."
+ ger_civilwar.1.t:0 "프로이센과의 재통일"
+ ger_civilwar.1.d:0 "지난 1년 동안 우리는 프로이센인들과 긴밀하게 협력해왔습니다. 우리는 이제 바이에른을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 프로이센을 지원할 것입니다."
+ ger_civilwar.1.a:0 "프로이센과 함께하라."
+ ger_civilwar.1.b:0 "독립을 유지하라."
+ ger_civilwar.2.t:0 "바이에른과의 재통일"
+ ger_civilwar.2.d:0 "지난 1년 동안 우리는 바이에른인들과 긴밀하게 협력해왔습니다. 우리는 이제 프로이센을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 남부 코뮌을 지원할 것입니다."
+ ger_civilwar.2.a:0 "바이에른과 함께하라."
+ ger_civilwar.2.b:0 "독립을 유지하라."
+ new_ger_united:0 "새로운 독일은 공식적으로 재통일될 것입니다."
