--- a/localisation/hun_names_localisation_l_english.yml
+++ b/localisation/hun_names_localisation_l_english.yml
@@ -1,13 +1,10 @@
 ﻿l_english:
-HUN_greater_state_neutrality_:0 "Greater Hungary"
-HUN_greater_state_fascism_:0 "Greater Hungary"
-HUN_greater_state_democratic_:0 "The Hungarian Federal Republic"
-HUN_greater_state_communism_:0 "The Balkan Socialist Union"
-HUN_greater_state_socialist_:0 "The Balkan Socialist Union"
-AUS_HUN_socialist_autonomy_dominion_:0 "Austrian People's Republic"
-AUS_HUN_socialist_autonomy_colony_:0 "Socialist Republic of Austria"
-AUS_HUN_socialist_autonomy_puppet_:0 "Austrian Democratic Republic"
-AUS_HUN_socialist_autonomy_integrated_puppet_:0 "Austrian HSR"
-
-
-
+ HUN_greater_state_neutrality_:0 "대헝가리"
+ HUN_greater_state_fascism_:0 "대헝가리"
+ HUN_greater_state_democratic_:0 "헝가리 연방공화국"
+ HUN_greater_state_communism_:0 "발칸 사회주의 연방"
+ HUN_greater_state_socialist_:0 "발칸 사회주의 연방"
+ AUS_HUN_socialist_autonomy_dominion_:0 "오스트리아 인민공화국"
+ AUS_HUN_socialist_autonomy_colony_:0 "오스트리아 사회주의 공화국"
+ AUS_HUN_socialist_autonomy_puppet_:0 "오스트리아 민주 공화국"
+ AUS_HUN_socialist_autonomy_integrated_puppet_:0 "Austrian HSR"
