--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -38,7 +38,7 @@
  LOADING_TIP_37:0 "땀을 흘려 피를 구하고, 피를 흘려 생명을 구하지만, 뛰어난 두뇌는 둘 다 구한다. \n- 에르빈 롬멜"
  LOADING_TIP_39:0 "나는 유럽의 평화와 안정은 이제 회복되었다고 믿는다.\n네빌 체임벌린, 독일 제국의 재통일 후."
  LOADING_TIP_40:0 "적 폭격기는 루르에 도달할 수 없다. 한 기라도 그럴 수 있다면 난 괴링이 아니다. 마이어라고 불러라.\n- 헤르만 괴링"
- LOADING_TIP_41:0 "이렇게 유능한 동맹국과 함께라면 우리는 이 전쟁에서 질 수 없다." 일본의 블라디바스톡 공습에 대해 말하는 빌헬름 3세 (1941년 12월)"
+ LOADING_TIP_41:0 "이렇게 유능한 동맹국과 함께라면 우리는 이 전쟁에서 질 수 없다.\" 일본의 블라디바스톡 공습에 대해 말하는 빌헬름 3세 (1941년 12월)"
  LOADING_TIP_42:0 "미국, 영국과 전쟁을 시작한 첫 6~12개월 간은 승리할 수 있을 것이다. 그 후에는, 성공을 장담할 수 없다.\n- 야마모토 이소로쿠"
  LOADING_TIP_43:0 "설령 지뢰밭을 마주쳐도, 우리의 보병들은 개의치 않고 공격할 것이다. \n- 게오르기 주코프"
  LOADING_TIP_44:0 "러시아의 거대함은 우리가 헤아릴 수가 없다... 사단 12개를 쳐부술 때마다 또 다른 사단 12개가 나타난다.\n- 프란츠 할더"
@@ -78,5 +78,5 @@
  LOADING_TIP_84:0 "사람을 지키고, 땅을 잃으면 땅을 다시 되찾을 수 있지만. 땅을 지키고, 사람을 잃으면 땅과 사람 모두 잃는 것이다.\n- 마오쩌둥"
  LOADING_TIP_85:0 "나는 작은 루마니아의 낙원에서 살기보다 대루마니아의 늪지에서 죽기를 바란다.\n- 이온 안토네스쿠"
  LOADING_TIP_86:0 "국민들은 다른 무엇도 아닌, 무엇이 그들을 대표하는지만을 신경쓴다.\n- 이온 안토네스쿠"
- LOADING_TIP_87:0 ""나의 장관들은 친독주의자, 내 아내는 친이탈리아, 내 국민은 친러주의자들이다. 나는 이 나라에서 유일한 중립이다."\n - 불가리아의 보리스 3세"
+ LOADING_TIP_87:0 "\"나의 장관들은 친독주의자, 내 아내는 친이탈리아, 내 국민은 친러주의자들이다. 나는 이 나라에서 유일한 중립이다.\"\n - 불가리아의 보리스 3세"
  LOADING_TIP_88:0 "맥주를 진정으로 사랑하는 여자를 내게 주면 나는 세계를 정복할 것이다.\n - 카이저 빌헬름 2세"
