--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -90,7 +90,7 @@
  RUS_fix_roads:0 "서부 기반시설 개선"
  RUS_fix_roads_desc:0 "러시아의 서반부는 동반부보다 더 발달되어 있을지 모르지만, 이 지역에 사는 사람들이 많기에 이따금씩 도로의 유지보수를 할 필요성이 있습니다."
  RUS_support_tsar:0 "니콜라이의 후계자"
- RUS_support_tsar_desc:0 "니콜라스 2세가 죽었으니 후계자를 찾아야 할 때입니다. 보통은 쉬워야 하지만, 전 차르의 맏아들 알렉세이는 혈우병 때문에 어린 나이에 죽었습니다. 홀슈타인-고토프-로마노프 가문에서 다음으로 가까운 친척은 안드레이 블라디미로비치 대공입니다." 
+ RUS_support_tsar_desc:0 "니콜라스 2세가 죽었으니 후계자를 찾아야 할 때입니다. 보통은 쉬워야 하지만, 전 차르의 맏아들 알렉세이는 혈우병 때문에 어린 나이에 죽었습니다. 홀슈타인-고토프-로마노프 가문에서 다음으로 가까운 친척은 안드레이 블라디미로비치 대공입니다."
  RUS_chancellor:0 "수상에게 권력 부여"
  RUS_chancellor_desc:0 "우리 정부는 전통적으로 차르로 대표되어 왔습니다. 그러나 우리 제국에 새로운 시대가 열렸으니, 이제는 차르를 정치보다는 상징적인 위치로 바꿀 때가 되었는지도 모릅니다."
  RUS_restore_empire:0 "러시아 모국 확장"
@@ -220,7 +220,7 @@
  RUS_release_sakhalin:0 "사할린 할양"
  RUS_release_sakhalin_desc:0 "북사할린은 우리에게 문제가 되기만 했습니다. 그 지역은 너무나도 많은 일본 사람들로 가득 차 있고, 이제 그들은 고국의 품으로 돌아갈 때가 되었습니다. 일본인들에게 그들의 섬을 주어야 합니다. 사할린이 무슨 소용이 있겠습니까?"
  RUS_reclaim_TUR:0 "차르그라드 수복"
- RUS_reclaim_TUR_desc:0 "그 저주받은 튀르크인들은 그들의 "청년 튀르크 반란"동안 우리에게서 차르그라드를 훔쳤습니다. 글쎄, 그건 상관 없습니다. 우리는 그 터키 놈들을 제자리로 보내버려야 합니다. 차르그라드는 다시 한 번 우리의 것이 될 것입니다. 그리고 어쩌면 흑해 연안 지역을 조금 더 얻을 수 있을 지도 모릅니다."
+ RUS_reclaim_TUR_desc:0 "그 저주받은 튀르크인들은 그들의 \"청년 튀르크 반란\"동안 우리에게서 차르그라드를 훔쳤습니다. 글쎄, 그건 상관 없습니다. 우리는 그 터키 놈들을 제자리로 보내버려야 합니다. 차르그라드는 다시 한 번 우리의 것이 될 것입니다. 그리고 어쩌면 흑해 연안 지역을 조금 더 얻을 수 있을 지도 모릅니다."
  RUS_claim_USA:0 "알래스카 수복"
  RUS_claim_USA_desc:0 "알래스카는 우리가 미국에 팔기 전까지 러시아의 식민지였습니다. 우리 제국이 한창인 지금, 특히 우리가 분열된 미국인들을 쉽게 물리칠 수 있기 때문에, 알라스카의 소유권 주장을 더 이상 억누르는 것은 말이 되지 않습니다."
  RUS_frontline_commissars:0 "최전선 장교"
@@ -259,13 +259,11 @@
  RUS_bomber_desc:0 "정밀폭격을 할 수 있는 능력은 우리가 그 궤도에 있는 어떤 국가의 전쟁기계를 멈추게 할 것입니다. 일류신 설계국은 그러한 기술을 제공했으므로, 그들은 계약을 받을 자격이 있습니다."
  RUS_tsar_speech:0 "새 두마 선출"
  RUS_tsar_speech_desc:0 "새 차르 미하일 2세의 통치 하에 새 정부를 선택하고 제국 두마의 관료들을 선출해야 합니다. 무엇이 잘못될 수 있을까요?"
- #RUS_tsar_speech:0 "The New Tsar's Speech"
- #RUS_tsar_speech_desc:0 "My fellow Russians, it is with great sorrow that our former Tsar, Nicholas II, of Holstein-Gottorp-Romanov, has recently died. With that being said, I, Mikhail, the brother of Nicholas II, am proud to be the next Russian Tsar. I can promise you that my rule will be a great and eventful one. God bless Russia, and God bless you all!"
  RUS_slot_2:0 "연구 슬롯 II"
  RUS_slot_2_desc:0 "우리의 군사과학은 연구역량을 확장할 수 있을 정도로 발전했습니다. 이 기회를 잡지 않는다면 우리는 바보일 것입니다."
  RUS_expand_navy:0 "아드미랄티 조선소 확장"
  RUS_expand_navy_desc:0 "우리는 해군력 발전을 지원하기 위해 아드미랄티 조선소에 더 많이 투자해야 합니다."
- RUS_strengthen_leadership:0 "강한 지도력" 
+ RUS_strengthen_leadership:0 "강한 지도력"
  RUS_strengthen_leadership_desc:0 "우리의 지도자는 러시아 전역에 많은 적들을 두고 있습니다. 그들이 지도자를 타도하기 전에 제거될 필요가 있습니다. 그렇지 않으면, 우리는 우리가 시작했던 것보다 더 나쁜 지경에 처하게 될지도 모릅니다."
  RUS_military_science:0 "군사과학"
  RUS_military_science_desc:0 "우리의 군사과학은 연구역량을 확장할 수 있을 정도로 발전했습니다. 이 기회를 잡지 않는다면 우리는 바보일 것입니다."
@@ -319,3 +317,5 @@
  RUS_world_revolution_desc:0 "러시아에서 위대한 노동자 혁명이 성공했습니다! 우리는 여기서 멈추지 않을 것입니다. 모든 노동자들은 붉은 별 아래서 해방되고 다시 뭉쳐야 합니다! 프롤레타리아 만세."
  RUS_annex_BUK:0 "부하라 합병"
  RUS_annex_BUK_desc:0 "부하라 토후국은 중앙아시아의 러시아 위성국이었습니다. 그것은 아프가니스탄과 영국령 인도에 대한 우리의 완충제입니다. 이제 우리가 더 강해진 이상 영국인들에게 도전할 수 있습니다. 부하라를 러시아에 합병하고 통합함으로써, 우리는 아프가니스탄과 이란으로 가는 더 쉬운 통로를 얻을 수 있을 것입니다."
+ RUS_dnepr_line:0 "헤르손-리가 선"
+ RUS_dnepr_line_desc:0 "우리 전선의 방어를 잃었습니다, 반드시 흑해에서 발트해까지 이르는 새 방어선을 건설하고 후퇴해야 합니다."
