--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english: 
+﻿l_english:
  STATE_1:0 "코르시카"
  STATE_2:0 "라티움"
  STATE_3:0 "로만디"
@@ -49,7 +49,7 @@
  STATE_48:0 "소피아"
  STATE_49:0 "앙카라"
  STATE_50:0 "뷔르템베르크"
- STATE_51:0 "루르" #Rhineland
+ STATE_51:0 "루르"
  STATE_52:0 "오버바이에른"
  STATE_53:0 "니더바이에른"
  STATE_54:0 "프랑켄"
@@ -141,7 +141,7 @@
  STATE_140:0 "베스테르예틀란드"
  STATE_141:0 "스베알란드"
  STATE_142:0 "베스틀란데트"
- STATE_143:1 "트뢰넬라그"
+ STATE_143:0 "트뢰넬라그"
  STATE_144:0 "노르 노르게"
  STATE_145:0 "올란드"
  STATE_146:0 "카렐리야"
@@ -760,7 +760,6 @@
  STATE_759:1 "쿤룬산"
  STATE_760:0 "다반청"
  STATE_761:0 "후룬베이얼"
- STATE_762:0 "실레지아"
  STATE_762:1 "카토비츠"
  STATE_763:0 "쾨니히스베르크"
  STATE_764:0 "서바나트"
