--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-cc_leader:0 "장군"
+ cc_leader:0 "장군"
  fm_leader:0 "원수"
  navy_leader:0 "제독"
  operative_skill_1:0 "신병"
@@ -590,13 +590,13 @@ cc_leader:0 "장군"
  torpedo_expert:0 "어뢰 전문가"
  torpedo_expert_desc:0 "§L8km 거리에서 상대각 72도, 25노트 속도로 항해하는 함정을 공격하는 것은 정말 간단한 수학일 뿐입니다.§!"
  loading_drill_master:0 "재장전 훈련의 대가"
- loading_drill_master_desc:0 "§L"다시 쏴! 아직 안 죽었잖아!"§!"
+ loading_drill_master_desc:0 "§L\"다시 쏴! 아직 안 죽었잖아!\"§!"
  hunter_killer:0 "탐지격침가"
  hunter_killer_desc:0 "§L고양이와 쥐의 지독한 싸움이라고 치면, 이 장교는 분명히 고양이일 것입니다.§!"
  marksman:0 "명사수"
- marksman_desc:0 "§L"함미쪽 0.5미터, 탄약고가 있는 곳에 곧장 다시 발사!"§!"
+ marksman_desc:0 "§L\"함미쪽 0.5미터, 탄약고가 있는 곳에 곧장 다시 발사!\"§!"
  crisis_magician:0 "위기관리의 마술사"
- crisis_magician_desc:0 "§L"함장님, 복수관이 고장났습니다. 통상 최소 6주나 걸릴테지만 저는 3시간 안에 고칠 수 있습니다."§!"
+ crisis_magician_desc:0 "§L\"함장님, 복수관이 고장났습니다. 통상 최소 6주나 걸릴테지만 저는 3시간 안에 고칠 수 있습니다.\"§!"
  fighter_director:0 "전투기 통솔가"
  fighter_director_desc:0 "§L이 장교만 있다면 하늘은 우리에게 우호적이거나, 적어도 중립적입니다.§!"
  torpedo_bomber:0 "뇌격기"
@@ -622,7 +622,7 @@ cc_leader:0 "장군"
  caustic_personality:0 "독설가"
  caustic_personality_desc:0 "§L이 장교는 많은 사람들에게 퍽 껄끄럽습니다.§!"
  craven:0 "비겁자"
- craven_desc:0 "§L"적이 더 접근하면 교전 개시. 좀 더 많이 다가오면."§!"
+ craven_desc:0 "§L\"적이 더 접근하면 교전 개시. 좀 더 많이 다가오면.\"§!"
  naval_lineage:0 "해군 혈통"
  naval_lineage_desc:0 "§L배 한 척을 만드는데 3년. 전통 하나를 만드는데 300년.§!"
  navy_media_personality:0 "유명인"
@@ -633,7 +633,7 @@ cc_leader:0 "장군"
  strict_austerity_adherent:0 "엄격한 긴축 지지자"
  dive_bomber_desc:0 "§L급강하 폭격기 활용 전문가.§!"
  defeatist:0 "패배주의자"
- little_churchill:0 ""작은 처칠""
+ little_churchill:0 "\"작은 처칠\""
  wilhelmina:0 "빌헬미나"
  disdain_for_politicians_1:0 "정치인들과의 단절"
  disdain_for_politicians_2:0 "정치인들과의 단절"
@@ -750,5 +750,3 @@ cc_leader:0 "장군"
  operative_escape_artist_desc:0 "이 요원을 가두어 놓을 수 있는 감옥은 아직 없습니다."
  operative_demolition_expert:0 "파괴 공작 전문가"
  operative_demolition_expert_desc:0 "이 요원은 무언가를 다양한 방법으로 터뜨려버리는 데에 익숙합니다."
-
- 
