--- a/localisation/tur_events_l_english.yml
+++ b/localisation/tur_events_l_english.yml
@@ -1,5 +1,4 @@
-﻿ l_english:
-  ####### DOMESTIC ######
+﻿l_english:
  ottodome.1.t:0 "밀레트가 지즈야를 내도록 강요하는가?"
  ottodome.1.d:0 "딤미 또는 '보호받는 자'는 밀레트와 이슬람교 정복체계의 오래된 부분입니다. 그러나 사람들을 보호하기 위해 오스만 제국은 그들에게 제국의 비이슬람 거주자들에게 부과되는 세금인 지즈야를 지불하도록 강요했습니다. 우리 회원들 중 일부는 이렇게 잔인하고 부당하다고 말하는 반면, 다른 보수주의자들은 비 이슬람 주민들에 대한 지즈야를 요구하고 있습니다. 어떻게 진행하면 좋겠습니까?"
  ottodome.1.a:0 "훌륭한 제안이다!"
@@ -13,7 +12,6 @@
  ottodome.4.a:0 "오랜 옛날부터 그래왔다. (수도 천도 및 이름 변경)"
  ottodome.4.b:0 "앙카라는 터키의 수도다."
  ottodome.4.c:0 "이스탄불은 터키인들의 진정한 수도다. (수도 천도)"
- ####### NEWS ######
  ottodome.99.t:0 "청년 튀르크 반란"
  ottodome.99.d:0 "콘스탄티노폴리스 봉기 혹은 대부분의 사람들이 알고 있듯이, 청년 튀르크 반란은 터키의 러시아 점령지 전역에서 터키와 아랍의 반란자들에 의해 수행되었습니다. 아르메니아 비무장지대에서의 폭력사태가 증가하자, 많은 사람들이 예레반이나 트빌리시에서 난민을 희망하며 러시아 국경을 넘어 도망쳤습니다. 콘스탄티노플 정교회에 있는 동안 시민들은 보스포루스 해협에 던져지고 러시아 건물들은 불타버렸습니다. 러시아의 지도자 차르 니콜라스 2세는 '터키 국민들은 지역 소수민족에 대한 그들의 행동을 후회할 것입니다'라고 발언하였습니다. 많은 사람들은 이것을 러시아의 개혁과 현대화에 대한 필요성 때문에 공허한 위협으로 인식하고 있습니다."
  ottodome.99.a:0 "유럽이 뜨거워지고 있다."
@@ -23,11 +21,9 @@
  ottodome.101.t:0 "수호위원회를 발족시킨 오스만 제국"
  ottodome.101.d:0 "오늘날 터키 정부는 '수호위원회'라고 불리는 이슬람 전문 학자들의 협의회를 설립했습니다. 아마도 의회의 임무는 샤리아 법이 제국 전역에 걸쳐 시행되고 시행되도록 하고, 무슬림 이외의 소수민족을 강제로 개종시키는 것입니다. 이 지역의 많은 나라들은 오스만 제국의 새로운 화신으로 전쟁을 준비하고 있습니다."
  ottodome.101.a:0 "이것은 좋게 끝날 수 없다..."
- ####### CONQUEST ######
  ottoman.1.t:0 "터키가 시리아를 점령하다"
  ottoman.1.d:0 "터키 정부의 지원을 받은 시리아 반군은 시리아의 주요 기관과 라디오 방송국을 모두 점령했습니다. 그들은 새로 형성된 오스만 제국에 다시 가입하기를 원합니다.\n우리는 튀르크인들과 전쟁을 할 여유가 없습니다. 그들이 원하면 그들의 옛 주인에 다시 합류하게 해야 할 것입니다."
  ottoman.1.a:0 "이게 그들이 원하는 것이라면..."
- #ottoman.1.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
  ottoman.2.t:0 "시리아의 재통합"
  ottoman.2.d:0 "우리의 통제하에 우리는 오스만 제국의 시리아 재통합을 완료해야 합니다."
  ottoman.2.a:0 "앞으로!"
@@ -115,7 +111,7 @@
  ottoman.27.t:0 "[From.GetName] 측이 요구를 거부하다"
  ottoman.27.d:0 "[From.GetAdjective] 측이 우리 요구를 거부했습니다."
  ottoman.27.a:0 "[From.GetAdjective] 측은 대가를 치룰 것이다."
- ottoman.28.t:0 "오스만이 우리의 합병을 요구하다"
+ ottoman.28.t:0 "동부 불가리아를 요구하는 오스만"
  ottoman.28.d:0 "새롭게 개혁된 오스만 제국은 오래된 소유지를 되찾을 방법을 찾고 있습니다. 그들은 이미 우리에게 합병을 요구하는 전보를 보내왔습니다. 어떻게 진행하면 좋겠습니까?"
  ottoman.28.a:0 "우리는 오스만 제국의 힘 아래 굴복한다."
  ottoman.28.b:0 "안 돼! 우리는 다시는 오스만 제국의 속국이 되지 않을 것이다!"
@@ -200,5 +196,3 @@
  rename.341.d:0 "이스탄불을 수복했으니, 다시 차르그라드로 이름을 바꾸든지, 아니면 그대로 놔두든지 둘 수 있습니다. 어떻게 해야 합니까?"
  rename.341.a:0 "이름을 바꿔라."
  rename.341.b:0 "그대로 놔둬라."
-
- 
