--- a/localisation/chi_ideas_l_english.yml
+++ b/localisation/chi_ideas_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- CHI_dictatorship_idea:0 "권위주의 통치" 
+ CHI_dictatorship_idea:0 "권위주의 통치"
  CHI_risk_of_famine:0 "부족한 식량 공급"
  CHI_risk_of_famine_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
  CHI_risk_of_famine_1:0 "부족한 식량 공급"
@@ -14,14 +14,9 @@
  CHI_risk_of_famine_5_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
  CHI_air_training:0 "중화민국 공군군관학교"
  CHI_our_hour:0 "한 시간"
-
-
-
-
-
+ long_yun:0 "\"운남왕\":\n룽윈"
  CHI_disjointed_gov:0 "분열된 정부"
- CHI_partisans:0 "비밀경찰"
- CHI_factory_strikes:0 "공장 파업" 
+ CHI_factory_strikes:0 "공장 파업"
  CHI_special_forces:0 "특수부대"
  CHI_destribute_land:0 "분배된 토지"
  CHI_colony_payment:0 "토지 대금"
@@ -48,8 +43,5 @@
  CHI_new_investors:0 "새 투자자"
  CHI_payments:0 "지불금"
  CHI_true_peace:0 "자유의 정신"
-
  CHI_yan_xishan:0 "옌시산"
  CHI_long_yun:0 "룽윈"
- 
- 
