--- a/localisation/factions_l_english.yml
+++ b/localisation/factions_l_english.yml
@@ -12,7 +12,7 @@
  italy_empire_faction:0 "신로마제국"
  chinese_united_front:0 "국공합작"
  miedzymorze_faction:0 "미엥지모제"
- Allies:0 "연합국" #allies version
+ Allies:0 "연합국"
  Axis:0 "추국국"
  Comintern:0 "코민테른"
  western_pacific_sphere:0 "서태평양권"
@@ -20,7 +20,6 @@
  north_american_alliance:0 "북아메리카 동맹"
  northern_sovereignty_coalition:0 "북부주권반국가동맹"
  SAF_faction_uotap:0 "아프리카 인민연합"
- ######################################
  eastern_coalition:0 "동부 연합"
  japan_faction:0 "대동아공영권"
  German_Confederacy:0 "베를린 조약"
@@ -46,4 +45,3 @@
  second_internationale_faction:0 "제2인터내셔널"
  rus_proletariat_alliance:0 "프롤레타리아 동맹"
  fra_continental_system_faction:0 "신 대륙봉쇄령"
-
