--- a/localisation/ser_events_l_english.yml
+++ b/localisation/ser_events_l_english.yml
@@ -1,4 +1,4 @@
-﻿ l_english:
+﻿l_english:
  serbia.1.t:0 "Yugoslavia wants to join our Faction"
  serbia.1.d:0 "The communist states of Yugoslavia sent us a request to join our faction the Comintern. We are proud of their decision and accept the request."
  serbia.1.a:0 "We welcome every communist Nation into the Comintern"
@@ -19,16 +19,16 @@
  serbia.6.d:0 "Today Hungary finally announced their capitulation.After our glorius socialist troops took the capital city Sofia,the Bulgarian Army lost their support and surrendered.The bulgarians are finally freed from the slavery of their monarchy that has plagued their state so long.King Boris III,captured on the turkish border,will be excecuted for the crimes he did to his country."
  serbia.6.a:0 "This is only the beginninng"
  serbia.7.t:0 "Communist States of Yugoslavia"
- serbia.7.d:0 "The dream of our people finally became true, the communist state of Yugoslavia has been established.Now with sizing the means of production and giving our people a sense of pride of accomplishment, we start a new age for the balkans.""
+ serbia.7.d:0 "The dream of our people finally became true, the communist state of Yugoslavia has been established.Now with sizing the means of production and giving our people a sense of pride of accomplishment, we start a new age for the balkans.\""
  serbia.7.a:0 "The glorious days will now begin"
  serbia.8.t:0 "Croatian States fully integrated "
- serbia.8.d:0 "After many days of spreading the news of unification and discussing with many Croatian communities about their new rights, the former states of Croatia are finally integrated within Yugoslavia.""
+ serbia.8.d:0 "After many days of spreading the news of unification and discussing with many Croatian communities about their new rights, the former states of Croatia are finally integrated within Yugoslavia.\""
  serbia.8.a:0 "완벽해."
  serbia.9.t:0 "조약"
- serbia.9.d:0 "자리 표시자.""
+ serbia.9.d:0 "자리 표시자.\""
  serbia.9.a:0 "알았다."
  serbia.10.t:0 "쿠데타"
- serbia.10.d:0 "자리 표시자.""
+ serbia.10.d:0 "자리 표시자.\""
  serbia.10.a:0 "알았다."
  serbia.11.t:0 "세르비아가 통일 회담을 시작하다"
  serbia.11.d:0 "오늘 아침, 알렉산다르 1세와 그의 조언자들은 크로아티아국에 통일이라는 이상을 제안했습니다. 오스트리아-헝가리 제국이 해체된 후 발칸 연합국이라는 생각은 대중적인 생각이었습니다. 하지만 러시아의 이해관계와 세르비아는 인종 테러를 원하지 않았기 때문에, 그 생각은 철회되었습니다. 하지만, 오랜 세월이 흐른 후, 알렉산다르 1세는 이 꿈을 되살리고 싶어하는 것처럼 보입니다."
@@ -37,57 +37,57 @@
  serbia.12.d:0 "여러 날 간의 협상 끝에, 크로아티아와 세르비아는 통일과 관련한 합의에 도달했습니다. 세르비아는 정부를 장악하지만 보스니아와 크로아티아인의 인종 테러를 피하기 위해 권리를 보장합니다. 꿈이 실현되었습니다. 발칸 국가들은 마침내 유고슬라비아라는 새로운 국가 밑에서 연합하게 되었습니다. 그 나라의 지도자는 알렉산다르 1세가 될 것입니다. 그는 협상을 시작했고, 국민들에게 인기가 있습니다. 알렉산다르의 다음 계획은 발칸 동맹을 확장하고 강대국과의 관계를 강화하는 것입니다."
  serbia.12.a:0 "유럽의 새로운 나라"
  serbia.13.t:0 "발칸 동맹으로의 초대"
- serbia.13.d:0 "The Serbian Government has invited us to the Balkan League.""
+ serbia.13.d:0 "The Serbian Government has invited us to the Balkan League.\""
  serbia.13.a:0 "제안을 받아들인다."
  serbia.13.b:0 "관심 없다."
  serbia.14.t:0 "Romania Accepts"
- serbia.14.d:0 "The government of Romania accepts our invitation to the Balkan League.""
+ serbia.14.d:0 "The government of Romania accepts our invitation to the Balkan League.\""
  serbia.14.a:0 "훌륭해."
  serbia.15.t:0 "Romania declines"
  serbia.15.d:0 "The Romanian government declined our offer."
  serbia.15.a:0 "유감이다."
  serbia.16.t:0 "발칸 동맹으로의 초대"
- serbia.16.d:0 "The Serbian Government has invited us to the Balkan League.""
+ serbia.16.d:0 "The Serbian Government has invited us to the Balkan League.\""
  serbia.16.a:0 "제안을 받아들인다."
  serbia.16.b:0 "관심 없다."
  serbia.17.t:0 "Greece Accepts"
- serbia.17.d:0 "The government of Greece accepts our invitation to the Balkan League.""
+ serbia.17.d:0 "The government of Greece accepts our invitation to the Balkan League.\""
  serbia.17.a:0 "훌륭해."
  serbia.18.t:0 "Greece declines"
  serbia.18.d:0 "The government of Greece declined our offer."
  serbia.18.a:0 "유감이다."
  serbia.19.t:0 "발칸 동맹으로의 초대"
- serbia.19.d:0 "The Serbian Government has invited us to the Balkan League.""
+ serbia.19.d:0 "The Serbian Government has invited us to the Balkan League.\""
  serbia.19.a:0 "제안을 받아들인다."
  serbia.19.b:0 "관심 없다."
  serbia.20.t:0 "Bulgaria Accepts"
- serbia.20.d:0 "The government of Bulgaria accepts our invitation to the Balkan League.""
+ serbia.20.d:0 "The government of Bulgaria accepts our invitation to the Balkan League.\""
  serbia.20.a:0 "훌륭해."
  serbia.21.t:0 "Bulgaria declines"
  serbia.21.d:0 "The government of Bulgaria declined our offer."
  serbia.21.a:0 "유감이다."
  serbia.22.t:0 "발칸 동맹으로의 초대"
- serbia.22.d:0 "The Serbian Government has invited us to the Balkan League.""
+ serbia.22.d:0 "The Serbian Government has invited us to the Balkan League.\""
  serbia.22.a:0 "Accept the offer"
  serbia.22.b:0 "관심 없다."
  serbia.23.t:0 "Hungary Accepts"
- serbia.23.d:0 "The government of Hungary accepts our invitation to the Balkan League.""
+ serbia.23.d:0 "The government of Hungary accepts our invitation to the Balkan League.\""
  serbia.23.a:0 "훌륭해."
  serbia.24.t:0 "Hungary declines"
  serbia.24.d:0 "The government of Hungary declined our offer."
  serbia.24.a:0 "유감이다."
  serbia.25.t:0 "발칸 동맹으로의 초대"
- serbia.25.d:0 "The Serbian Government has invited us to the Balkan League.""
+ serbia.25.d:0 "The Serbian Government has invited us to the Balkan League.\""
  serbia.25.a:0 "제안을 받아들인다."
  serbia.25.b:0 "관심 없다."
  serbia.26.t:0 "Albania Accepts"
- serbia.26.d:0 "The government of Albania accepts our invitation to the Balkan League.""
+ serbia.26.d:0 "The government of Albania accepts our invitation to the Balkan League.\""
  serbia.26.a:0 "훌륭해."
  serbia.27.t:0 "Albania declines"
  serbia.27.d:0 "The government of Albania declined our offer."
  serbia.27.a:0 "유감이다."
  serbia.28.t:0 "세르비아가 독립 보장을 요청하다"
- serbia.28.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.""
+ serbia.28.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.\""
  serbia.28.a:0 "요청을 받아들인다."
  serbia.28.b:0 "We don't have the means to support this country."
  serbia.29.t:0 "독립 보장 거부됨"
@@ -100,38 +100,25 @@
  serbia.31.d:0 "The government of Britain has declined our request."
  serbia.31.a:0 "젠장."
  serbia.32.t:0 "세르비아가 독립 보장을 요청하다"
- serbia.32.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.""
+ serbia.32.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.\""
  serbia.32.a:0 "요청을 받아들인다."
  serbia.32.b:0 "We don't have the means to support this country."
  serbia.33.t:0 "세르비아가 독립 보장을 요청하다"
- serbia.33.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.""
+ serbia.33.d:0 "This morning the Serbian Government sent a request to our country if we could guarantee their nation.\""
  serbia.33.a:0 "요청을 받아들인다."
  serbia.33.b:0 "We don't have the means to support this country."
-
  serbia.34.t:0 "세르비아-오스트리아 불가침 조약?"
  serbia.34.d:0 "Officials of the Kingdom of Serbia have approached us proposing a pact for non aggression. By signing this we might lose the ability to take lands in the southern Balkans but it would also let us get rid from the troubles those lands bring."
  serbia.34.a:0 "Let them deal with the Balkans"
  serbia.34.b:0 "Those Serbians dont deserve our mercy"
-
  serbia.35.t:0 "오스트리아가 조약을 수락하라"
  serbia.35.d:0 "After a long time the Austrian Government has finally responded to our pact which intend is to secure peace in Europe. They accepted the Pact promising no claims for lands in the Yugoslavian region for having no conflict with Serbia. We except that will will advance this treaty in the future with industrial and army cooperation. "
  serbia.35.a:0 "This pact ensures peace"
-
  serbia.36.t:0 "오스트리아가 조약을 거부하다"
  serbia.36.d:0 "After a long time the Austrian Government has finally responded to our pact which intend is to secure peace in Europe. They declined the Pact thereby showing intends of conquering lands in the Balans. Now that the danger is real we have to see which of the coalitions will support us. "
- serbia.36.a:0 "Russia will protect us once more"
  serbia.36.a:0 "The Western powers will ensure our safety"
-
  serbia.37.t:0 "베오그라드에서의 논의"
  serbia.37.d:0 "오스트리아 제국과 발칸 조약은 조약 체결 몇 주 후에 양국 관계에 평화를 보장해 주었습니다. 우리는 심지어 우리의 군대와 산업분야의 건설에도 협력했습니다. 하지만 우리 두 나라는 주로 제국의 남쪽에 있는 이탈리아에 대한 분쟁을 원합니다. 각 나라가 어느 땅을 얻는지 약속함으로써 우리는 우리 나라 사이의 평화를 더욱 보장할 수 있습니다."
  serbia.37.a:0 "협상은 짧았다."
-
-
  serbia.50.t:0 "베오그라드 전투를 기억하며"
- serbia.50.d:0 "거의 20년 전, 세계 대전이 전 유럽을 휩쓸고 있었습니다. 우리의 대국은 나머지 협상국과 단절되었고 우리는 오스트리아와 독일의 대국들에 홀로 맞섰습니다. 하지만 우리는 최후의 한명까지 싸웠습니다! 우리는 1년 넘게 오스트리아인들을 제지했고 수천 명의 군인들을 죽였습니다. 불가리아가 우리를 배후로 몰아붙이고 우리 남쪽 전체를 침략했을 때 우리는 여전히 포기하지 않고 있었습니다. 두 달 동안 우리 군대는 적의 손에 넘어갈 때까지 수도를 지키고 있었습니다. 이 전투는 우리의 국가와 문화적 정신을 정의하고 있습니다. 우리는 동부 전선으로 가는 수천 명의 군인들을 막았고, 이는 러시아군의 획기적인 공세에 도움이 되었습니다."
  serbia.50.a:0 "세르비아 만세."
-
-
-
-
-
