--- a/localisation/spr_focus_l_english.yml
+++ b/localisation/spr_focus_l_english.yml
@@ -6,9 +6,8 @@
  SPR_armed_forces:0 "스페인의 군사력 향상"
  SPR_armed_forces_desc:0 "Spain's armed forces are in a state of disarray, and they have been that way since the Peninsular War in the early 19th century. We need to improve our military to the standards we had before Napoleon's destruction of our fine nation."
  SPR_french_forts:0 "피레네 요새화"
- SPR_french_forts_desc:0 "The Pyrenees Mountains are our greatest natural border. They have kept us from being a part of France, and they need to be fortified. It's the best protection against France that we could ever ask for.
  SPR_gibraltar_forts:0 "지브롤터 국경 요새화"
- SPR_gibraltar_forts_desc:0 "The border with Gibraltar is a border that can absolutely destroy us. The British have heavily fortified their so-called "rock", and we aim to inevitably reclaim it. If we were to ever go to war with Britain, they could easily invade our south and capitulate us. We mustn't let that happen."
+ SPR_gibraltar_forts_desc:0 "The border with Gibraltar is a border that can absolutely destroy us. The British have heavily fortified their so-called \"rock\", and we aim to inevitably reclaim it. If we were to ever go to war with Britain, they could easily invade our south and capitulate us. We mustn't let that happen."
  SPR_colonial_forts:0 "탕헤르 요새화"
  SPR_colonial_forts_desc:0 "Our colony directly South of Gibraltar is a vital part to securing the Mediterranean. If we were to go to war with France and they were to retake it, our control over the Gibraltar Strait would go over to them. We can't afford to let that happen."
  SPR_rapid_railway:0 "철로 기반시설 개선"
@@ -34,16 +33,13 @@
  SPR_new_warfare:0 "육군 교리 주력"
  SPR_new_warfare_desc:0 "The military doctrines that defined ground combat in the Great War are outdated. We must put our greatest minds to the task of shaping the military thought of tomorrow."
  SPR_motorization:0 "기계화 주력"
- SPR_motorization_desc:0 "Rethinking the possibilities of motorised infantry, we can push the limits of what vehicles can be constructed today."
  SPR_armour_effort:0 "기갑 주력"
  SPR_armour_effort_desc:0 "Applying what we have learned from mechanising our infantry, we can improve our armoured vehicles as well."
  SPR_officers:0 "새로운 최전방 장교 임명"
- SPR_officers_desc:0 "To ensure that our policies are followed in military practice, we will introduce politically appointed officials into military ranks."
  SPR_centralized_command:0 "중앙 집중 사령부"
  SPR_centralized_command_desc:0 "The command of our troops are hardly organised. Our army has no precision, nor does it have any cooperation or proper timing. By establishing a central command of our armies, we can change that."
  SPR_slot_1:0 "추가 연구 슬롯"
  SPR_slot_1_desc:0 "Our industrial expansion and other recent advances might allow us to conduct more R&D in parallel."
- SPR_air_force:0 "Improve Ejército del Aire"
  SPR_air_force:0 "Nowhere is technological advances more rapid than in aerial warfare. Aviation is a field any modern nation must master."
  SPR_fighter_effort:0 "전투기 주력"
  SPR_fighter_effort_desc:0 "We have not seen that last of dogfights in the Great War. Keeping ahead in the development of fighter planes will give us an edge in the future."
@@ -64,7 +60,6 @@
  SPR_battleship_effort:0 "전함 주력"
  SPR_battleship_effort_desc:0 "The nation with the most battleships will rule the oceans. Battleships and carriers represent the old and the new in naval superiority."
  SPR_sub_warfare:0 "바다의 늑대들"
- SPR_sub_warfare_desc:0 "The Prussians have developed terrifyingly efficient submarines and the 'wolf pack' doctrines to employ them. We should learn from them.
  SPR_cruiser_effort:0 "순양함 주력"
  SPR_cruiser_effort_desc:0 "Before making forays into advanced battleship research, the smaller cruisers are in need of replacement."
  SPR_screen_effort:0 "구축함 주력"
@@ -125,7 +120,6 @@
  SPR_propose_iberian_union_desc:0 "Perhaps it is better if we stick to the power of diplomacy. At this point, it is dangerous to use any unnecessary force as this could provoke an international conflict. We shall instead ally Portugal."
  SPR_liberate_french_workers:0 "프랑스 노동자 해방!"
  SPR_liberate_french_workers_desc:0 "France is in political chaos, we could use this opportunity to intervene and establish friendly communist government!"
- 
  SPR_side_with_popular_front:0 "인민 전선과 함께"
  SPR_side_with_popular_front_desc:0 "In these tough times of political divisions, we support the Popular Front!"
  SPR_side_with_opposition:0 "CEDA와 함께"
@@ -133,7 +127,7 @@
  SPR_spain_in_exile:0 "스페인의 망명"
  SPR_spain_in_exile_desc:0 "We have lost the fight, we are defeated... Yet the battle must go on. We shall not surrender, we shall go in exile over the seas and prepare the liberation of Spain from abroad!"
  SPR_one_spain:0 "통합된 스페인"
- SPR_one_spain_desc:0 "The Civil war has ended, we have emerged victorious. Spain is once more united under a new regime, this time however, we will not make the same mistakes that ended the Second Republic. Spain will be strong and independent!" 
+ SPR_one_spain_desc:0 "The Civil war has ended, we have emerged victorious. Spain is once more united under a new regime, this time however, we will not make the same mistakes that ended the Second Republic. Spain will be strong and independent!"
  SPR_socialist_reforms:0 "농민군 재편성"
  SPR_socialist_reforms_desc:0 "While our former generals sided with the enemy, we lack experience and efficiency. But we have spirit and will to fight, enemies will be defeated!"
  SPR_alliance_with_commis:0 "공산주의자와의 동맹"
@@ -276,17 +270,12 @@
  SPR_placeholder6_desc:0 "While our enemies are in disarray, we must strike and do it fast. With the element of surprise and superior offensive capabilities, our opponents will be crushed."
  SPR_placeholder7:0 "공화국 해군 훔치기"
  SPR_placeholder7_desc:0 "Unfortunately, the Spanish Navy has sided with the Republicans. However there are still people who are loyal to us within their ranks. We will attempt to seize their fleets and re-integrate them in the Spanish State's Army."
- 
- ##These are gonna be changed probably
  SPR_inv_ARG:0 "아르헨티나와의 동맹"
  SPR_inv_VEN:0 "베네수엘라와의 동맹"
  SPR_inv_MEX:0 "멕시코와의 동맹"
- ########################### FACTION NAME
  spanish_faction:0 "스페인어권"
  iberian_faction:0 "이베리아 연합"
  spanish_diplo_mission:0 "스페인 외교 사절"
- 
- ##Custom Tooltips
  spr_carlist_militia_tt:0 "Carlist Spain will receive a couple of loyal armed brigades to help in the fight.\n"
  spr_raise_africa_army_tt:0 "Spain will receive 5 elite Moroccan Army Corps to fight by their side.\n"
  spr_king_pick_tt:0 "Depending on the ruling monarchist faction, either Alfonso XIII or Xavier of Bourbon-Parma will return and take control over the newly formed Spanish Kingdom.\n"
@@ -295,8 +284,6 @@
  sp_commis_might_start_a_civil_war_tt:0 "§RThe Communists might start a civil war!§\n"
  spr_democratic_uprising_tt:0 "§RThe democratic supporters will start a civil war against communist and nationalist forces of Spain.§\n"
  spr_will_get_royal_units_tt:0 "The Spanish State will receive 3 elite Royal Guard units to help in the fight.\n"
- 
- ##Flags
  sp_sided_with_dem_flag:0 "공화파와 함께함"
  sp_sided_with_com_flag:0 "혁명가들과 함께함"
  sp_sided_with_ceda_flag:0 "반대파와 함께함"
@@ -304,12 +291,8 @@
  sp_sided_with_monarchy_flag:0 "왕당파와 함께함"
  sp_sided_with_franco:0 "팔랑헤파와 함께함"
  sp_sided_with_unified_front:0 "통일 연합과 함께함"
- 
- ##Opinion Modifiers
  sp_crusade_against_communism:0 "마르크스주의에 대항하는 십자군"
  sp_crusade_against_nationalism:0 "국민주의에 대항하는 십자군"
- 
- ##Ideas
  sp_neutrality_idea:0 "스페인 중립"
  sp_offensive_army_idea:0 "총공격!"
  sp_rebuild_spain_idea:0 "국가 재건"
@@ -326,7 +309,7 @@
  sp_national_strikes:0 "전국적인 파업"
  sp_national_strikes_desc:0 "Spain is in a difficult situation and divided as never before. As result of a major government dissatisfaction, the public is frustrated which leads to major workers' strikes."
  sp_bed_gov:0 "연약한 공화국"
- sp_bed_gov_desc:0 "The Second Republic is on the edge of catastrophy. The government is unable to contrain the imminent collapse of the Iberian state, not only on political level but on public level as well. The country is in chaos..." 
+ sp_bed_gov_desc:0 "The Second Republic is on the edge of catastrophy. The government is unable to contrain the imminent collapse of the Iberian state, not only on political level but on public level as well. The country is in chaos..."
  sp_armed_conflicts_idea:0 "군사 쿠데타"
  sp_armed_conflicts_idea_desc:0 "Following the general elections, Spain has been divided like never before. Both left-wing and right-wing supporters clash on the streets, violence rages all over Iberian Peninsula. The military decides to step in and seize the control over major cities and governmental institutions."
  sp_civil_war_idea:0 "스페인 내전!"
@@ -336,105 +319,87 @@
  sp_popular_army_idea:0 "인민 전선"
  sp_not_loyal_army:0 "불충한 군대"
  sp_not_loyal_army_desc:0 "The very Spanish Army itself does not support the current Republican government. There is a high chance in case of an internal conflict that the highest ranking generals will attempt to seize power for themselves."
- 
- ##Events
  spain.9.t:0 "스페인 선거"
  spain.9.d:0 "The Spanish Republic is in a difficult situation. Two major political powers are opposed: the Popular Front which is a coalition of liberals, socialists and communist parties and the Confederación Española de Derechas Autónomas, a coalition of right-wing parties along with extreme right-wing factions.\n\nNonetheless, the elections will take place and people will vote. The future of Spain are going to depend on these elections, the question is, who will win the majority of votes?"
  spain.9.a:0 "인민 전선"
  spain.9.b:0 "CEDA"
- 
  spain.11.t:0 "스페인 내전!"
  spain.11.d:0 "A group of powerful generals in the Armed Forces have issued a pronunciamento, denouncing the current government of Spain! They have launched a right-wing coup with the support of conservative monarchists and the clergy. A significant portion of the military has sided with these Nationalists, but so far they have failed to capture any of Spain's major cities with the exception of Sevilla.\n\nLeftist volunteers are meanwhile flocking to the banners of the Republican government, ready to support it against the rebels. These loyalists may be poorly trained, but no one can question their enthusiasm.\n\nThe battle-lines have been drawn..."
  spain.11.a:0 "공화파 스페인을 지지하라."
  spain.11.b:0 "스페인 코뮌을 지지하라."
- 
  spain.16.t:0 "스페인 내전이 시작되다!"
  spain.16.d:0 "전선이 그어지고 스페인 내전이 시작되었습니다... 이 글은 읽을 일이 없어야 했는데 :("
  spain.16.a:0 "반역자들에게 죽음을!"
- 
  spain.17.t:0 "스페인 내전이 시작되다!"
  spain.17.d:0 "전선이 그어지고 스페인 내전이 시작되었습니다... 이 글은 읽을 일이 없어야 했는데 :("
  spain.17.a:0 "반역자들에게 죽음을!"
- 
  spain.18.t:0 "스페인에서의 군사 쿠데타!"
  spain.18.d:0 "The outcome of the elections did not please the army, especially the high ranking generals who decided instead to seize power for themselves and attempted to storm administative buildings in major cities.\n\nTheir goal was to overthrow current Republican government and establish a dictatorship, however the police and citizens along with various militias who opposed this act decided to rise up and force the army in retreat.\n\nA conflict has excalated, we can no longer trust our own army..."
  spain.18.a:0 "That's bad"
- 
  spain.19.t:0 "바이에른 군대가 스페인에 도착하다"
  spain.19.d:0 "The German communist government was the first to recognize us. Their next step is to send us an actual military aid. If we defeat the nationalists, this could be a beginning of a great friendship between the two nations."
  spain.19.a:0 "Much appreciated"
- 
  spain.22.t:0 "스페인이 원조를 요청하다!"
  spain.22.d:0 "A civil war is being fought on the Iberian Peninsula. The Republican government of Spain have approached us and requested military aid.\n\nOn one side we cannot risk being involved in this conflict, on the other side we cannot let a nationalist or even a communist state share border with us."
  spain.22.a:0 "Send guns"
  spain.22.b:0 "Send a volunteer force"
  spain.22.c:0 "Do nothing"
- 
  spain.23.t:0 "France Sends Guns"
  spain.23.d:0 "The French government has accepted our request for military support and issued a directive to supply our republican army with light infantry weapons."
  spain.23.a:0 "Good news!"
- 
  spain.24.t:0 "France Refuses to Help!"
  spain.24.d:0 "Earlier this week, we have issued an official request to the government of France to send us military aid. So far, the French government has refused to get involved in the conflict and thus refused to send us any help."
  spain.24.a:0 "We dont need France to defeat the enemy!"
- 
  spain.25.t:0 "France Sends Volunteers!"
  spain.25.d:0 "To our surprise, the French have decided to help us out by sending a small expeditionary force to Barcelona. This will greatly increase our chances against the enemy."
  spain.25.a:0 "Great news!"
-
  spain.26.t:0 "스페인 내전!"
  spain.26.a:0 "왕당파 스페인을 지지하라."
  spain.26.b:0 "우파 연합을 지지하라."
  spain.26.c:0 "국민파 스페인을 지지하라."
- 
  spain.28.t:0 "Spain requests Aid!"
  spain.28.d:0 "A civil war is being fought on the Iberian Peninsula. The government of Pro-Monarchist the Spanish State have approached us and requested military aid.\n\nOn one side we cannot risk being involved in this conflict, on the other side we can support a pro-monarchist Iberia which would benefit our Russian Sphere in the future."
  spain.28.a:0 "Send guns"
  spain.28.b:0 "Send a volunteer force"
  spain.28.c:0 "Do nothing"
- 
  spain.29.t:0 "Russia Sends Guns"
  spain.29.d:0 "The Russian government has accepted our request for military support and issued a directive to supply our royal army with light infantry weapons."
  spain.29.a:0 "Good news!"
- 
  spain.31.t:0 "Russia Refuses to Help!"
  spain.31.d:0 "Earlier this week, we have issued an official request to the government of Russia to send us military aid. So far, the Russian government has refused to get involved in the conflict and thus refused to send us any help."
  spain.31.a:0 "We dont need Russia to defeat the enemy!"
- 
  spain.30.t:0 "Russia Sends Volunteers!"
  spain.30.d:0 "To our surprise, the Russians have decided to help us out by sending a small expeditionary force to Madrid. This will greatly increase our chances against the enemy."
  spain.30.a:0 "Great news!"
- 
  spain.34.t:0 "Monarchist Uprising in Spain!"
  spain.34.d:0 "Pro-Monarchist Forces under Juan III have decided to rise up against all sides. They are unhappy with Spanish State's decision to adopt Carlist Monarchy which they claim is illigitimate.\n\nThe uprising is raging in the South of Iberian peninsula."
  spain.34.a:0 "Enemies will be defeated!"
- 
  spain.36.t:0 "Kingdom of Spain Restored"
  spain.36.d:0 "Following the end of the Spanish Civil war, a conflict that have caused over a million civilian and military casualties, the Right-Wing coalition has emerged victorious.\n\nUnder new leadership it was decided that the Republican regime has ultimately failed and that the new Spanish regime would be a more conservative one with some liberal reforms. Thus, a new Kingdom of Spain is proclaimed.\n\nOnly time will tell if this new regime will survive in these tough times."
  spain.36.a:0 "Interesing"
  spain.36.b:0 "Long live the Spanish Kingdom"
- 
  spain.37.t:0 "Spanish Empire Restored"
  spain.37.d:0 "Following the end of the Spanish Civil war, a conflict that have caused over a million civilian and military casualties, the Right-Wing coalition has emerged victorious.\n\nUnder new leadership, the sympathizers of the former Spanish Empire have called for its restoration. Right away Spain will re-establish its colonial claims that she had previously lost to other powers and to decolonization.\n\nOnly time will tell if this new state will be as strong as it used to be hundreds of years ago..."
  spain.37.a:0 "Interesting"
  spain.37.b:0 "Long live the Spanish Empire"
- 
  spain.41.t:0 "Communist Uprising in Spain"
  spain.41.d:0 "The Spanish civil war keeps on escalating!\n\nWithin Republican ranks there has been a split of power. Unwilling to support the democratic front, the Communists of Spain have decided to rise up against both the Nationalist forces and their former allies, the Republicans.\n\nThis turn of events will certainly benefit more the Nationalist side as the Republicans are now divided even further.\n\nOnly time will tell whether the Marxist forces will survive..."
  spain.41.a:0 "This keeps on escalating!"
  spain.41.b:0 "Death to the Reds!"
- 
  spain.42.t:0 "Monarchist Uprising in Spain"
  spain.42.d:0 "The Spanish civil war keeps on escalating!\n\nWithin the Nationalist ranks there has been a split of power. Unwilling to support the Carlist Faction, the Monarchists of Spain under former King Alfonso XIII have decided to rise up against both the Republican forces and their former allies, the Nationalists.\n\nThis turn of events will certainly benefit more the Republican side as the Nationalists are now divided even further.\n\nOnly time will tell whether the Alfosonist forces will survive..."
  spain.42.a:0 "Bruh"
  spain.42.b:0 "Enemies will be defeated!"
- 
  spain.43.t:0 "Nationalist Spain Steals our Ships!"
  spain.43.d:0 "The Spanish Navy has been loyal to us during this conflict, however they decided to join the enemy and sail to nationalist held ports.\n\nThis is unbelievable!"
  spain.43.a:0 "You are kidding me?!"
- 
  spain.44.t:0 "Trial of Generals"
  spain.44.d:0 "The Spanish civil war is over. Some of our former generals switched sides during the conflict, they are traitors!\n\nHowever, as the world tension is rising and potential conflicts could reach the Iberial peninsula, we need all the military strength we can get. The question is, can we trust these generals?"
  spain.44.a:0 "Trust but Verify"
  spain.44.b:0 "Shoot Them!"
-
+ spain.32.t:0 "Republicans take a Stand!"
+ spain.32.d:0 "Unhappy with our marxist reformations, the former Republican government has decided to rise and fight against both the nationalist and marxist threats."
+ spain.32.a:0 "Too bad!"
+ spain.33.t:0 "The Civil war Escalates!"
+ spain.33.d:0 "In order for Republic to survive, we must fight and defeat the traitors! The Republic will prevail!"
+ spain.33.a:0 "To arms!"
