--- a/localisation/usa_events_l_english.yml
+++ b/localisation/usa_events_l_english.yml
@@ -4,9 +4,6 @@
  usa.1000.a:0 "공산주의자들! (공산주의자들로 플레이)"
  usa.1000.b:0 "아메리카 연합국! (아메리카 연합국으로 플레이)"
  usa.1000.c:0 "미주연합! (미주연합으로 플레이)"
- #usa.1003.t:0 "제2차 미국 내전!"
- #usa.1003.d:0 "북동부 공산당의 탈취는 가뜩이나 취약한 연합을 더욱 불안정하게 만들었습니다. 일부 장군들은 새 임시 정부를 지지하기로 결정했습니다. 한편 남부에서는 아메리카 연합국이 독립을 선언했습니다. 무엇이 미국인들을 기다리고 있는지 누가 알겠습니까?"
- #usa.1003.a:0 "재앙이다!"
  usa.1001.t:0 "일리노이 대파업!"
  usa.1001.d:0 "대공황이 최악에 달했습니다! 주요 도시들에서 사람들이 파업하고 있습니다. 일리노이 주에서 민족주의자들과 사회주의 혁명가들의 대규모 시위와 함께 대규모 파업이 일어났습니다. 그들은 변화를 원하는데, 우리는 어떻게 행동해야 합니까?"
  usa.1001.a:0 "시위자들과 대화를 조장하라!"
@@ -39,12 +36,10 @@
  usa.7.t:0 "[GetYear]년 선거"
  usa.7.d:0 "이제 새로운 선거를 치를 때입니다. 이번에는 가너 대 위키입니다. 가너는 민주당을 대표하며 위키는 공화당을 대표하는 후보입니다. 누가 이길 것입니까?"
  usa.7.a:0 "민주당!"
- usa.7.b:0 "공화당!
  usa.8.t:0 "[GetYear]년 선거"
  usa.8.d:0 "이제 새로운 선거를 치를 때입니다. 이번에는 가너 대 위키입니다. 가너는 민주당을 대표하며 위키는 공화당을 대표하는 후보입니다. 누가 이길 것입니까?"
  usa.8.a:0 "민주당!"
  usa.8.b:0 "공화당!"
-
  usa.9.t:0 "루스벨트 대 듀이"
  usa.9.d:0 "프랭클린 D. 루스벨트의 대통령직은 이미 여러 가지 면에서 파격적이었습니다. 건강 악화와 역대 대통령 중 가장 오랜 재임 기간에도 불구하고, 그는 전쟁에 대한 노력을 통해 우리나라를 계속 이끌기를 열망하고 있습니다. 공화당은 전쟁에 참전할 가능성이 있는 많은 후보들로 인해 후보 선택에 제한을 받았지만, 주지사 토마스 E. 듀이를 그들의 대표로 선택했습니다.\n\n루스벨트는 계속해서 대중의 지지를 받고 있지만, 많은 사람들은 루스벨트가 임기 말까지는 살지 못할 수도 있다고 의심하고 있습니다. 하지만 이 정도로 듀이가 우리를 여기까지 이끈 루스벨트로부터 승리를 얻기가 충분할까요?"
  usa.9.a:0 "루스벨트가 듀이를 이긴다."
@@ -64,8 +59,6 @@
  usa.13.t:0 "루스벨트의 서거"
  usa.13.d:0 "비록 루스벨트 대통령의 건강은 한동안 하락하고 있지만, 그의 강력한 대선 운동은 많은 사람들에게 그가 수년이 남았다고 확신시켰습니다. 하지만, 아직 재직 중 루스벨트의 사망 가능성은 여전했고, 오늘은 뇌졸중으로 쓰러진 뒤 세상을 떠났습니다. 해리 S. 트루먼 부통령은 이제 국민의 지지와 기도를 요청하며 취임 선서를 했습니다. 낡은 내각이 남아 있고 트루먼은 전임자의 많은 정책을 계속하겠다고 다짐했습니다."
  usa.13.a:0 "그래서 한 시대가 끝나고, 또 다른 시대가 시작되었다."
-
- ###Elections events 
  usa_elections.1.t:0 "[GetYear]년 선거"
  usa_elections.1.d:0 "지난 4년간의 사건, 후버의 탄핵, 경제 붕괴, 그리고 전국적 식량 부족의 도래를 고려할 때, 이번 선거는 '1860년 이후 가장 중요한 선거'로 불리고 있습니다.\n이번 선거는 처음으로 제3당의 승리할 수도 있다는 생각을 갖게 만듭니다. 네 명의 후보가 있습니다. 공화당 알프 랜든 주지사, 민주당 존 낸스 가너 하원의장, 몬태나의 사회당 버튼 K. 휠러 상원의원, 루이지애나의 '독재자' 미국제일당 휴이 롱 상원의원 등입니다.\n전문가들은 이번 선거가 제2의 내전이 도래하는 결과를 낳을 수 있다고 경고하고 있습니다."
  usa_elections.1.a:0 "민주당."
@@ -96,113 +89,88 @@
  usa_elections.7.d:0 "1940년 랜든 대통령의 충격적 승리는 바클리 상원의원의 58%에 비해 30%의 득표율을 차지해 우리 민주주의의 핵심으로 가는 의문을 제기했습니다. 그 결과, 정당과 나라 전역의 많은 사람들은 레이번 의장이 듀이 주지사에 대한 승리를 거의 장담하지 못하고 있다고 보고 있습니다."
  usa_elections.7.a:0 "민주당."
  usa_elections.7.b:0 "공화당."
-
  usa_elections.8.t:0 "[GetYear]년 선거"
  usa_elections.8.d:0 "제2차 미국 내전 발발에도 불구하고, 국민의 사기를 높이고 미국에 어느 정도 안정을 가져오기 위해 대선을 치르기로 결정됐습니다.\n하지만 이번에는 알벤 바클리가 민주당을, 헨리 스팀슨이 공화당원을 대표할 예정입니다."
  usa_elections.8.a:0 "민주당."
  usa_elections.8.b:0 "공화당."
- 
  usa_homeland.1.t:0 "독재자의 죽음"
- usa_homeland.1.d:0 "오늘 오전, 대통령은 루이지애나 주 상원의원 휴이 피어스 주니어의 사망을 알리는 라디오 연설을 했습니다.\n그 상원의원은 FBI에 구금되어 있는 동안 살해되었습니다. 상원의원은 남부의 깊은 곳을 가로질러 시민 불안을 조장하고 정치적 폭력을 조장하는 것 외에, 루이지애나 주지사의 저택에서 자신의 후임자가 저지른 잠재적 범죄로 FBI의 조사를 받고 있었습니다."  
+ usa_homeland.1.d:0 "오늘 오전, 대통령은 루이지애나 주 상원의원 휴이 피어스 주니어의 사망을 알리는 라디오 연설을 했습니다.\n그 상원의원은 FBI에 구금되어 있는 동안 살해되었습니다. 상원의원은 남부의 깊은 곳을 가로질러 시민 불안을 조장하고 정치적 폭력을 조장하는 것 외에, 루이지애나 주지사의 저택에서 자신의 후임자가 저지른 잠재적 범죄로 FBI의 조사를 받고 있었습니다."
  usa_homeland.1.a:0 "오늘은 운이 좋은 날인 것 같다."
-
  usa_homeland.2.t:0 "식량 부족이 악화되다"
  usa_homeland.2.d:0 "현 정부는 우리 국민들에게 지속적인 식량 공급을 할 수 없습니다. 이에 따라 야당은 현 정부에 대해 반발하고 있습니다. \n수천 명의 사람들이 거리에 모여 음식과 내각의 사퇴를 요구합니다. 어떻게 발전하는지 지켜보도록 하죠..."
  usa_homeland.2.a:0 "오 이런..."
-
  usa_homeland.5.t:0 "커티스의 심장마비"
  usa_homeland.5.d:0 "오늘 새벽, 커티스 대통령이 심장마비를 일으킨 사실이 드러났습니다. 아직 건강은 양호한 편이지만, 이번 사건으로 11월 재선에 출마할지 여부에 대한 의구심이 커지고 있습니다."
  usa_homeland.5.a:0 "우리는 그가 빨리 회복되기를 바란다."
- 
  usa_homeland.6.t:0 "공화당 전당 대회"
  usa_homeland.6.d:0 "커티스 대통령의 심장마비에 이어 공화당 표까지 발표되면서 재선에 나서지 않겠다고 선언했습니다.\n그의 자리에서, 당은 캔자스의 알프 랜든 주지사를 대통령으로, 아이다호의 윌리엄 보라 상원의원을 부통령 후보로 지명했습니다."
  usa_homeland.6.a:0 "더 나은 것을 위해서다."
- 
  usa_homeland.7.t:0 "민주당 전당 대회"
  usa_homeland.7.d:0 "민주당 표는 존 낸스 가너 텍사스주 하원의장으로, 존 리드 전 미주리주 상원의원은 부통령으로 각각 발표됐습니다."
  usa_homeland.7.a:0 "알았다."
- 
  usa_homeland.8.t:0 "의회 선거 결과"
  usa_homeland.8.d:0 "대통령 선거와 함께 의회는 다음과 같은 선거를 치릅니다:"
  usa_homeland.8.a:0 "민주당이 의회를 차지한다."
  usa_homeland.8.b:0 "공화당이 의회를 차지한다."
  usa_homeland.8.c:0 "의석을 나눠 가진다."
- 
  usa_homeland.9.t:0 "1937년 오하이오 강 홍수"
  usa_homeland.9.d:0 "1937년 오하이오 강의 홍수는 1937년 1월 말과 2월에 일어났습니다.\n피츠버그에서 일리노이 카이로까지 피해가 확대되면서 100만 명의 이재민이 발생했고, 385명이 사망하고 재산 손실이 5억 달러가 넘었습니다.\n남부 오하이오는 역사상 최악의 홍수에 직면했습니다. 홍수 수위가 거의 80피트에 달하는 신시내티 시에서는 특히 곤경을 걲었습니다."
  usa_homeland.9.a:0 "끔찍하다!"
- 
  usa_homeland.10.t:0 "금문교의 개통"
  usa_homeland.10.d:0 "[GetLeader] 대통령은 오늘 캘리포니아 주 샌프란시스코에 금문교를 열었고, 그 개통식은 아직 더 나은 날들을 예고하는 역할을 합니다."
  usa_homeland.10.a:0 "좋아."
- 
  usa_homeland.11.t:0 "중간선거"
  usa_homeland.11.d:0 "중간선거는 대통령 임기 4년 중반을 전후해 치러지는 총선입니다. 중간선거 기간 중 선거를 앞두고 있는 연방 사무소에는 미 하원이 435석, 미 상원이 96석 가운데 32석이 모두 포함돼 있습니다."
  usa_homeland.11.a:0 "민주당이 의회를 차지한다."
  usa_homeland.11.b:0 "공화당이 의회를 차지한다."
  usa_homeland.11.c:0 "의석을 나눠 가진다."
- 
  usa_homeland.12.t:0 "뉴잉글랜드 허리케인!"
  usa_homeland.12.d:0 "1938년 발생한 뉴잉글랜드 허리케인은 롱아일랜드와 사우스뉴잉글랜드에 상륙하여 로드아일랜드 해안선을 따라 300명 이상의 사망자를 냈으며, 총 약 600명이 사망했습니다."
  usa_homeland.12.a:0 "나쁜 소식이다."
- 
  usa_homeland.13.t:0 "뉴욕 만국 박람회"
  usa_homeland.13.d:0 "플러싱 메도스 코로나 공원의 1,216 에이커(492 헥타르)를 차지했던 1939-40년 뉴욕 만국 박람회는 1904년 세인트루이스 루이지애나 구매 박람회에 이어 미국 역사상 두 번째로 돈이 많이 든 박람회입니다.\n\n많은 나라들이 박람회에 참여할 것으로 예상되며, 두 시즌 동안 4천 4백만 명 이상의 사람들이 이 전시회에 참석할 예정입니다."
  usa_homeland.13.a:0 "박람회가 열렸다!"
  usa_homeland.13.b:0 "박람회가 열렸다!"
-
- usa_homeland.14.t:0 "워싱턴 진군!" #Universal event for all ideologies.
+ usa_homeland.14.t:0 "워싱턴 진군!"
  usa_homeland.14.d:0 "극도의 반대파 단체들이 현 정부에 대한 깊은 분노와 1936년 결과에 대한 불행을 보여주기 위해 거리로 나서자 워싱턴은 서서히 무너져 내렸습니다.\n전국적인 식량 부족과 미국의 농업 위기로 상황은 더욱 악화되고 있습니다."
  usa_homeland.14.a:0 "좋지 않은데..."
-
- usa_homeland.15.t:0 "내전!" #Civil war breaks out, as Democrats against Nationalists.
+ usa_homeland.15.t:0 "내전!"
  usa_homeland.15.d:0 "우리는 남부 주 지역에서 무장 봉기가 일어났다는 보고를 받았습니다. 반란군은 아메리카 연합국을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 우파 정당 대표인 휴이 롱이 이끌고 있습니다. 봉기는 민주당 주도 정부의 종식과 우익 정권 수립을 요구합니다."
  usa_homeland.15.a:0 "롱 패거리에게 죽음을!"
-
- usa_homeland.16.t:0 "백악관을 향한 공격!" #Attack on White House/ Democrats are in power, Perkins becomes leader, current leader resigns.
+ usa_homeland.16.t:0 "백악관을 향한 공격!"
  usa_homeland.16.d:0 "가너 대통령과 존 리드 부통령이 사망한 가운데 실버 군단 민병대의 공격으로 워싱턴은 오늘 혼란에 빠졌습니다.\n\n남은 내각 인사들 중 최고위 인사는 프란체스 퍼킨스 노동부 장관으로, 휴즈 대법원장이 내일 국회의사당 로툰다에서 취임 선서를 할 것으로 보입니다."
  usa_homeland.16.a:0 "다행히 최악의 상황은 끝났다."
-
- usa_homeland.17.t:0 "백악관을 향한 공격!" #Attack on White House/ Republicans are in power, Stimson becomes leader, current leader resigns.
+ usa_homeland.17.t:0 "백악관을 향한 공격!"
  usa_homeland.17.d:0 "미국 정부는 오늘 랜든 대통령이 사망한 가운데 알 수 없는 마르크스주의 민병대의 공격으로 인해 혼란에 빠졌습니다. 당시 아이다호에 있는 자신의 목장에 있던 보라 부통령도 백악관 테러 이후 목장에서 폭행을 당해 사망했습니다.\n\n후버 행정부와 커티스 행정부의 베테랑인 스팀슨 국무장관은 그 당시 영국에 있었고 즉시 돌아오고 있습니다. 국회의사당 로툰다에서 이틀 후에 그의 취임 선서를 할 것입니다."
  usa_homeland.17.a:0 "다행히 최악의 상황은 끝났다."
- 
- usa_homeland.18.t:0 "일리노이 반란!" #Civil war breaks out, as Republicans against Socialists.
+ usa_homeland.18.t:0 "일리노이 반란!"
  usa_homeland.18.d:0 "오대호 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 사회주의 정당 대표인 얼 브라우더가 이끌었습니다. 봉기는 공화당 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
  usa_homeland.18.a:0 "공산주의자들에게 죽음을!"
-
- usa_homeland.19.t:0 "미국의 위기!" #News event about Food Shortages and subsequent instability in the USA that could lead to internal conflict of ideologies.
+ usa_homeland.19.t:0 "미국의 위기!"
  usa_homeland.19.d:0 "오늘 전국적으로 극도의 폭동이 일어난 가운데 제2차 미국 내전이 발발하며, 미국 대통령이 계엄령을 선포했습니다.\n\n미 육해군의 무려 40%가 봉기에 동참하면서 상황은 더욱 악화되고 있습니다. 미국은 다시 한번 내전에 휘말렸습니다. 이번에는 두 정치체제 사이의 내전입니다.\n\n오직 시간만이 미국이 권위주의 국가가 될 것인지, 아니면 국민을 위한 그리고 국민에 의한 국가가 될 것인지를 말해줄 것입니다."
  usa_homeland.19.a:0 "걱정되는군..."
  usa_homeland.19.b:0 "걱정되는군..."
-
- usa_homeland.3.t:0 "내전!" #Civil war breaks out, as Socialists against Nationalists
+ usa_homeland.3.t:0 "내전!"
  usa_homeland.3.d:0 "남부 주 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반란군은 아메리카 연합국을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 우파 정당 대표인 휴이 롱이 이끌고 있습니다. 봉기는 사회주의 주도 정부의 종식과 우익 정권 수립을 요구합니다."
  usa_homeland.3.a:0 "롱 패거리에게 죽음을!"
-
- usa_homeland.4.t:0 "내전!" #Civil war breaks out, as Nationalists against Socialists
+ usa_homeland.4.t:0 "내전!"
  usa_homeland.4.d:0 "오대호 지역에서 무장 봉기가 일어났다는 보고를 받고 있습니다. 반군은 아메리카 코뮌을 선포하며 해당 지역의 산업 및 군사 시설을 점령했습니다.\n 그들은 1936년 선거에서 사회주의 정당 대표인 얼 브라우더가 이끌었습니다. 이 봉기는 민주 주도 정부의 종식과 사회주의-마르크스 정권의 수립을 요구합니다."
  usa_homeland.4.a:0 "공산주의자들에게 죽음을!"
-
  usa_homeland.20.t:0 "뉴잉글랜드 점령"
  usa_homeland.20.d:0 "미국은 중대한 위기에 처해 있습니다! 우리는 이 기회를 이용하여 뉴잉글랜드를 점령하고 캐나다에 통합할 수 있습니다. 그러나 이것은 미국 정부와의 관계를 손상시키고 잠재적으로 중단시킬 것입니다. 그러나 우리는 그들이 살아남을지조차 확신할 수 없습니다."
  usa_homeland.20.a:0 "점령하라!"
  usa_homeland.20.b:0 "그럴 가치가 없다."
-
  usa_homeland.21.t:0 "뉴잉글랜드 점령"
  usa_homeland.21.d:0 "영국 군대가 뉴잉글랜드를 점령했습니다!\n영국 왕립군은 캐나다군과 함께 국경을 넘어 어젯밤 보스턴에 입성했습니다. 그들은 지역 수비대를 기습적으로 잡아서 항복하게 되었습니다.\n이것이 제국주의의 진짜 모습입니다, 우리는 절대 잊지 않을 것입니다!"
  usa_homeland.21.a:0 "그렇다면 전쟁이다!"
  usa_homeland.21.b:0 "우리에게는 다른 걱정거리가 있다..."
-
  usa_homeland.22.t:0 "내전의 끝!"
  usa_homeland.22.d:0 "제2차 미국 남북전쟁은 이제 합법적인 정부에 대한 반란의 패배로 마무리되었고, [GetLeader]의 지도력이 전쟁 내내 국가의 다수 지지를 받았으며 현재 연합을 다시 건설해야 하는 어려운 과제에 직면해 있다는 것을 증명했습니다."
  usa_homeland.22.a:0 "만세!"
-
  usa_homeland.23.t:0 "미국 내전의 끝!"
  usa_homeland.23.d:0 "[GetLeader] 대통령은 오늘 백악관 잔당으로부터 반역 세력의 항복과 제2차 미국 내전의 종식을 알리는 대국민 연설을 했습니다. 대통령은 다른 주요 정당들의 지도자들과 함께 했고 그들은 모두 재건설과 잠재적 개헌에 대한 양당간의 노력을 발표했습니다.\n[GetLeader] 대통령은 또한 역사상 처음으로 반역죄로 대법원에 재판을 받게 된 반란 지도자들을 제외하고, 연합에 대항하여 무기를 든 모든 사람들에게 사면을 허용하는 행정명령에 서명했습니다.\n미국의 가장 어두운 시절은 끝난 것으로 보이며, 유럽의 고조되는 긴장감은 20세기 후반과 그 이후까지 미국이 세계에서 주도적인 역할을 할 수 있게 해줄지도 모릅니다."
  usa_homeland.23.a:0 "알았다."
  usa_homeland.23.b:0 "알았다."
-
  USA_civil_war_name_communism:0 "아메리카 코뮌"
  USA_civil_war_name_communism_DEF:0 "아메리카 코뮌"
  USA_civil_war_name_communism_ADJ:0 "아메리카"
@@ -215,7 +183,6 @@
  USA_civil_war_name_fascism:0 "아메리카 연합국"
  USA_civil_war_name_fascism_DEF:0 "아메리카 연합국"
  USA_civil_war_name_fascism_ADJ:0 "연합"
-
  wheeler_president_1:0 "버튼 K. 휠러가 대통령에 당선됨"
  long_president_1:0 "휴이 롱이 대통령에 당선됨"
  landon_president_1:0 "알프 랜던이 대통령에 당선됨"
