--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1,5 +1,5 @@
-﻿l_english: 
- VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! 승점  §Y$POINTS$§!"  
+﻿l_english:
+ VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! 승점  §Y$POINTS$§!"
  VICTORY_POINTS_6521:0 "베를린"
  VICTORY_POINTS_692:0 "뮌헨"
  VICTORY_POINTS_6469:0 "에센&뒤셀도르프"
@@ -22,7 +22,6 @@
  VICTORY_POINTS_9517:0 "슈투트가르트"
  VICTORY_POINTS_11544:0 "뉘른베르크"
  VICTORY_POINTS_11560:0 "마인츠"
- VICTORY_POINTS_708:0 "아우크스부르크"
  VICTORY_POINTS_6287:0 "코펜하겐"
  VICTORY_POINTS_3325:0 "오덴사"
  VICTORY_POINTS_6364:0 "오르후스"
@@ -54,7 +53,6 @@
  VICTORY_POINTS_6751:0 "미슈콜츠"
  VICTORY_POINTS_6700:0 "세게드"
  VICTORY_POINTS_10497:0 "바트만"
- VICTORY_POINTS_11853:0 "에르주름"
  VICTORY_POINTS_11659:0 "데브레첸"
  VICTORY_POINTS_391:0 "암스테르담"
  VICTORY_POINTS_3211:0 "헤이그"
@@ -250,17 +248,14 @@
  VICTORY_POINTS_4076:0 "알렉산드리아"
  VICTORY_POINTS_1071:0 "엘 알라메인"
  VICTORY_POINTS_7011:0 "카이로"
-
  VICTORY_POINTS_4709:0 "우루무치"
  VICTORY_POINTS_4682:0 "아커쑤"
  VICTORY_POINTS_10614:0 "투르판"
  VICTORY_POINTS_2015:0 "캐슈캐르"
- 
  VICTORY_POINTS_1838:0 "쿠물"
  VICTORY_POINTS_1783:0 "커라마이"
  VICTORY_POINTS_4823:0 "알타이"
  VICTORY_POINTS_1708:0 "타청"
-
  VICTORY_POINTS_5033:0 "라싸"
  VICTORY_POINTS_11913:0 "난징"
  VICTORY_POINTS_6999:0 "충칭"
@@ -291,7 +286,6 @@
  VICTORY_POINTS_7109:0 "바오딩"
  VICTORY_POINTS_1188:0 "스먼"
  VICTORY_POINTS_12403:0 "다퉁"
-
  VICTORY_POINTS_12055:0 "쉬저우"
  VICTORY_POINTS_9958:0 "정저우"
  VICTORY_POINTS_10000:0 "칭다오"
@@ -357,7 +351,6 @@
  VICTORY_POINTS_4273:0 "발리"
  VICTORY_POINTS_1355:0 "쿠팡"
  VICTORY_POINTS_12190:0 "딜리"
-
  VICTORY_POINTS_12268:0 "팔렘방"
  VICTORY_POINTS_12371:0 "홀란디아"
  VICTORY_POINTS_7859:0 "캔버라"
@@ -388,6 +381,7 @@
  VICTORY_POINTS_792:0 "베이루트"
  VICTORY_POINTS_4111:0 "다마스쿠스"
  VICTORY_POINTS_12473:0 "알레포"
+ VICTORY_POINTS_12476:0 "하카리"
  VICTORY_POINTS_1086:0 "예루살렘"
  VICTORY_POINTS_7151:0 "암만"
  VICTORY_POINTS_10837:0 "테헤란"
@@ -543,7 +537,6 @@
  VICTORY_POINTS_7980:0 "하라르"
  VICTORY_POINTS_1319:0 "쿤밍"
  VICTORY_POINTS_8049:0 "옌안"
- VICTORY_POINTS_1519:0 "타이위안"
  VICTORY_POINTS_12344:0 "양취안"
  VICTORY_POINTS_4174:0 "타이위안"
  VICTORY_POINTS_10043:0 "지닝"
@@ -582,7 +575,7 @@
  VICTORY_POINTS_6882:0 "뉴어크"
  VICTORY_POINTS_6973:0 "라스페치아"
  VICTORY_POINTS_6984:0 "볼티모어"
- VICTORY_POINTS_7132:0 "오랑
+ VICTORY_POINTS_7132:0 "오랑"
  VICTORY_POINTS_7371:0 "쿠칭"
  VICTORY_POINTS_7617:0 "콜론"
  VICTORY_POINTS_7940:0 "거얼무"
@@ -742,7 +735,6 @@
  VICTORY_POINTS_9544:0 "비아와포들라스카"
  VICTORY_POINTS_402:0 "시에들체"
  VICTORY_POINTS_442:0 "타르누프"
- VICTORY_POINTS_3295:0 "토룬"
  VICTORY_POINTS_279:1 "비드고슈치"
  VICTORY_POINTS_6314:0 "팔랑가"
  VICTORY_POINTS_9262:0 "리예파야"
@@ -788,7 +780,6 @@
  VICTORY_POINTS_9575:0 "자르브뤼켄"
  VICTORY_POINTS_549:0 "아그노"
  VICTORY_POINTS_6529:0 "콜마르"
- VICTORY_POINTS_3530:0 "카를스루에"
  VICTORY_POINTS_11499:0 "울름"
  VICTORY_POINTS_6712:0 "프라이부르크"
  VICTORY_POINTS_11640:0 "뮐하임"
@@ -878,10 +869,9 @@
  VICTORY_POINTS_11724:0 "옐리차"
  VICTORY_POINTS_11696:0 "스타브로폴"
  VICTORY_POINTS_9628:0 "오르조니키제"
- VICTORY_POINTS_9663:0 "소치"
  VICTORY_POINTS_719:0 "노보로시스크"
  VICTORY_POINTS_487:0 "미하일롭카"
- VICTORY_POINTS_12038:0 "알메리아"
+ VICTORY_POINTS_747:0 "알메리아"
  VICTORY_POINTS_1176:0 "그라나다"
  VICTORY_POINTS_6902:0 "바다호스"
  VICTORY_POINTS_3874:0 "살라망카"
@@ -931,7 +921,6 @@
  VICTORY_POINTS_9878:0 "아피온"
  VICTORY_POINTS_3942:0 "데이르에조르"
  VICTORY_POINTS_1056:0 "홈스"
- VICTORY_POINTS_6706:0 "갈라치"
  VICTORY_POINTS_7476:0 "벨루오리존치"
  VICTORY_POINTS_10999:0 "빌라벨랴"
  VICTORY_POINTS_5112:0 "산투스"
@@ -988,4 +977,3 @@
  VICTORY_POINTS_9638:0 "바젤"
  VICTORY_POINTS_11590:0 "로잔"
  VICTORY_POINTS_6706:0 "갈라치"
- 
